Import translations. DO NOT MERGE ANYWHERE
Auto-generated-cl: translation import
Change-Id: I8140f108bb0c0d00ba08b1fccab4b6fc9376d4dc

--- a/res/values-ar/strings.xml
+++ b/res/values-ar/strings.xml
@@ -1993,7 +1993,8 @@
     <string name="module_license_title" msgid="8705484239826702828">"‏تراخيص تحديث نظام Google Play"</string>
     <string name="terms_title" msgid="2071742973672326073">"الأحكام والشروط"</string>
     <string name="webview_license_title" msgid="5832692241345780517">"‏ترخيص WebView للنظام"</string>
-    <string name="wallpaper_attributions" msgid="3080339190260272255">"الخلفيات"</string>
+    <!-- no translation found for wallpaper_attributions (4323659759250650736) -->
+    <skip />
     <string name="wallpaper_attributions_values" msgid="987277439026021925">"‏الشركات الموفرة لصور القمر الصناعي:\n‎©2014 CNES / Astrium وDigitalGlobe وBluesky"</string>
     <string name="settings_manual_activity_title" msgid="1682978148920788484">"الكتيب"</string>
     <string name="settings_manual_activity_unavailable" msgid="2514549851682321576">"حدثت مشكلة أثناء تحميل الكتيب."</string>
@@ -2152,7 +2153,8 @@
     <string name="enable_text" msgid="8570798764647110430">"تفعيل"</string>
     <string name="clear_user_data_text" msgid="6773186434260397947">"محو مساحة التخزين"</string>
     <string name="app_factory_reset" msgid="8974044931667015201">"إلغاء تثبيت التحديثات"</string>
-    <string name="app_restricted_settings_lockscreen_title" msgid="7930576126329843435">"إلغاء الإعدادات المحظورة"</string>
+    <!-- no translation found for app_restricted_settings_lockscreen_title (5993061278264872648) -->
+    <skip />
     <string name="auto_launch_enable_text" msgid="8912714475823807798">"بعض الأنشطة التي اخترتها يتم فتحها في هذا التطبيق تلقائيًا."</string>
     <string name="always_allow_bind_appwidgets_text" msgid="2069415023986858324">"لقد اخترت السماح لهذا التطبيق بإنشاء الأدوات والوصول إلى بياناتها."</string>
     <string name="auto_launch_disable_text" msgid="502648841250936209">"لم يتم ضبط إعدادات تلقائية."</string>
@@ -2420,7 +2422,7 @@
     <string name="accessibility_text_reading_options_suggestion_title" msgid="2492155642665312733">"تغيير كيفية عرض النص"</string>
     <string name="accessibility_text_reading_preview_mail_subject" msgid="4597374768612733616">"الموضوع: تصميمات منطاد الهواء الساخن"</string>
     <string name="accessibility_text_reading_preview_mail_from" msgid="1797499780365288020">"مِن: حازم"</string>
-    <string name="accessibility_text_reading_preview_mail_content" msgid="8078152365771951802">"صباح الخير.\n\nأردت فقط الاطمئنان على سير العمل في التصميمات. هل ستكون التصميمات جاهزة قبل البدء في إنشاء البالونات الجديدة؟"</string>
+    <string name="accessibility_text_reading_preview_mail_content" msgid="8078152365771951802">"صباح الخير.\n\nأردت فقط الاطمئنان على سير العمل في التصميمات. هل ستكون التصميمات جاهزة قبل البدء في إنشاء النوافذ المنبثقة الجديدة؟"</string>
     <string name="accessibility_text_reading_reset_button_title" msgid="5960753279788187669">"إعادة ضبط الإعدادات"</string>
     <string name="accessibility_text_reading_confirm_dialog_title" msgid="2865331351355690389">"هل تريد إعادة ضبط حجم الشاشة والنص؟"</string>
     <string name="accessibility_text_reading_confirm_dialog_message" msgid="517090197003540264">"ستتم إعادة ضبط إعداداتك المفضّلة لحجم الشاشة والنص على الإعدادات الأصلية للهاتف."</string>
@@ -5388,7 +5390,10 @@
     <string name="do_disclosure_with_name" msgid="867544298924410766">"تتم إدارة هذا الجهاز بواسطة <xliff:g id="ORGANIZATION_NAME">%s</xliff:g>."</string>
     <string name="do_disclosure_learn_more_separator" msgid="5714364437437041671">" "</string>
     <string name="learn_more" msgid="3534519107947510952">"مزيد من المعلومات"</string>
-    <string name="blocked_by_restricted_settings_title" msgid="612784193997454496">"الإعدادات المحظورة"</string>
+    <!-- no translation found for blocked_by_restricted_settings_title (7334715011474037399) -->
+    <skip />
+    <!-- no translation found for toast_allows_restricted_settings_successfully (1219116121291466102) -->
+    <skip />
     <string name="blocked_by_restricted_settings_content" msgid="3628660029601161080">"بهدف الحفاظ على أمانك، هذا الإعداد غير متاح الآن."</string>
     <string name="financed_privacy_settings" msgid="2575114436197204145">"معلومات الجهاز الممول"</string>
     <string name="financed_privacy_intro" msgid="5458393846604867947">"يمكن لشركة بيع الأجهزة بالائتمان تغيير الإعدادات وتثبيت البرامج على هذا الجهاز.\n\nإذا لم تدفع إحدى الدفعات، سيتم قفل جهازك.\n\nللتعرّف على المزيد من المعلومات، يُرجى التواصل مع شركة بيع الأجهزة بالائتمان."</string>
@@ -6122,12 +6127,9 @@
     <string name="reboot_dialog_reboot_later" msgid="4261717094186904568">"إعادة التشغيل لاحقًا"</string>
     <!-- no translation found for bluetooth_details_spatial_audio_title (1368071116994002707) -->
     <skip />
-    <!-- no translation found for bluetooth_details_spatial_audio_summary (5026859623681482668) -->
-    <skip />
-    <!-- no translation found for bluetooth_details_head_tracking_title (5416972521040337799) -->
-    <skip />
-    <!-- no translation found for bluetooth_details_head_tracking_summary (3942238746595985395) -->
-    <skip />
+    <string name="bluetooth_details_spatial_audio_summary" msgid="5026859623681482668">"الصوت الصادر من الوسائط المتوافقة أصبح أكثر وضوحًا."</string>
+    <string name="bluetooth_details_head_tracking_title" msgid="5416972521040337799">"تتبُّع حركة الرأس"</string>
+    <string name="bluetooth_details_head_tracking_summary" msgid="3942238746595985395">"يتغيّر الصوت بينما تُحرك رأسك ليبدو طبيعيًا جدًا."</string>
     <string name="ingress_rate_limit_title" msgid="2106694002836274350">"الحد الأقصى لمعدّل تنزيل الشبكة"</string>
     <string name="ingress_rate_limit_summary" msgid="1097811019742438371">"يمكنك ضبط الحد الأقصى لحركة البيانات الواردة في معدّل نقل البيانات للشبكة والذي يتم تطبيقه على جميع الشبكات التي توفّر اتصالاً بالإنترنت."</string>
     <string name="ingress_rate_limit_dialog_title" msgid="5359461052422633789">"ضبط الحد الأقصى لمعدّل تنزيل الشبكة"</string>
