--- a/res/values-be/strings.xml
+++ b/res/values-be/strings.xml
@@ -1951,7 +1951,8 @@
     <string name="module_license_title" msgid="8705484239826702828">"Ліцэнзіі абнаўлення сістэмы Google Play"</string>
     <string name="terms_title" msgid="2071742973672326073">"Умовы выкарыстання"</string>
     <string name="webview_license_title" msgid="5832692241345780517">"Сістэмная ліцэнзія WebView"</string>
-    <string name="wallpaper_attributions" msgid="3080339190260272255">"Шпалеры"</string>
+    <!-- no translation found for wallpaper_attributions (4323659759250650736) -->
+    <skip />
     <string name="wallpaper_attributions_values" msgid="987277439026021925">"Спадарожнікавыя фота:\n©2014 CNES / Astrium, DigitalGlobe, Bluesky"</string>
     <string name="settings_manual_activity_title" msgid="1682978148920788484">"Кіраўніцтва"</string>
     <string name="settings_manual_activity_unavailable" msgid="2514549851682321576">"Не атрымлiваецца загрузіць кіраўніцтва."</string>
@@ -2106,7 +2107,8 @@
     <string name="enable_text" msgid="8570798764647110430">"Уключанае"</string>
     <string name="clear_user_data_text" msgid="6773186434260397947">"Ачысціць сховішча"</string>
     <string name="app_factory_reset" msgid="8974044931667015201">"Выдаліць абнаўленні"</string>
-    <string name="app_restricted_settings_lockscreen_title" msgid="7930576126329843435">"Разблакіраваць абмежаваныя налады"</string>
+    <!-- no translation found for app_restricted_settings_lockscreen_title (5993061278264872648) -->
+    <skip />
     <string name="auto_launch_enable_text" msgid="8912714475823807798">"Некаторыя выбраныя вамі дзеянні стандартна адкрываюцца ў гэтай праграме."</string>
     <string name="always_allow_bind_appwidgets_text" msgid="2069415023986858324">"Вы дазволілі гэтаму дадатку ствараць віджэты і атрымліваць доступ да іх даных."</string>
     <string name="auto_launch_disable_text" msgid="502648841250936209">"Стандартныя налады не зададзены"</string>
@@ -2374,7 +2376,7 @@
     <string name="accessibility_text_reading_options_suggestion_title" msgid="2492155642665312733">"Змяніць налады паказу тэксту"</string>
     <string name="accessibility_text_reading_preview_mail_subject" msgid="4597374768612733616">"Тэма: Дызайн паветраных шароў"</string>
     <string name="accessibility_text_reading_preview_mail_from" msgid="1797499780365288020">"Ад каго: Біл"</string>
-    <string name="accessibility_text_reading_preview_mail_content" msgid="8078152365771951802">"Добрай раніцы!\n\nМне хацелася б ведаць, як ідуць справы з праектамі. Ці будуць яны гатовыя да таго, як мы пачнем выпуск новых паветраных шароў?"</string>
+    <string name="accessibility_text_reading_preview_mail_content" msgid="8078152365771951802">"Добрай раніцы!\n\nМне хацелася б ведаць, як ідуць справы з праектамі. Ці будуць яны гатовыя да таго, як мы пачнём выпуск новых паветраных шароў?"</string>
     <string name="accessibility_text_reading_reset_button_title" msgid="5960753279788187669">"Скінуць налады"</string>
     <string name="accessibility_text_reading_confirm_dialog_title" msgid="2865331351355690389">"Скінуць памер дысплэя і налады тэксту?"</string>
     <string name="accessibility_text_reading_confirm_dialog_message" msgid="517090197003540264">"Памер вашага дысплэя і параметры тэксту будуць скінуты да першапачатковых налад тэлефона"</string>
@@ -5226,7 +5228,10 @@
     <string name="do_disclosure_with_name" msgid="867544298924410766">"Гэта прылада знаходзіцца пад кіраваннем <xliff:g id="ORGANIZATION_NAME">%s</xliff:g>."</string>
     <string name="do_disclosure_learn_more_separator" msgid="5714364437437041671">" "</string>
     <string name="learn_more" msgid="3534519107947510952">"Даведацца больш"</string>
-    <string name="blocked_by_restricted_settings_title" msgid="612784193997454496">"Абмежаваныя налады"</string>
+    <!-- no translation found for blocked_by_restricted_settings_title (7334715011474037399) -->
+    <skip />
+    <!-- no translation found for toast_allows_restricted_settings_successfully (1219116121291466102) -->
+    <skip />
     <string name="blocked_by_restricted_settings_content" msgid="3628660029601161080">"У мэтах бяспекі гэта налада цяпер недаступная."</string>
     <string name="financed_privacy_settings" msgid="2575114436197204145">"Інфармацыя пра прафінансаваную прыладу"</string>
     <string name="financed_privacy_intro" msgid="5458393846604867947">"Кампанія-крэдытор можа змяніць налады гэтай прылады і ўсталяваць на яе пэўнае ПЗ.\n\nКалі вы прапусціце плацеж, ваша прылада будзе заблакіравана.\n\nКаб даведацца больш, звярніцеся да кампаніі-крэдытора."</string>
@@ -5946,12 +5951,9 @@
     <string name="reboot_dialog_reboot_later" msgid="4261717094186904568">"Перазагрузіць пазней"</string>
     <!-- no translation found for bluetooth_details_spatial_audio_title (1368071116994002707) -->
     <skip />
-    <!-- no translation found for bluetooth_details_spatial_audio_summary (5026859623681482668) -->
-    <skip />
-    <!-- no translation found for bluetooth_details_head_tracking_title (5416972521040337799) -->
-    <skip />
-    <!-- no translation found for bluetooth_details_head_tracking_summary (3942238746595985395) -->
-    <skip />
+    <string name="bluetooth_details_spatial_audio_summary" msgid="5026859623681482668">"Гук з сумяшчальных мультымедыйных прылад стварае больш глыбокі эфект прысутнасці"</string>
+    <string name="bluetooth_details_head_tracking_title" msgid="5416972521040337799">"Адсочванне рухаў галавы"</string>
+    <string name="bluetooth_details_head_tracking_summary" msgid="3942238746595985395">"Калі вы рухаеце галавой, гук змяняецца. Дзякуючы гэтаму вы чуеце больш натуральнае гучанне"</string>
     <string name="ingress_rate_limit_title" msgid="2106694002836274350">"Абмежаванне хуткасці спампоўвання праз сетку"</string>
     <string name="ingress_rate_limit_summary" msgid="1097811019742438371">"Наладзьце абмежаванне ўваходнай паласы прапускання для ўсіх сетак, якія забяспечваюць падключэнне да інтэрнэту."</string>
     <string name="ingress_rate_limit_dialog_title" msgid="5359461052422633789">"Наладзьце абмежаванне хуткасці спампоўвання праз сетку"</string>
