--- a/res/values-bn/strings.xml
+++ b/res/values-bn/strings.xml
@@ -1905,7 +1905,8 @@
     <string name="module_license_title" msgid="8705484239826702828">"Google Play সিস্টেম আপডেট লাইসেন্স"</string>
     <string name="terms_title" msgid="2071742973672326073">"চুক্তি এবং শর্তাবলী"</string>
     <string name="webview_license_title" msgid="5832692241345780517">"সিস্টেম ওয়েবভিউ লাইসেন্স"</string>
-    <string name="wallpaper_attributions" msgid="3080339190260272255">"ওয়ালপেপার"</string>
+    <!-- no translation found for wallpaper_attributions (4323659759250650736) -->
+    <skip />
     <string name="wallpaper_attributions_values" msgid="987277439026021925">"উপগ্রহ ছবি প্রদানকারী:\n©2014 CNES / Astrium, DigitalGlobe, Bluesky"</string>
     <string name="settings_manual_activity_title" msgid="1682978148920788484">"ম্যানুয়াল"</string>
     <string name="settings_manual_activity_unavailable" msgid="2514549851682321576">"ম্যানুয়াল লোড হওয়ার সময়ে একটি সমস্যা হয়েছে।"</string>
@@ -2056,7 +2057,8 @@
     <string name="enable_text" msgid="8570798764647110430">"সক্ষম করুন"</string>
     <string name="clear_user_data_text" msgid="6773186434260397947">"স্টোরেজ সাফ করুন"</string>
     <string name="app_factory_reset" msgid="8974044931667015201">"আপডেটগুলি আনইনস্টল করুন"</string>
-    <string name="app_restricted_settings_lockscreen_title" msgid="7930576126329843435">"বিধিনিষেধ সেটিংস আনলক করুন"</string>
+    <!-- no translation found for app_restricted_settings_lockscreen_title (5993061278264872648) -->
+    <skip />
     <string name="auto_launch_enable_text" msgid="8912714475823807798">"আপনার বেছে নেওয়া কিছু অ্যাক্টিভিটি এই অ্যাপে ডিফল্ট হিসেবে খুলবে।"</string>
     <string name="always_allow_bind_appwidgets_text" msgid="2069415023986858324">"আপনি এই অ্যাপ্লিকেশানটিকে উইজেটগুলিকে তৈরি করা এবং তাদের ডেটা অ্যাক্সেস করার মঞ্জুরি দেওয়া চয়ন করেছেন৷"</string>
     <string name="auto_launch_disable_text" msgid="502648841250936209">"কোনো ডিফল্ট সেট করা নেই৷"</string>
@@ -5060,7 +5062,10 @@
     <string name="do_disclosure_with_name" msgid="867544298924410766">"এই ডিভাইসটি <xliff:g id="ORGANIZATION_NAME">%s</xliff:g> দ্বারা পরিচালিত।"</string>
     <string name="do_disclosure_learn_more_separator" msgid="5714364437437041671">" "</string>
     <string name="learn_more" msgid="3534519107947510952">"আরও জানুন"</string>
-    <string name="blocked_by_restricted_settings_title" msgid="612784193997454496">"বিধিনিষেধ সেটিংস"</string>
+    <!-- no translation found for blocked_by_restricted_settings_title (7334715011474037399) -->
+    <skip />
+    <!-- no translation found for toast_allows_restricted_settings_successfully (1219116121291466102) -->
+    <skip />
     <string name="blocked_by_restricted_settings_content" msgid="3628660029601161080">"আপনার নিরাপত্তার জন্য, এই সেটিং বর্তমানে উপলভ্য নয়।"</string>
     <string name="financed_privacy_settings" msgid="2575114436197204145">"ফিনান্সড ডিভাইস তথ্য"</string>
     <string name="financed_privacy_intro" msgid="5458393846604867947">"আপনার ক্রেডিট প্রদানকারী এই ডিভাইসে সেটিংস পরিবর্তন এবং সফ্টওয়্যার ইনস্টল করতে পারবেন।\n\nআপনি কোনও পেমেন্ট সময়মতো না করলে, ডিভাইস লক হয়ে যাবে।\n\nআরও জানতে, ক্রেডিট প্রদানকারীর সাথে যোগাযোগ করুন।"</string>
@@ -5766,12 +5771,9 @@
     <string name="reboot_dialog_reboot_later" msgid="4261717094186904568">"পরে রিবুট করুন"</string>
     <!-- no translation found for bluetooth_details_spatial_audio_title (1368071116994002707) -->
     <skip />
-    <!-- no translation found for bluetooth_details_spatial_audio_summary (5026859623681482668) -->
-    <skip />
-    <!-- no translation found for bluetooth_details_head_tracking_title (5416972521040337799) -->
-    <skip />
-    <!-- no translation found for bluetooth_details_head_tracking_summary (3942238746595985395) -->
-    <skip />
+    <string name="bluetooth_details_spatial_audio_summary" msgid="5026859623681482668">"মানানসই মিডিয়ার অডিও আরও বেশি শ্রবণযোগ্য"</string>
+    <string name="bluetooth_details_head_tracking_title" msgid="5416972521040337799">"হেড ট্র্যাকিং"</string>
+    <string name="bluetooth_details_head_tracking_summary" msgid="3942238746595985395">"মাথা নাড়াচাড়া করার সাথে সাথে অডিও পরিবর্তন হয় যাতে আরও স্বাভাবিক শব্দ হয়"</string>
     <string name="ingress_rate_limit_title" msgid="2106694002836274350">"নেটওয়ার্কের জন্য নির্দিষ্ট করা ডাউনলোড করার হার"</string>
     <string name="ingress_rate_limit_summary" msgid="1097811019742438371">"নেটওয়ার্ক ব্যান্ডউইথ ইনগ্রেস নির্দিষ্ট করা ডেটা ট্রাফিকের হারকে কনফিগার করুন। এটি ইন্টারনেট কানেকশন দেয় এমন সব নেটওয়ার্কের ক্ষেত্রে প্রযোজ্য।"</string>
     <string name="ingress_rate_limit_dialog_title" msgid="5359461052422633789">"নেটওয়ার্কের জন্য নির্দিষ্ট করা ডাউনলোড করার হার কনফিগার করুন"</string>
