--- a/res/values-in/strings.xml
+++ b/res/values-in/strings.xml
@@ -1905,7 +1905,8 @@
     <string name="module_license_title" msgid="8705484239826702828">"Lisensi update sistem Google Play"</string>
     <string name="terms_title" msgid="2071742973672326073">"Persyaratan dan ketentuan"</string>
     <string name="webview_license_title" msgid="5832692241345780517">"Lisensi WebView Sistem"</string>
-    <string name="wallpaper_attributions" msgid="3080339190260272255">"Wallpaper"</string>
+    <!-- no translation found for wallpaper_attributions (4323659759250650736) -->
+    <skip />
     <string name="wallpaper_attributions_values" msgid="987277439026021925">"Penyedia citra satelit:\n©2014 CNES / Astrium, DigitalGlobe, Bluesky"</string>
     <string name="settings_manual_activity_title" msgid="1682978148920788484">"Manual"</string>
     <string name="settings_manual_activity_unavailable" msgid="2514549851682321576">"Ada masalah saat memuat manual."</string>
@@ -2056,7 +2057,8 @@
     <string name="enable_text" msgid="8570798764647110430">"Aktifkan"</string>
     <string name="clear_user_data_text" msgid="6773186434260397947">"Hapus penyimpanan"</string>
     <string name="app_factory_reset" msgid="8974044931667015201">"Uninstal pembaruan"</string>
-    <string name="app_restricted_settings_lockscreen_title" msgid="7930576126329843435">"Buka kunci setelan terbatas"</string>
+    <!-- no translation found for app_restricted_settings_lockscreen_title (5993061278264872648) -->
+    <skip />
     <string name="auto_launch_enable_text" msgid="8912714475823807798">"Beberapa aktivitas yang Anda pilih terbuka di aplikasi ini secara default."</string>
     <string name="always_allow_bind_appwidgets_text" msgid="2069415023986858324">"Anda telah memilih untuk mengizinkan aplikasi ini untuk membuat widget dan mengakses data mereka."</string>
     <string name="auto_launch_disable_text" msgid="502648841250936209">"Tidak ada setelan default."</string>
@@ -5060,7 +5062,10 @@
     <string name="do_disclosure_with_name" msgid="867544298924410766">"Perangkat ini dikelola oleh <xliff:g id="ORGANIZATION_NAME">%s</xliff:g> ."</string>
     <string name="do_disclosure_learn_more_separator" msgid="5714364437437041671">" "</string>
     <string name="learn_more" msgid="3534519107947510952">"Pelajari lebih lanjut"</string>
-    <string name="blocked_by_restricted_settings_title" msgid="612784193997454496">"Setelan Terbatas"</string>
+    <!-- no translation found for blocked_by_restricted_settings_title (7334715011474037399) -->
+    <skip />
+    <!-- no translation found for toast_allows_restricted_settings_successfully (1219116121291466102) -->
+    <skip />
     <string name="blocked_by_restricted_settings_content" msgid="3628660029601161080">"Demi keamanan Anda, setelan ini tidak tersedia untuk saat ini."</string>
     <string name="financed_privacy_settings" msgid="2575114436197204145">"Info perangkat yang dibiayai"</string>
     <string name="financed_privacy_intro" msgid="5458393846604867947">"Penyedia kredit Anda dapat mengubah setelan dan menginstal software di perangkat ini.\n\nJika Anda terlambat membayar, perangkat akan dikunci.\n\nUntuk mempelajari lebih lanjut, hubungi penyedia kredit Anda."</string>
@@ -5766,12 +5771,9 @@
     <string name="reboot_dialog_reboot_later" msgid="4261717094186904568">"Mulai ulang nanti"</string>
     <!-- no translation found for bluetooth_details_spatial_audio_title (1368071116994002707) -->
     <skip />
-    <!-- no translation found for bluetooth_details_spatial_audio_summary (5026859623681482668) -->
-    <skip />
-    <!-- no translation found for bluetooth_details_head_tracking_title (5416972521040337799) -->
-    <skip />
-    <!-- no translation found for bluetooth_details_head_tracking_summary (3942238746595985395) -->
-    <skip />
+    <string name="bluetooth_details_spatial_audio_summary" msgid="5026859623681482668">"Audio dari perangkat media yang kompatibel menjadi lebih imersif"</string>
+    <string name="bluetooth_details_head_tracking_title" msgid="5416972521040337799">"Pelacakan gerak kepala"</string>
+    <string name="bluetooth_details_head_tracking_summary" msgid="3942238746595985395">"Audio akan berubah saat Anda menggerakkan kepala agar terdengar lebih alami"</string>
     <string name="ingress_rate_limit_title" msgid="2106694002836274350">"Batas kecepatan download jaringan"</string>
     <string name="ingress_rate_limit_summary" msgid="1097811019742438371">"Mengonfigurasi batas kecepatan masuk bandwidth jaringan yang diterapkan ke semua jaringan yang menyediakan koneksi internet."</string>
     <string name="ingress_rate_limit_dialog_title" msgid="5359461052422633789">"Konfigurasi batas kecepatan download jaringan"</string>
