--- a/res/values-ka/strings.xml
+++ b/res/values-ka/strings.xml
@@ -1905,7 +1905,8 @@
     <string name="module_license_title" msgid="8705484239826702828">"Google Play სისტემის განახლების ლიცენზიები"</string>
     <string name="terms_title" msgid="2071742973672326073">"წესები და პირობები"</string>
     <string name="webview_license_title" msgid="5832692241345780517">"სისტემის ვებ მიმოხილვის ლიცენზია"</string>
-    <string name="wallpaper_attributions" msgid="3080339190260272255">"ფონები"</string>
+    <!-- no translation found for wallpaper_attributions (4323659759250650736) -->
+    <skip />
     <string name="wallpaper_attributions_values" msgid="987277439026021925">"სატელიტური სურათების პროვაიდერები:\n©2014 CNES / Astrium, DigitalGlobe, Bluesky"</string>
     <string name="settings_manual_activity_title" msgid="1682978148920788484">"სახელმძღვანელო"</string>
     <string name="settings_manual_activity_unavailable" msgid="2514549851682321576">"სახელმძღვანელოს ჩატვირთვისას წარმოიქმნა პრობლემა."</string>
@@ -2056,7 +2057,8 @@
     <string name="enable_text" msgid="8570798764647110430">"ჩართვა"</string>
     <string name="clear_user_data_text" msgid="6773186434260397947">"მონაცემთა საცავის გასუფთავება"</string>
     <string name="app_factory_reset" msgid="8974044931667015201">"განახლებების ამოშლა"</string>
-    <string name="app_restricted_settings_lockscreen_title" msgid="7930576126329843435">"შეზღუდული რეჟიმის პარამეტრების განბლოკვა"</string>
+    <!-- no translation found for app_restricted_settings_lockscreen_title (5993061278264872648) -->
+    <skip />
     <string name="auto_launch_enable_text" msgid="8912714475823807798">"თქვენ მიერ არჩეულ აქტივობათაგან ზოგიერთი ნაგულისხმევად ამ აპში იხსნება."</string>
     <string name="always_allow_bind_appwidgets_text" msgid="2069415023986858324">"თქვენ მიეცით ამ აპს ვიჯეტების შექმნისა და მონაცემებზე წვდომის უფლება."</string>
     <string name="auto_launch_disable_text" msgid="502648841250936209">"არ არის დაყენებული ნაგულისხმევი პარამეტრები."</string>
@@ -5060,7 +5062,10 @@
     <string name="do_disclosure_with_name" msgid="867544298924410766">"ამ მოწყობილობას მართავს <xliff:g id="ORGANIZATION_NAME">%s</xliff:g>."</string>
     <string name="do_disclosure_learn_more_separator" msgid="5714364437437041671">" "</string>
     <string name="learn_more" msgid="3534519107947510952">"შეიტყვეთ მეტი"</string>
-    <string name="blocked_by_restricted_settings_title" msgid="612784193997454496">"შეზღუდული რეჟიმის პარამეტრები"</string>
+    <!-- no translation found for blocked_by_restricted_settings_title (7334715011474037399) -->
+    <skip />
+    <!-- no translation found for toast_allows_restricted_settings_successfully (1219116121291466102) -->
+    <skip />
     <string name="blocked_by_restricted_settings_content" msgid="3628660029601161080">"თქვენივე უსაფრთხოებისთვის ეს პარამეტრი ამჟამად მიუწვდომელია."</string>
     <string name="financed_privacy_settings" msgid="2575114436197204145">"დაფინანსებული მოწყობილობის ინფორმაცია"</string>
     <string name="financed_privacy_intro" msgid="5458393846604867947">"თქვენს კრედიტის პროვაიდერს შეუძლია ამ მოწყობილობაზე პარამეტრების შეცვლა და პროგრამული უზრუნველყოფის ინსტალაცია.\n\nთუ რომელიმე გადახდას გამოტოვებთ, თქვენი მოწყობილობა ჩაიკეტება.\n\nმეტის შესატყობად, დაუკავშირდით თქვენს კრედიტის პროვაიდერს."</string>
