--- a/res/values-ko/strings.xml
+++ b/res/values-ko/strings.xml
@@ -1907,7 +1907,8 @@
     <string name="module_license_title" msgid="8705484239826702828">"Google Play 시스템 업데이트 라이선스"</string>
     <string name="terms_title" msgid="2071742973672326073">"약관"</string>
     <string name="webview_license_title" msgid="5832692241345780517">"시스템 WebView 라이선스"</string>
-    <string name="wallpaper_attributions" msgid="3080339190260272255">"배경화면"</string>
+    <!-- no translation found for wallpaper_attributions (4323659759250650736) -->
+    <skip />
     <string name="wallpaper_attributions_values" msgid="987277439026021925">"위성 이미지 제공업체:\n©2014 CNES / Astrium, DigitalGlobe, Bluesky"</string>
     <string name="settings_manual_activity_title" msgid="1682978148920788484">"수동"</string>
     <string name="settings_manual_activity_unavailable" msgid="2514549851682321576">"설명서를 로드하는 중에 문제가 발생했습니다."</string>
@@ -2058,7 +2059,8 @@
     <string name="enable_text" msgid="8570798764647110430">"사용"</string>
     <string name="clear_user_data_text" msgid="6773186434260397947">"저장용량 비우기"</string>
     <string name="app_factory_reset" msgid="8974044931667015201">"업데이트 제거"</string>
-    <string name="app_restricted_settings_lockscreen_title" msgid="7930576126329843435">"제한된 설정 잠금 해제"</string>
+    <!-- no translation found for app_restricted_settings_lockscreen_title (5993061278264872648) -->
+    <skip />
     <string name="auto_launch_enable_text" msgid="8912714475823807798">"선택한 일부 활동이 기본적으로 이 앱에서 열립니다."</string>
     <string name="always_allow_bind_appwidgets_text" msgid="2069415023986858324">"이 앱이 위젯을 만들고 자체 데이터에 액세스할 수 있도록 선택했습니다."</string>
     <string name="auto_launch_disable_text" msgid="502648841250936209">"기본값이 설정되지 않음"</string>
@@ -3415,7 +3417,7 @@
     <string name="user_copy_apps_menu_title" msgid="5354300105759670300">"사용 가능한 앱 설치"</string>
     <string name="nfc_payment_settings_title" msgid="2043139180030485500">"미접촉 결제"</string>
     <string name="nfc_default_payment_settings_title" msgid="2150504446774382261">"기본 결제 앱"</string>
-    <string name="nfc_default_payment_footer" msgid="978535088340021360">"결제 앱으로 결제하려면 기기 뒷면을 결제 단말기에 갖다 댑니다."</string>
+    <string name="nfc_default_payment_footer" msgid="978535088340021360">"결제 앱으로 결제하려면 기기 뒷면을 결제 단말기에 갖다 대세요."</string>
     <string name="nfc_more_details" msgid="1700713533074275233">"자세히 알아보기"</string>
     <string name="nfc_default_payment_workapp_confirmation_title" msgid="746921251872504687">"직장 앱을 기본 결제 앱으로 설정할까요?"</string>
     <string name="nfc_default_payment_workapp_confirmation_message_title" msgid="1533022606333010329">"직장 앱으로 결제하려면 다음을 따르세요"</string>
@@ -5062,7 +5064,10 @@
     <string name="do_disclosure_with_name" msgid="867544298924410766">"<xliff:g id="ORGANIZATION_NAME">%s</xliff:g>에서 관리하는 기기입니다."</string>
     <string name="do_disclosure_learn_more_separator" msgid="5714364437437041671">" "</string>
     <string name="learn_more" msgid="3534519107947510952">"자세히 알아보기"</string>
-    <string name="blocked_by_restricted_settings_title" msgid="612784193997454496">"제한된 설정"</string>
+    <!-- no translation found for blocked_by_restricted_settings_title (7334715011474037399) -->
+    <skip />
+    <!-- no translation found for toast_allows_restricted_settings_successfully (1219116121291466102) -->
+    <skip />
     <string name="blocked_by_restricted_settings_content" msgid="3628660029601161080">"보안을 위해 이 설정은 현재 사용할 수 없습니다."</string>
     <string name="financed_privacy_settings" msgid="2575114436197204145">"할부 기기 정보"</string>
     <string name="financed_privacy_intro" msgid="5458393846604867947">"신용 상품 제공업체가 이 기기에서 설정을 변경하고 소프트웨어를 설치할 수 있습니다.\n\n결제를 놓치면 기기가 잠깁니다.\n\n자세히 알아보려면 신용 상품 제공업체에 문의하세요."</string>
@@ -5768,12 +5773,9 @@
     <string name="reboot_dialog_reboot_later" msgid="4261717094186904568">"나중에 재부팅"</string>
     <!-- no translation found for bluetooth_details_spatial_audio_title (1368071116994002707) -->
     <skip />
-    <!-- no translation found for bluetooth_details_spatial_audio_summary (5026859623681482668) -->
-    <skip />
-    <!-- no translation found for bluetooth_details_head_tracking_title (5416972521040337799) -->
-    <skip />
-    <!-- no translation found for bluetooth_details_head_tracking_summary (3942238746595985395) -->
-    <skip />
+    <string name="bluetooth_details_spatial_audio_summary" msgid="5026859623681482668">"호환되는 미디어에서 더 몰입감 넘치는 오디오를 경험할 수 있습니다."</string>
+    <string name="bluetooth_details_head_tracking_title" msgid="5416972521040337799">"머리 추적"</string>
+    <string name="bluetooth_details_head_tracking_summary" msgid="3942238746595985395">"머리를 움직이면 오디오가 변경되어 더 자연스러운 소리를 들을 수 있습니다."</string>
     <string name="ingress_rate_limit_title" msgid="2106694002836274350">"네트워크 다운로드 속도 제한"</string>
     <string name="ingress_rate_limit_summary" msgid="1097811019742438371">"인터넷 연결을 제공하는 모든 네트워크에 적용할 네트워크 대역폭 인그레스 속도 제한을 설정합니다."</string>
     <string name="ingress_rate_limit_dialog_title" msgid="5359461052422633789">"네트워크 다운로드 속도 제한 설정"</string>
