--- a/res/values-mk/strings.xml
+++ b/res/values-mk/strings.xml
@@ -1907,7 +1907,8 @@
     <string name="module_license_title" msgid="8705484239826702828">"Лиценци за системско ажурирање од Google Play"</string>
     <string name="terms_title" msgid="2071742973672326073">"Одредби и услови"</string>
     <string name="webview_license_title" msgid="5832692241345780517">"Системска лиценца за WebView"</string>
-    <string name="wallpaper_attributions" msgid="3080339190260272255">"Тапети"</string>
+    <!-- no translation found for wallpaper_attributions (4323659759250650736) -->
+    <skip />
     <string name="wallpaper_attributions_values" msgid="987277439026021925">"Извор на сателитски снимки:\n©2014 CNES/Astrium, DigitalGlobe, Bluesky"</string>
     <string name="settings_manual_activity_title" msgid="1682978148920788484">"Упатство"</string>
     <string name="settings_manual_activity_unavailable" msgid="2514549851682321576">"Постои проблем со вчитување на упатството."</string>
@@ -2058,7 +2059,8 @@
     <string name="enable_text" msgid="8570798764647110430">"Овозможи"</string>
     <string name="clear_user_data_text" msgid="6773186434260397947">"Избриши ги податоците"</string>
     <string name="app_factory_reset" msgid="8974044931667015201">"Деинсталирај ажурирања"</string>
-    <string name="app_restricted_settings_lockscreen_title" msgid="7930576126329843435">"Отклучете ги ограничените поставки"</string>
+    <!-- no translation found for app_restricted_settings_lockscreen_title (5993061278264872648) -->
+    <skip />
     <string name="auto_launch_enable_text" msgid="8912714475823807798">"Некои од активностите што ги избравте стандардно се отвораат во апликацијава."</string>
     <string name="always_allow_bind_appwidgets_text" msgid="2069415023986858324">"Сте одбрале да ѝ дозволите за апликацијата да создава виџети и да пристапува кон нивните податоци."</string>
     <string name="auto_launch_disable_text" msgid="502648841250936209">"Нема поставени стандардни вредности."</string>
@@ -3374,8 +3376,7 @@
     <string name="user_summary_managed_profile_not_set_up" msgid="5739207307082458746">"Не е поставен – Работен профил"</string>
     <string name="user_admin" msgid="4024553191395768119">"Администратор"</string>
     <string name="user_you" msgid="3070562015202859996">"Вие (<xliff:g id="NAME">%s</xliff:g>)"</string>
-    <!-- no translation found for user_add_max_count (3328539978480663740) -->
-    <skip />
+    <string name="user_add_max_count" msgid="3328539978480663740">"Не може да додадете уште корисници. Отстранете корисник за да додадете нов."</string>
     <string name="user_cannot_manage_message" product="tablet" msgid="3405022988077682357">"Само сопственикот на таблетот може да управува со корисниците."</string>
     <string name="user_cannot_manage_message" product="default" msgid="6434662649769855494">"Само сопственикот на телефонот може да управува со корисниците."</string>
     <string name="user_cannot_add_accounts_message" msgid="2351326078338805337">"Ограничените профили не можат да додаваат сметки"</string>
@@ -4401,12 +4402,9 @@
       <item quantity="one"><xliff:g id="COUNT_1">%d</xliff:g> некористена апликација</item>
       <item quantity="other"><xliff:g id="COUNT_1">%d</xliff:g> некористени апликации</item>
     </plurals>
-    <!-- no translation found for unused_apps_category (8954930958175500851) -->
-    <skip />
-    <!-- no translation found for unused_apps_switch (2979882622987847195) -->
-    <skip />
-    <!-- no translation found for unused_apps_switch_summary (6971069728614582344) -->
-    <skip />
+    <string name="unused_apps_category" msgid="8954930958175500851">"Поставки за некористена апликација"</string>
+    <string name="unused_apps_switch" msgid="2979882622987847195">"Паузирај ја активноста на апликацијата"</string>
+    <string name="unused_apps_switch_summary" msgid="6971069728614582344">"Отстранува дозволи, брише привремени датотеки и запира известувања ако не се користат"</string>
     <string name="filter_all_apps" msgid="6645539744080251371">"Сите апликации"</string>
     <string name="filter_enabled_apps" msgid="8868356616126759124">"Инсталирани апликации"</string>
     <string name="filter_instant_apps" msgid="2292108467020380068">"Инстант апликации"</string>
@@ -5062,7 +5060,10 @@
     <string name="do_disclosure_with_name" msgid="867544298924410766">"<xliff:g id="ORGANIZATION_NAME">%s</xliff:g> управува со уредов."</string>
     <string name="do_disclosure_learn_more_separator" msgid="5714364437437041671">" "</string>
     <string name="learn_more" msgid="3534519107947510952">"Дознајте повеќе"</string>
-    <string name="blocked_by_restricted_settings_title" msgid="612784193997454496">"Ограничени поставки"</string>
+    <!-- no translation found for blocked_by_restricted_settings_title (7334715011474037399) -->
+    <skip />
+    <!-- no translation found for toast_allows_restricted_settings_successfully (1219116121291466102) -->
+    <skip />
     <string name="blocked_by_restricted_settings_content" msgid="3628660029601161080">"Заради ваша безбедност, поставкава не е достапна во моментов."</string>
     <string name="financed_privacy_settings" msgid="2575114436197204145">"Податоци за уред на рати"</string>
     <string name="financed_privacy_intro" msgid="5458393846604867947">"Вашиот продавач на рати може да ги менува поставките и да инсталира софтвер на уредов.\n\nАко пропуштите плаќање, уредот ќе ви биде заклучен.\n\nЗа да дознаете повеќе, контактирајте со продавачот на рати."</string>
@@ -5562,10 +5563,8 @@
     <string name="accessor_never_expires_text" msgid="4647624492147788340">"Закупот никогаш не истекува."</string>
     <string name="overlay_settings_title" msgid="1032863083496396365">"Дозволи преклопување на екраните на Поставки"</string>
     <string name="overlay_settings_summary" msgid="2745336273786148166">"Дозволи апликации што може да прикажуваат врз други апликации да ги преклопуваат екраните на Поставки"</string>
-    <!-- no translation found for allow_mock_modem (3832264806530479214) -->
-    <skip />
-    <!-- no translation found for allow_mock_modem_summary (9097416612748005374) -->
-    <skip />
+    <string name="allow_mock_modem" msgid="3832264806530479214">"Дозволете лажен модем"</string>
+    <string name="allow_mock_modem_summary" msgid="9097416612748005374">"Дозволете уредов да ја извршува услугата за лажен модем за тестирање инструменти. Не овозможувајте го ова при нормално користење на телефонот"</string>
     <string name="media_controls_title" msgid="403271085636252597">"Аудиовизуелни содржини"</string>
     <string name="media_controls_resume_title" msgid="855076860336652370">"Закачете го плеерот"</string>
     <string name="media_controls_resume_description" msgid="3163482266454802097">"За брзо продолжување на репродукцијата, плеерот останува отворен во „Брзи поставки“"</string>
@@ -5651,8 +5650,7 @@
     <string name="app_pinning_main_switch_title" msgid="5465506660064032876">"Користи „Закачување апликации“"</string>
     <string name="developer_options_main_switch_title" msgid="1720074589554152501">"Користи „Програмерски опции“"</string>
     <string name="default_print_service_main_switch_title" msgid="4697133737128324036">"Користете ја услугата за печатење"</string>
-    <!-- no translation found for multiple_users_main_switch_title (6686858308083037810) -->
-    <skip />
+    <string name="multiple_users_main_switch_title" msgid="6686858308083037810">"Дозволи повеќе корисници"</string>
     <string name="wireless_debugging_main_switch_title" msgid="8463499572781441719">"Користи „Безжично отстранување грешки“"</string>
     <string name="graphics_driver_main_switch_title" msgid="6125172901855813790">"Користи „Поставки за драјверот за графика“"</string>
     <string name="battery_saver_main_switch_title" msgid="5072135547489779352">"Користи „Штедач на батерија“"</string>
@@ -5718,12 +5716,9 @@
     <string name="tare_modifiers" msgid="8919975635360280820">"Модификатори"</string>
     <string name="tare_actions_ctp" msgid="5110104015354916401">"Дејства (цена за производство)"</string>
     <string name="tare_actions_base_price" msgid="3300967942666376589">"Дејства (основна цена)"</string>
-    <!-- no translation found for tare_rewards_instantaneous (8358683519945340874) -->
-    <skip />
-    <!-- no translation found for tare_rewards_ongoing (8641416948811152109) -->
-    <skip />
-    <!-- no translation found for tare_rewards_max (5283055625642837010) -->
-    <skip />
+    <string name="tare_rewards_instantaneous" msgid="8358683519945340874">"Награди по еден настан"</string>
+    <string name="tare_rewards_ongoing" msgid="8641416948811152109">"Награди за вкупно времетраење на настан"</string>
+    <string name="tare_rewards_max" msgid="5283055625642837010">"Максимум награди по ден"</string>
     <string name="tare_top_activity" msgid="7266560655483385757">"Врвна активност"</string>
     <string name="tare_notification_seen" msgid="7829963536020087742">"Видено известување"</string>
     <string name="tare_notification_seen_15_min" msgid="832174185809497764">"Видено известување во период од 15 мин."</string>
@@ -5754,20 +5749,16 @@
     <string name="dream_preview_button_title" msgid="6637456541851795952">"Преглед"</string>
     <string name="dream_picker_category" msgid="7726447836872744867">"Избор на заштитник на екран"</string>
     <string name="dream_complications_toggle_title" msgid="4273232303027449163">"Прикажување дополнителни податоци"</string>
-    <!-- no translation found for dream_complications_toggle_summary (4742579722349951711) -->
-    <skip />
+    <string name="dream_complications_toggle_summary" msgid="4742579722349951711">"Прикажува време, датум, временска прогноза, квалитет на воздухот и детали за Cast на заштитникот на екранот"</string>
     <string name="dream_more_settings_category" msgid="3119192146760773748">"Повеќе поставки"</string>
-    <!-- no translation found for dream_setup_title (2458303874255396142) -->
-    <skip />
-    <!-- no translation found for dream_setup_description (7508547154038580296) -->
-    <skip />
+    <string name="dream_setup_title" msgid="2458303874255396142">"Изберете го заштитникот на екранот"</string>
+    <string name="dream_setup_description" msgid="7508547154038580296">"Изберете што да се прикажува на екранот кога таблетот е приклучен на док. Уредот може да користи повеќе енергија кога се користи заштитник на екранот."</string>
     <string name="customize_button_title" msgid="1110284655990203359">"Приспособи"</string>
     <string name="reboot_dialog_enable_freeform_support" msgid="6412591361284929149">"Потребно е рестартирање за да се овозможи поддршка со слободна форма."</string>
     <string name="reboot_dialog_force_desktop_mode" msgid="2021839270403432948">"Потребно е рестартирање за да се присили режимот на компјутер на секундарни екрани."</string>
     <string name="reboot_dialog_reboot_now" msgid="235616015988522355">"Рестартирај сега"</string>
     <string name="reboot_dialog_reboot_later" msgid="4261717094186904568">"Рестартирај подоцна"</string>
-    <!-- no translation found for bluetooth_details_spatial_audio_title (1368071116994002707) -->
-    <skip />
+    <string name="bluetooth_details_spatial_audio_title" msgid="1368071116994002707">"Просторен звук"</string>
     <string name="bluetooth_details_spatial_audio_summary" msgid="5026859623681482668">"Звукот од компатибилните аудиовизуелни содржини е подлабок"</string>
     <string name="bluetooth_details_head_tracking_title" msgid="5416972521040337799">"Следење на главата"</string>
     <string name="bluetooth_details_head_tracking_summary" msgid="3942238746595985395">"Звукот се менува како што ја движите главата за да звучи поприродно"</string>
