--- a/res/values-pa/strings.xml
+++ b/res/values-pa/strings.xml
@@ -1905,7 +1905,8 @@
     <string name="module_license_title" msgid="8705484239826702828">"Google Play ਸਿਸਟਮ ਅੱਪਡੇਟ ਲਾਇਸੰਸ"</string>
     <string name="terms_title" msgid="2071742973672326073">"ਨਿਯਮ ਅਤੇ ਸ਼ਰਤਾਂ"</string>
     <string name="webview_license_title" msgid="5832692241345780517">"ਸਿਸਟਮ WebView ਲਾਇਸੰਸ"</string>
-    <string name="wallpaper_attributions" msgid="3080339190260272255">"ਵਾਲਪੇਪਰ"</string>
+    <!-- no translation found for wallpaper_attributions (4323659759250650736) -->
+    <skip />
     <string name="wallpaper_attributions_values" msgid="987277439026021925">"ਉਪਗ੍ਰਹਿ ਇਮੇਜਰੀ ਪ੍ਰਦਾਨਕ:\n©2014 CNES / Astrium, DigitalGlobe, Bluesky"</string>
     <string name="settings_manual_activity_title" msgid="1682978148920788484">"ਮੈਨੁਅਲ"</string>
     <string name="settings_manual_activity_unavailable" msgid="2514549851682321576">"ਮੈਨੁਅਲ ਲੋਡ ਕਰਨ ਵਿੱਚ ਇੱਕ ਸਮੱਸਿਆ ਹੋਈ ਸੀ।"</string>
@@ -2056,7 +2057,8 @@
     <string name="enable_text" msgid="8570798764647110430">"ਚਾਲੂ ਕਰੋ"</string>
     <string name="clear_user_data_text" msgid="6773186434260397947">"ਸਟੋਰੇਜ ਕਲੀਅਰ ਕਰੋ"</string>
     <string name="app_factory_reset" msgid="8974044931667015201">"ਅੱਪਡੇਟਾਂ ਅਣਸਥਾਪਤ ਕਰੋ"</string>
-    <string name="app_restricted_settings_lockscreen_title" msgid="7930576126329843435">"ਪ੍ਰਤਿਬੰਧਿਤ ਸੈਟਿੰਗਾਂ ਨੂੰ ਅਣਲਾਕ ਕਰੋ"</string>
+    <!-- no translation found for app_restricted_settings_lockscreen_title (5993061278264872648) -->
+    <skip />
     <string name="auto_launch_enable_text" msgid="8912714475823807798">"ਤੁਹਾਡੇ ਵੱਲੋਂ ਚੁਣੀਆਂ ਕੁਝ ਸਰਗਰਮੀਆਂ ਪੂਰਵ-ਨਿਰਧਾਰਿਤ ਤੌਰ \'ਤੇ ਇਸ ਐਪ ਵਿੱਚ ਖੁੱਲ੍ਹਦੀਆਂ ਹਨ।"</string>
     <string name="always_allow_bind_appwidgets_text" msgid="2069415023986858324">"ਤੁਸੀਂ ਇਸ ਐਪ ਨੂੰ ਵਿਜੇਟ ਬਣਾਉਣ ਲਈ ਅਤੇ ਉਹਨਾਂ ਦੇ ਡਾਟਾ ਤੱਕ ਪਹੁੰਚ ਦੀ ਆਗਿਆ ਦੇਣ ਦੀ ਚੋਣ ਕੀਤੀ ਹੈ।"</string>
     <string name="auto_launch_disable_text" msgid="502648841250936209">"ਕੋਈ ਪੂਰਵ-ਨਿਰਧਾਰਿਤ ਸੈੱਟ ਨਹੀਂ ਕੀਤੇ"</string>
@@ -2324,7 +2326,7 @@
     <string name="accessibility_text_reading_options_suggestion_title" msgid="2492155642665312733">"ਲਿਖਤ ਦੇ ਦਿਸਣ ਦਾ ਤਰੀਕਾ ਬਦਲੋ"</string>
     <string name="accessibility_text_reading_preview_mail_subject" msgid="4597374768612733616">"ਵਿਸ਼ਾ: ਗਰਮ ਹਵਾ ਦੇ ਗੁਬਾਰੇ ਦੇ ਡਿਜ਼ਾਈਨ"</string>
     <string name="accessibility_text_reading_preview_mail_from" msgid="1797499780365288020">"ਭੇਜਣਵਾਲਾ: ਬਿੱਲ"</string>
-    <string name="accessibility_text_reading_preview_mail_content" msgid="8078152365771951802">"ਸਤਿ ਸ੍ਰੀ ਅਕਾਲ!\n\nਸਿਰਫ਼ ਇਹ ਦੇਖਣਾ ਚਾਹੁੰਦੇ ਸੀ ਕਿ ਡਿਜ਼ਾਈਨ ਕਿਵੇਂ ਆ ਰਹੇ ਹਨ। ਕੀ ਸਾਡੇ ਵੱਲੋਂ ਨਵੇਂ ਗੁਬਾਰੇ ਬਣਾਉਣਾ ਸ਼ੁਰੂ ਕੀਤੇ ਜਾਣ ਤੋਂ ਪਹਿਲਾਂ ਉਹ ਤਿਆਰ ਹੋ ਜਾਣਗੇ?"</string>
+    <string name="accessibility_text_reading_preview_mail_content" msgid="8078152365771951802">"ਸਤਿ ਸ੍ਰੀ ਅਕਾਲ!\n\nਮੇਰੀ ਸਿਰਫ਼ ਇਹ ਜਾਣਨ ਦੀ ਇੱਛਾ ਹੈ ਕਿ ਡਿਜ਼ਾਈਨ ਦਾ ਕੰਮ ਕਿੰਨਾ ਕੁ ਹੋ ਗਿਆ ਹੈ। ਕੀ ਸਾਡੇ ਵੱਲੋਂ ਨਵੇਂ ਗੁਬਾਰੇ ਬਣਾਉਣਾ ਸ਼ੁਰੂ ਕੀਤੇ ਜਾਣ ਤੋਂ ਪਹਿਲਾਂ ਉਹ ਤਿਆਰ ਹੋ ਜਾਣਗੇ?"</string>
     <string name="accessibility_text_reading_reset_button_title" msgid="5960753279788187669">"ਸੈਟਿੰਗਾਂ ਰੀਸੈੱਟ ਕਰੋ"</string>
     <string name="accessibility_text_reading_confirm_dialog_title" msgid="2865331351355690389">"ਕੀ ਡਿਸਪਲੇ ਦੇ ਆਕਾਰ ਅਤੇ ਲਿਖਤ ਨੂੰ ਰੀਸੈੱਟ ਕਰਨਾ ਹੈ?"</string>
     <string name="accessibility_text_reading_confirm_dialog_message" msgid="517090197003540264">"ਤੁਹਾਡੀ ਡਿਸਪਲੇ ਦਾ ਆਕਾਰ ਅਤੇ ਲਿਖਤ ਸੰਬੰਧੀ ਤਰਜੀਹਾਂ ਫ਼ੋਨ ਦੀਆਂ ਮੂਲ ਸੈਟਿੰਗਾਂ \'ਤੇ ਰੀਸੈੱਟ ਹੋ ਜਾਣਗੀਆਂ"</string>
@@ -3572,7 +3574,7 @@
     <string name="app_and_notification_dashboard_summary" msgid="8047683010984186106">"ਹਾਲੀਆ ਐਪਾਂ, ਪੂਰਵ-ਨਿਰਧਾਰਤ ਐਪਾਂ"</string>
     <string name="notification_settings_work_profile" msgid="6076211850526353975">"ਕਾਰਜ ਪ੍ਰੋਫਾਈਲ ਵਿੱਚ ਐਪਾਂ ਲਈ ਸੂਚਨਾ ਪਹੁੰਚ ਉਪਲਬਧ ਨਹੀਂ ਹੈ।"</string>
     <string name="account_dashboard_title" msgid="8228773251948253914">"ਪਾਸਵਰਡ ਅਤੇ ਖਾਤੇ"</string>
-    <string name="account_dashboard_default_summary" msgid="1730719656099599488">"ਰੱਖਿਅਤ ਕੀਤੇ ਪਾਸਵਰਡ, ਆਟੋਫਿਲ, ਸਮਾਲੀਕਿਰਤ ਖਾਤੇ"</string>
+    <string name="account_dashboard_default_summary" msgid="1730719656099599488">"ਰੱਖਿਅਤ ਕੀਤੇ ਪਾਸਵਰਡ, ਆਟੋਫਿਲ, ਸਿੰਕ ਕੀਤੇ ਖਾਤੇ"</string>
     <string name="app_default_dashboard_title" msgid="4071015747629103216">"ਪੂਰਵ-ਨਿਰਧਾਰਿਤ ਐਪਾਂ"</string>
     <string name="system_dashboard_summary" msgid="7400745270362833832">"ਭਾਸ਼ਾਵਾਂ, ਇਸ਼ਾਰੇ, ਸਮਾਂ, ਬੈਕਅੱਪ"</string>
     <string name="search_results_title" msgid="3360639917793022533">"ਸੈਟਿੰਗਾਂ"</string>
@@ -5060,7 +5062,10 @@
     <string name="do_disclosure_with_name" msgid="867544298924410766">"ਇਸ ਡੀਵਾਈਸ ਦਾ ਪ੍ਰਬੰਧਨ <xliff:g id="ORGANIZATION_NAME">%s</xliff:g> ਵੱਲੋਂ ਕੀਤਾ ਜਾਂਦਾ ਹੈ।"</string>
     <string name="do_disclosure_learn_more_separator" msgid="5714364437437041671">" "</string>
     <string name="learn_more" msgid="3534519107947510952">"ਹੋਰ ਜਾਣੋ"</string>
-    <string name="blocked_by_restricted_settings_title" msgid="612784193997454496">"ਪ੍ਰਤਿਬੰਧਿਤ ਸੈਟਿੰਗਾਂ"</string>
+    <!-- no translation found for blocked_by_restricted_settings_title (7334715011474037399) -->
+    <skip />
+    <!-- no translation found for toast_allows_restricted_settings_successfully (1219116121291466102) -->
+    <skip />
     <string name="blocked_by_restricted_settings_content" msgid="3628660029601161080">"ਤੁਹਾਡੀ ਸੁਰੱਖਿਆ ਲਈ, ਫ਼ਿਲਹਾਲ ਇਹ ਸੈਟਿੰਗ ਉਪਲਬਧ ਨਹੀਂ ਹੈ।"</string>
     <string name="financed_privacy_settings" msgid="2575114436197204145">"ਵਿੱਤ ਪ੍ਰਬੰਧਿਤ ਡੀਵਾਈਸ ਬਾਰੇ ਜਾਣਕਾਰੀ"</string>
     <string name="financed_privacy_intro" msgid="5458393846604867947">"ਤੁਹਾਡਾ ਕ੍ਰੈਡਿਟ ਪ੍ਰਦਾਨਕ ਸੈਟਿੰਗਾਂ ਨੂੰ ਬਦਲ ਕੇ ਇਸ ਡੀਵਾਈਸ \'ਤੇ ਸਾਫ਼ਟਵੇਅਰ ਸਥਾਪਤ ਕਰ ਸਕਦਾ ਹੈ।\n\nਜੇ ਤੁਸੀਂ ਕੋਈ ਭੁਗਤਾਨ ਖੁੰਝਾ ਦਿੰਦੇ ਹੋ, ਤਾਂ ਤੁਹਾਡੇ ਡੀਵਾਈਸ ਨੂੰ ਲਾਕ ਕਰ ਦਿੱਤਾ ਜਾਵੇਗਾ।\n\nਹੋਰ ਜਾਣਨ ਲਈ, ਆਪਣੇ ਕ੍ਰੈਡਿਟ ਪ੍ਰਦਾਨਕ ਨੂੰ ਸੰਪਰਕ ਕਰੋ।"</string>
@@ -5766,12 +5771,9 @@
     <string name="reboot_dialog_reboot_later" msgid="4261717094186904568">"ਬਾਅਦ ਵਿੱਚ ਰੀਬੂਟ ਕਰੋ"</string>
     <!-- no translation found for bluetooth_details_spatial_audio_title (1368071116994002707) -->
     <skip />
-    <!-- no translation found for bluetooth_details_spatial_audio_summary (5026859623681482668) -->
-    <skip />
-    <!-- no translation found for bluetooth_details_head_tracking_title (5416972521040337799) -->
-    <skip />
-    <!-- no translation found for bluetooth_details_head_tracking_summary (3942238746595985395) -->
-    <skip />
+    <string name="bluetooth_details_spatial_audio_summary" msgid="5026859623681482668">"ਅਨੁਰੂਪ ਮੀਡੀਆ ਤੋਂ ਆਡੀਓ ਵਧੇਰੇ ਇਮਰਸਿਵ ਬਣ ਜਾਂਦੀ ਹੈ"</string>
+    <string name="bluetooth_details_head_tracking_title" msgid="5416972521040337799">"ਹੈੱਡ ਟਰੈਕਿੰਗ"</string>
+    <string name="bluetooth_details_head_tracking_summary" msgid="3942238746595985395">"ਜਦੋਂ ਤੁਸੀਂ ਆਪਣਾ ਸਿਰ ਉਸ ਦਿਸ਼ਾ ਵੱਲ ਹਿਲਾਉਂਦੇ ਹੋ ਜਿੱਥੋਂ ਧੁਨੀ ਆ ਰਹੀ ਹੈ ਤਾਂ ਆਡੀਓ ਹੋਰ ਕੁਦਰਤੀ ਸੁਣਾਈ ਦਿੰਦੀ ਹੈ"</string>
     <string name="ingress_rate_limit_title" msgid="2106694002836274350">"ਨੈੱਟਵਰਕ ਡਾਊਨਲੋਡ ਦਰ ਸੀਮਾ"</string>
     <string name="ingress_rate_limit_summary" msgid="1097811019742438371">"ਨੈੱਟਵਰਕ ਬੈਂਡਵਿਡਥ ਪ੍ਰਵੇਸ਼ ਦਰ ਸੀਮਾ ਦਾ ਸੰਰੂਪਣ ਕਰੋ ਜੋ ਇੰਟਰਨੈੱਟ ਕਨੈਕਟੀਵਿਟੀ ਮੁਹੱਈਆ ਕਰਵਾਉਣ ਵਾਲੇ ਸਾਰੇ ਨੈੱਟਵਰਕਾਂ \'ਤੇ ਲਾਗੂ ਹੁੰਦਾ ਹੈ।"</string>
     <string name="ingress_rate_limit_dialog_title" msgid="5359461052422633789">"ਨੈੱਟਵਰਕ ਡਾਊਨਲੋਡ ਦਰ ਸੀਮਾ ਦਾ ਸੰਰੂਪਣ ਕਰੋ"</string>
