--- a/res/values-sw/strings.xml
+++ b/res/values-sw/strings.xml
@@ -1905,7 +1905,8 @@
     <string name="module_license_title" msgid="8705484239826702828">"Leseni za sasisho la mfumo wa Google Play"</string>
     <string name="terms_title" msgid="2071742973672326073">"Sheria na Masharti"</string>
     <string name="webview_license_title" msgid="5832692241345780517">"Leseni ya WebView ya Mfumo"</string>
-    <string name="wallpaper_attributions" msgid="3080339190260272255">"Mandhari"</string>
+    <!-- no translation found for wallpaper_attributions (4323659759250650736) -->
+    <skip />
     <string name="wallpaper_attributions_values" msgid="987277439026021925">"Watoa huduma wa picha za setilaiti: \n©2014 CNES / Astrium, DigitalGlobe, Bluesky"</string>
     <string name="settings_manual_activity_title" msgid="1682978148920788484">"Mwongozo"</string>
     <string name="settings_manual_activity_unavailable" msgid="2514549851682321576">"Kumekuwa na hitilafu katika kupakia mwongozo."</string>
@@ -2056,7 +2057,8 @@
     <string name="enable_text" msgid="8570798764647110430">"Washa"</string>
     <string name="clear_user_data_text" msgid="6773186434260397947">"Futa data ya hifadhi"</string>
     <string name="app_factory_reset" msgid="8974044931667015201">"Ondoa masasisho"</string>
-    <string name="app_restricted_settings_lockscreen_title" msgid="7930576126329843435">"Fungua mipangilio yenye mipaka"</string>
+    <!-- no translation found for app_restricted_settings_lockscreen_title (5993061278264872648) -->
+    <skip />
     <string name="auto_launch_enable_text" msgid="8912714475823807798">"Baadhi ya shughuli ulizochagua hufunguka katika programu hii kwa chaguomsingi."</string>
     <string name="always_allow_bind_appwidgets_text" msgid="2069415023986858324">"Umechagua kuruhusu programu hii kuunda wijeti na kufikia data yao."</string>
     <string name="auto_launch_disable_text" msgid="502648841250936209">"Hakuna chaguo-misingi zilizowekwa."</string>
@@ -2324,7 +2326,7 @@
     <string name="accessibility_text_reading_options_suggestion_title" msgid="2492155642665312733">"Badilisha jinsi maandishi yanavyoonekana"</string>
     <string name="accessibility_text_reading_preview_mail_subject" msgid="4597374768612733616">"Mada: Miundo ya Puto la hewa joto"</string>
     <string name="accessibility_text_reading_preview_mail_from" msgid="1797499780365288020">"Kutoka kwa: Bill"</string>
-    <string name="accessibility_text_reading_preview_mail_content" msgid="8078152365771951802">"Habari za asubuhi!\n\nNilitaka kuangalia jinsi miundo inavyoendelea. Je, itakuwa tayari kabla hatujaanza kutengeneza maputo mapya?"</string>
+    <string name="accessibility_text_reading_preview_mail_content" msgid="8078152365771951802">"Habari za asubuhi!\n\nNilitaka kufahamu miundo imefikia wapi. Je, itakuwa tayari kabla hatujaanza kutengeneza maputo mapya?"</string>
     <string name="accessibility_text_reading_reset_button_title" msgid="5960753279788187669">"Badilisha mipangilio"</string>
     <string name="accessibility_text_reading_confirm_dialog_title" msgid="2865331351355690389">"Ungependa kubadilisha ukubwa wa skrini na maandishi?"</string>
     <string name="accessibility_text_reading_confirm_dialog_message" msgid="517090197003540264">"Mapendeleo ya maandishi na ukubwa wa skrini yako yatarejeshwa kwenye mipangilio halisi ya simu"</string>
@@ -5060,7 +5062,10 @@
     <string name="do_disclosure_with_name" msgid="867544298924410766">"Kifaa hiki kinasimamiwa na <xliff:g id="ORGANIZATION_NAME">%s</xliff:g>."</string>
     <string name="do_disclosure_learn_more_separator" msgid="5714364437437041671">" "</string>
     <string name="learn_more" msgid="3534519107947510952">"Pata maelezo zaidi"</string>
-    <string name="blocked_by_restricted_settings_title" msgid="612784193997454496">"Mipangilio yenye Mipaka"</string>
+    <!-- no translation found for blocked_by_restricted_settings_title (7334715011474037399) -->
+    <skip />
+    <!-- no translation found for toast_allows_restricted_settings_successfully (1219116121291466102) -->
+    <skip />
     <string name="blocked_by_restricted_settings_content" msgid="3628660029601161080">"Kwa ajili ya usalama wako, mpangilio huu haupatikani kwa sasa."</string>
     <string name="financed_privacy_settings" msgid="2575114436197204145">"Maelezo kuhusu kifaa kilichonunuliwa kwa mkopo"</string>
     <string name="financed_privacy_intro" msgid="5458393846604867947">"Muuzaji wako wa vifaa kwa mkopo anaweza kubadilisha mipangilio na kusakinisha programu kwenye kifaa hiki.\n\nIwapo utashindwa kufanya malipo, kifaa chako kitafungwa.\n\nIli upate maelezo zaidi, wasiliana na muuzaji wako wa vifaa kwa mkopo."</string>
@@ -5767,12 +5772,9 @@
     <string name="reboot_dialog_reboot_later" msgid="4261717094186904568">"Washa tena baadaye"</string>
     <!-- no translation found for bluetooth_details_spatial_audio_title (1368071116994002707) -->
     <skip />
-    <!-- no translation found for bluetooth_details_spatial_audio_summary (5026859623681482668) -->
-    <skip />
-    <!-- no translation found for bluetooth_details_head_tracking_title (5416972521040337799) -->
-    <skip />
-    <!-- no translation found for bluetooth_details_head_tracking_summary (3942238746595985395) -->
-    <skip />
+    <string name="bluetooth_details_spatial_audio_summary" msgid="5026859623681482668">"Sauti kutoka kwenye maudhui yanayooana huwa murua zaidi"</string>
+    <string name="bluetooth_details_head_tracking_title" msgid="5416972521040337799">"Ufuatiliaji wa kichwa"</string>
+    <string name="bluetooth_details_head_tracking_summary" msgid="3942238746595985395">"Sauti hubadilika kadiri unavyosogeza kichwa chako ili isikike kuwa ya asili zaidi"</string>
     <string name="ingress_rate_limit_title" msgid="2106694002836274350">"Kiwango cha kikomo cha upakuaji wa mtandao"</string>
     <string name="ingress_rate_limit_summary" msgid="1097811019742438371">"Weka mipangilio ya kiwango cha kikomo cha uingiaji kipimo data cha mtandao ambacho kinatumika katika mitandao yote inayotoa muunganisho wa intaneti."</string>
     <string name="ingress_rate_limit_dialog_title" msgid="5359461052422633789">"Weka mipangilio ya kiwango cha kikomo cha upakuaji wa mtandao"</string>
