--- a/res/values-uz/strings.xml
+++ b/res/values-uz/strings.xml
@@ -1907,7 +1907,8 @@
     <string name="module_license_title" msgid="8705484239826702828">"Google Play tizim yangilanishi litsenziyalari"</string>
     <string name="terms_title" msgid="2071742973672326073">"Foydalanish shartlari"</string>
     <string name="webview_license_title" msgid="5832692241345780517">"WebView tizim litsenziyasi"</string>
-    <string name="wallpaper_attributions" msgid="3080339190260272255">"Fon rasmlari"</string>
+    <!-- no translation found for wallpaper_attributions (4323659759250650736) -->
+    <skip />
     <string name="wallpaper_attributions_values" msgid="987277439026021925">"Fazodan olingan tasvirlar:\n© CNES 2014/Astrium, DigitalGlobe, Bluesky"</string>
     <string name="settings_manual_activity_title" msgid="1682978148920788484">"Qo‘llanma"</string>
     <string name="settings_manual_activity_unavailable" msgid="2514549851682321576">"Qo‘llanmani yuklashda muammo yuz berdi."</string>
@@ -2058,7 +2059,8 @@
     <string name="enable_text" msgid="8570798764647110430">"Yoqish"</string>
     <string name="clear_user_data_text" msgid="6773186434260397947">"Xotirani tozalash"</string>
     <string name="app_factory_reset" msgid="8974044931667015201">"Yangilanishlarni o‘chirish"</string>
-    <string name="app_restricted_settings_lockscreen_title" msgid="7930576126329843435">"Cheklangan sozlamalar cheklovini yechish"</string>
+    <!-- no translation found for app_restricted_settings_lockscreen_title (5993061278264872648) -->
+    <skip />
     <string name="auto_launch_enable_text" msgid="8912714475823807798">"Tanlangan ayrim harakatlar bu ilovada standart ochiladi"</string>
     <string name="always_allow_bind_appwidgets_text" msgid="2069415023986858324">"Ushbu ilova vidjetlar yaratish va ularning ma‘lumotlariga kirishiga ruxsat berishni tanladingiz."</string>
     <string name="auto_launch_disable_text" msgid="502648841250936209">"Birlamchi sozlamalar belgilanmagan."</string>
@@ -5062,7 +5064,10 @@
     <string name="do_disclosure_with_name" msgid="867544298924410766">"Bu – <xliff:g id="ORGANIZATION_NAME">%s</xliff:g> tomonidan boshqariladigan qurilma."</string>
     <string name="do_disclosure_learn_more_separator" msgid="5714364437437041671">" "</string>
     <string name="learn_more" msgid="3534519107947510952">"Batafsil"</string>
-    <string name="blocked_by_restricted_settings_title" msgid="612784193997454496">"Cheklangan sozlamalar"</string>
+    <!-- no translation found for blocked_by_restricted_settings_title (7334715011474037399) -->
+    <skip />
+    <!-- no translation found for toast_allows_restricted_settings_successfully (1219116121291466102) -->
+    <skip />
     <string name="blocked_by_restricted_settings_content" msgid="3628660029601161080">"Xavfsizlik maqsadida bu sozlama hozir ishlamaydi."</string>
     <string name="financed_privacy_settings" msgid="2575114436197204145">"Moliyalashtirilgan qurilmaga oid axborot"</string>
     <string name="financed_privacy_intro" msgid="5458393846604867947">"Kredit idorangiz bu qurilmada sozlamalarni oʻzgartirishi va dasturlar oʻrnatishi mumkin.\n\nToʻlovni oʻtkazib yuborsangiz, qurilmangiz qulflanadi.\n\nBatafsil axborot olish uchun kredit idorangizga murojaat qiling."</string>
@@ -5768,12 +5773,9 @@
     <string name="reboot_dialog_reboot_later" msgid="4261717094186904568">"Keyinroq qayta ishga tushirish"</string>
     <!-- no translation found for bluetooth_details_spatial_audio_title (1368071116994002707) -->
     <skip />
-    <!-- no translation found for bluetooth_details_spatial_audio_summary (5026859623681482668) -->
-    <skip />
-    <!-- no translation found for bluetooth_details_head_tracking_title (5416972521040337799) -->
-    <skip />
-    <!-- no translation found for bluetooth_details_head_tracking_summary (3942238746595985395) -->
-    <skip />
+    <string name="bluetooth_details_spatial_audio_summary" msgid="5026859623681482668">"Mos mediadan olingan audio yanada qiziqarli chiqadi"</string>
+    <string name="bluetooth_details_head_tracking_title" msgid="5416972521040337799">"Boshni kuzatish"</string>
+    <string name="bluetooth_details_head_tracking_summary" msgid="3942238746595985395">"Ovoz tabiiyroq chiqishi uchun boshingizni harakatlantirganda oʻzgaradi"</string>
     <string name="ingress_rate_limit_title" msgid="2106694002836274350">"Tarmoq uchun yuklab olish tezligi limiti"</string>
     <string name="ingress_rate_limit_summary" msgid="1097811019742438371">"Tarmoq uchun kiruvchi tezlik limitini internet aloqasini taʼminlovchi barcha tarmoqlar uchun belgilash mumkin."</string>
     <string name="ingress_rate_limit_dialog_title" msgid="5359461052422633789">"Tarmoq uchun yuklab olish tezligi limitini sozlash"</string>
