--- a/res/values-vi/strings.xml
+++ b/res/values-vi/strings.xml
@@ -1907,7 +1907,8 @@
     <string name="module_license_title" msgid="8705484239826702828">"Giấy phép cho bản cập nhật hệ thống Google Play"</string>
     <string name="terms_title" msgid="2071742973672326073">"Điều khoản và điều kiện"</string>
     <string name="webview_license_title" msgid="5832692241345780517">"Giấy phép WebView hệ thống"</string>
-    <string name="wallpaper_attributions" msgid="3080339190260272255">"Hình nền"</string>
+    <!-- no translation found for wallpaper_attributions (4323659759250650736) -->
+    <skip />
     <string name="wallpaper_attributions_values" msgid="987277439026021925">"Nhà cung cấp ảnh vệ tinh:\n©2014 CNES / Astrium, DigitalGlobe, Bluesky"</string>
     <string name="settings_manual_activity_title" msgid="1682978148920788484">"Hướng dẫn sử dụng"</string>
     <string name="settings_manual_activity_unavailable" msgid="2514549851682321576">"Đã xảy ra sự cố khi tải hướng dẫn sử dụng."</string>
@@ -2058,7 +2059,8 @@
     <string name="enable_text" msgid="8570798764647110430">"Bật"</string>
     <string name="clear_user_data_text" msgid="6773186434260397947">"Xóa bộ nhớ"</string>
     <string name="app_factory_reset" msgid="8974044931667015201">"Gỡ cài đặt bản cập nhật"</string>
-    <string name="app_restricted_settings_lockscreen_title" msgid="7930576126329843435">"Mở khoá chế độ cài đặt hạn chế"</string>
+    <!-- no translation found for app_restricted_settings_lockscreen_title (5993061278264872648) -->
+    <skip />
     <string name="auto_launch_enable_text" msgid="8912714475823807798">"Theo mặc định, một số hoạt động mà bạn đã chọn sẽ mở trong ứng dụng này."</string>
     <string name="always_allow_bind_appwidgets_text" msgid="2069415023986858324">"Bạn đã chọn cho phép ứng dụng này tạo các tiện ích và truy cập dữ liệu của chúng."</string>
     <string name="auto_launch_disable_text" msgid="502648841250936209">"Chưa đặt mặc định."</string>
@@ -2326,7 +2328,7 @@
     <string name="accessibility_text_reading_options_suggestion_title" msgid="2492155642665312733">"Thay đổi cách hiển thị văn bản"</string>
     <string name="accessibility_text_reading_preview_mail_subject" msgid="4597374768612733616">"Tiêu đề: Mẫu thiết kế khinh khí cầu"</string>
     <string name="accessibility_text_reading_preview_mail_from" msgid="1797499780365288020">"Người gửi: Bill"</string>
-    <string name="accessibility_text_reading_preview_mail_content" msgid="8078152365771951802">"Xin chào!\n\nTôi chỉ muốn hỏi về tiến độ thiết kế. Liệu bạn có kịp hoàn thiện trước khi chúng tôi bắt đầu tạo hộp chú giải mới không?"</string>
+    <string name="accessibility_text_reading_preview_mail_content" msgid="8078152365771951802">"Xin chào!\n\nTôi chỉ muốn hỏi về tiến độ thiết kế. Liệu những thiết kế đó có kịp hoàn thiện trước khi chúng tôi bắt đầu tạo hộp chú giải mới không?"</string>
     <string name="accessibility_text_reading_reset_button_title" msgid="5960753279788187669">"Đặt lại chế độ cài đặt"</string>
     <string name="accessibility_text_reading_confirm_dialog_title" msgid="2865331351355690389">"Đặt lại văn bản và kích thước hiển thị?"</string>
     <string name="accessibility_text_reading_confirm_dialog_message" msgid="517090197003540264">"Các lựa chọn ưu tiên của bạn về văn bản và kích thước hiển thị sẽ đặt lại về chế độ cài đặt ban đầu của điện thoại"</string>
@@ -5062,7 +5064,10 @@
     <string name="do_disclosure_with_name" msgid="867544298924410766">"Thiết bị này được <xliff:g id="ORGANIZATION_NAME">%s</xliff:g> quản lý."</string>
     <string name="do_disclosure_learn_more_separator" msgid="5714364437437041671">" "</string>
     <string name="learn_more" msgid="3534519107947510952">"Tìm hiểu thêm"</string>
-    <string name="blocked_by_restricted_settings_title" msgid="612784193997454496">"Cài đặt hạn chế"</string>
+    <!-- no translation found for blocked_by_restricted_settings_title (7334715011474037399) -->
+    <skip />
+    <!-- no translation found for toast_allows_restricted_settings_successfully (1219116121291466102) -->
+    <skip />
     <string name="blocked_by_restricted_settings_content" msgid="3628660029601161080">"Để bảo mật cho bạn, chế độ cài đặt này hiện không dùng được."</string>
     <string name="financed_privacy_settings" msgid="2575114436197204145">"Thông tin về thiết bị trả góp"</string>
     <string name="financed_privacy_intro" msgid="5458393846604867947">"Tổ chức tín dụng của bạn có thể thay đổi chế độ cài đặt và cài đặt phần mềm trên thiết bị này.\n\nNếu bạn chưa thanh toán, thiết bị của bạn sẽ bị khoá.\n\nĐể tìm hiểu thêm, hãy liên hệ với tổ chức tín dụng."</string>
@@ -5768,12 +5773,9 @@
     <string name="reboot_dialog_reboot_later" msgid="4261717094186904568">"Khởi động lại sau"</string>
     <!-- no translation found for bluetooth_details_spatial_audio_title (1368071116994002707) -->
     <skip />
-    <!-- no translation found for bluetooth_details_spatial_audio_summary (5026859623681482668) -->
-    <skip />
-    <!-- no translation found for bluetooth_details_head_tracking_title (5416972521040337799) -->
-    <skip />
-    <!-- no translation found for bluetooth_details_head_tracking_summary (3942238746595985395) -->
-    <skip />
+    <string name="bluetooth_details_spatial_audio_summary" msgid="5026859623681482668">"Âm thanh của nội dung nghe nhìn tương thích sẽ trở nên sống động hơn"</string>
+    <string name="bluetooth_details_head_tracking_title" msgid="5416972521040337799">"Theo dõi chuyển động của đầu"</string>
+    <string name="bluetooth_details_head_tracking_summary" msgid="3942238746595985395">"Âm thanh sẽ thay đổi khi bạn di chuyển đầu nhằm mang lại trải nghiệm nghe tự nhiên hơn"</string>
     <string name="ingress_rate_limit_title" msgid="2106694002836274350">"Giới hạn tốc độ tải xuống của mạng"</string>
     <string name="ingress_rate_limit_summary" msgid="1097811019742438371">"Định cấu hình giới hạn tốc độ truy cập băng thông mạng để áp dụng cho tất cả các mạng cung cấp khả năng kết nối Internet."</string>
     <string name="ingress_rate_limit_dialog_title" msgid="5359461052422633789">"Định cấu hình giới hạn tốc độ tải xuống của mạng"</string>
