--- a/res/values-az/strings.xml
+++ b/res/values-az/strings.xml
@@ -1905,7 +1905,8 @@
     <string name="module_license_title" msgid="8705484239826702828">"Google Play sistem güncəllənməsi lisenziyaları"</string>
     <string name="terms_title" msgid="2071742973672326073">"Şərtlər"</string>
     <string name="webview_license_title" msgid="5832692241345780517">"Sistem WebView Lisenziyası"</string>
-    <string name="wallpaper_attributions" msgid="3080339190260272255">"Divar kağızları"</string>
+    <!-- no translation found for wallpaper_attributions (4323659759250650736) -->
+    <skip />
     <string name="wallpaper_attributions_values" msgid="987277439026021925">"Peyk şəkillərini təqdim edənlər:\n©2014 CNES / Astrium, DigitalGlobe, Bluesky"</string>
     <string name="settings_manual_activity_title" msgid="1682978148920788484">"Manual"</string>
     <string name="settings_manual_activity_unavailable" msgid="2514549851682321576">"Dərsliklərin yüklənməsində problem var."</string>
@@ -2056,7 +2057,8 @@
     <string name="enable_text" msgid="8570798764647110430">"Aktivləşdirin"</string>
     <string name="clear_user_data_text" msgid="6773186434260397947">"Yaddaşı təmizləyin"</string>
     <string name="app_factory_reset" msgid="8974044931667015201">"Güncəlləşmələri qaldırın"</string>
-    <string name="app_restricted_settings_lockscreen_title" msgid="7930576126329843435">"Məhdudlaşdırılmış ayarları kiliddən çıxarın"</string>
+    <!-- no translation found for app_restricted_settings_lockscreen_title (5993061278264872648) -->
+    <skip />
     <string name="auto_launch_enable_text" msgid="8912714475823807798">"Seçdiyiniz bəzi fəaliyyətlər bu tətbiqdə defolt olaraq açılır."</string>
     <string name="always_allow_bind_appwidgets_text" msgid="2069415023986858324">"Siz bu tətbiqə widget yaratmaq və onların məlumatlarını əldə etməyə imkan vermə seçimini etmisiniz."</string>
     <string name="auto_launch_disable_text" msgid="502648841250936209">"Defolt ayarlanmayıb."</string>
@@ -3372,8 +3374,7 @@
     <string name="user_summary_managed_profile_not_set_up" msgid="5739207307082458746">"Quraşdırılmayıb - İş profili"</string>
     <string name="user_admin" msgid="4024553191395768119">"Admin"</string>
     <string name="user_you" msgid="3070562015202859996">"Siz (<xliff:g id="NAME">%s</xliff:g>)"</string>
-    <!-- no translation found for user_add_max_count (3328539978480663740) -->
-    <skip />
+    <string name="user_add_max_count" msgid="3328539978480663740">"Başqa istifadəçi əlavə edə bilməzsiniz. Yenisini əlavə etmək üçün bir istifadəçini silin."</string>
     <string name="user_cannot_manage_message" product="tablet" msgid="3405022988077682357">"Yalnız planşet sahibi istifadəçiləri idarə edə bilər."</string>
     <string name="user_cannot_manage_message" product="default" msgid="6434662649769855494">"Yalnız telefon sahibi istifadəçiləri idarə edə bilər"</string>
     <string name="user_cannot_add_accounts_message" msgid="2351326078338805337">"Məhdudlaşdırılmış profillər hesablar əlavə edə bilməz"</string>
@@ -4399,12 +4400,9 @@
       <item quantity="other"><xliff:g id="COUNT_1">%d</xliff:g> istifadə olunmayan tətbiq</item>
       <item quantity="one"><xliff:g id="COUNT_0">%d</xliff:g> istifadə olunmayan tətbiq</item>
     </plurals>
-    <!-- no translation found for unused_apps_category (8954930958175500851) -->
-    <skip />
-    <!-- no translation found for unused_apps_switch (2979882622987847195) -->
-    <skip />
-    <!-- no translation found for unused_apps_switch_summary (6971069728614582344) -->
-    <skip />
+    <string name="unused_apps_category" msgid="8954930958175500851">"İstifadə edilməyən tətbiq ayarları"</string>
+    <string name="unused_apps_switch" msgid="2979882622987847195">"Tətbiq fəaliyyətini durdurun"</string>
+    <string name="unused_apps_switch_summary" msgid="6971069728614582344">"İcazələri silin, müvəqqəti faylları silin və istifadə edilmədikdə bildirişləri dayandırın"</string>
     <string name="filter_all_apps" msgid="6645539744080251371">"Bütün tətbiqlər"</string>
     <string name="filter_enabled_apps" msgid="8868356616126759124">"Quraşdırılmış tətbiqlər"</string>
     <string name="filter_instant_apps" msgid="2292108467020380068">"Ani tətbiqlər"</string>
@@ -5060,7 +5058,10 @@
     <string name="do_disclosure_with_name" msgid="867544298924410766">"Bu cihaz <xliff:g id="ORGANIZATION_NAME">%s</xliff:g> tərəfindən idarə olunur."</string>
     <string name="do_disclosure_learn_more_separator" msgid="5714364437437041671">" "</string>
     <string name="learn_more" msgid="3534519107947510952">"Ətraflı məlumat"</string>
-    <string name="blocked_by_restricted_settings_title" msgid="612784193997454496">"Məhdudlaşdırılmış Ayarlar"</string>
+    <!-- no translation found for blocked_by_restricted_settings_title (7334715011474037399) -->
+    <skip />
+    <!-- no translation found for toast_allows_restricted_settings_successfully (1219116121291466102) -->
+    <skip />
     <string name="blocked_by_restricted_settings_content" msgid="3628660029601161080">"Təhlükəsizliyiniz üçün bu ayar hazırda əlçatan deyil."</string>
     <string name="financed_privacy_settings" msgid="2575114436197204145">"Maliyyələşdirilmiş cihaz məlumatları"</string>
     <string name="financed_privacy_intro" msgid="5458393846604867947">"Kredit təminatçınız bu cihazda ayarları dəyişdirə və proqram quraşdıra bilər.\n\nÖdənişi etməsəniz, cihazınız kilidlənəcək.\n\nƏtraflı məlumat üçün kredit təminatçınızla əlaqə saxlayın."</string>
@@ -5560,10 +5561,8 @@
     <string name="accessor_never_expires_text" msgid="4647624492147788340">"İcarə müddəti heç vaxt bitməyəcək."</string>
     <string name="overlay_settings_title" msgid="1032863083496396365">"Ayarlarda pəncərəüstü göstərilməyə icazə verilsin"</string>
     <string name="overlay_settings_summary" msgid="2745336273786148166">"Digər tətbiqlərin üzərində görünmək icazəsi olan tətbiqlərə ayarlar üzərində görünmək icazəsi verilsin"</string>
-    <!-- no translation found for allow_mock_modem (3832264806530479214) -->
-    <skip />
-    <!-- no translation found for allow_mock_modem_summary (9097416612748005374) -->
-    <skip />
+    <string name="allow_mock_modem" msgid="3832264806530479214">"Əvəzləyici Modemə icazə verin"</string>
+    <string name="allow_mock_modem_summary" msgid="9097416612748005374">"Bu cihaza alət testi üçün Əvəzləyici Modem xidmətini işə salmağa icazə verin. Telefonun normal istifadəsi zamanı bunu aktiv etməyin"</string>
     <string name="media_controls_title" msgid="403271085636252597">"Media"</string>
     <string name="media_controls_resume_title" msgid="855076860336652370">"Mediapleyer bərkidilsin"</string>
     <string name="media_controls_resume_description" msgid="3163482266454802097">"Oxutmanı cəld davam etdirmək üçün media pleyer Sürətli Ayarlarda açıq qalır"</string>
@@ -5649,8 +5648,7 @@
     <string name="app_pinning_main_switch_title" msgid="5465506660064032876">"Tətbiq bərkidilməsi"</string>
     <string name="developer_options_main_switch_title" msgid="1720074589554152501">"Developer seçimlərini işlədin"</string>
     <string name="default_print_service_main_switch_title" msgid="4697133737128324036">"Çap xidmətindən istifadə edin"</string>
-    <!-- no translation found for multiple_users_main_switch_title (6686858308083037810) -->
-    <skip />
+    <string name="multiple_users_main_switch_title" msgid="6686858308083037810">"Bir neçə istifadəçiyə icazə verin"</string>
     <string name="wireless_debugging_main_switch_title" msgid="8463499572781441719">"Wi-Fi vasitəsilə sazlayın"</string>
     <string name="graphics_driver_main_switch_title" msgid="6125172901855813790">"Qrafik drayver tərcihlərinin istifadəsi"</string>
     <string name="battery_saver_main_switch_title" msgid="5072135547489779352">"Enerjiyə qənaət rejiminə keçin"</string>
@@ -5716,12 +5714,9 @@
     <string name="tare_modifiers" msgid="8919975635360280820">"Dəyişdiricilər"</string>
     <string name="tare_actions_ctp" msgid="5110104015354916401">"Əməliyyatlar (Maya dəyəri)"</string>
     <string name="tare_actions_base_price" msgid="3300967942666376589">"Əməliyyatlar (Baza Qiyməti)"</string>
-    <!-- no translation found for tare_rewards_instantaneous (8358683519945340874) -->
-    <skip />
-    <!-- no translation found for tare_rewards_ongoing (8641416948811152109) -->
-    <skip />
-    <!-- no translation found for tare_rewards_max (5283055625642837010) -->
-    <skip />
+    <string name="tare_rewards_instantaneous" msgid="8358683519945340874">"Hər tədbir üçün mükafatlar"</string>
+    <string name="tare_rewards_ongoing" msgid="8641416948811152109">"Ümumi tədbir müddəti üçün mükafatlar"</string>
+    <string name="tare_rewards_max" msgid="5283055625642837010">"Günlük Maksimum Mükafat"</string>
     <string name="tare_top_activity" msgid="7266560655483385757">"Vacib Fəaliyyət"</string>
     <string name="tare_notification_seen" msgid="7829963536020087742">"Bildirişə Baxılıb"</string>
     <string name="tare_notification_seen_15_min" msgid="832174185809497764">"Bildirişə 15 Dəqiqə Ərzində Baxılıb"</string>
@@ -5752,20 +5747,16 @@
     <string name="dream_preview_button_title" msgid="6637456541851795952">"Önizləmə"</string>
     <string name="dream_picker_category" msgid="7726447836872744867">"Ekran qoruyucusu seçin"</string>
     <string name="dream_complications_toggle_title" msgid="4273232303027449163">"Əlavə məlumat göstərin"</string>
-    <!-- no translation found for dream_complications_toggle_summary (4742579722349951711) -->
-    <skip />
+    <string name="dream_complications_toggle_summary" msgid="4742579722349951711">"Ekran qoruyucuda vaxt, tarix, hava, hava keyfiyyəti və Yayım məlumatlarını göstərin"</string>
     <string name="dream_more_settings_category" msgid="3119192146760773748">"Digər ayarlar"</string>
-    <!-- no translation found for dream_setup_title (2458303874255396142) -->
-    <skip />
-    <!-- no translation found for dream_setup_description (7508547154038580296) -->
-    <skip />
+    <string name="dream_setup_title" msgid="2458303874255396142">"Ekran qoruyucunu seçin"</string>
+    <string name="dream_setup_description" msgid="7508547154038580296">"Planşet doka yerləşdirildikdə ekranda nə görəcəyinizi seçin. Ekran qoruyucusu istifadə edildikdə cihazınız daha çox enerji sərf edə bilər."</string>
     <string name="customize_button_title" msgid="1110284655990203359">"Fərdiləşdirin"</string>
     <string name="reboot_dialog_enable_freeform_support" msgid="6412591361284929149">"Sərbəst forma dəstəyini aktivləşdirmək üçün yenidən başlatma tələb olunur."</string>
     <string name="reboot_dialog_force_desktop_mode" msgid="2021839270403432948">"İkinci dərəcəli displeylərdə masaüstü rejimini məcburi aktiv etmək üçün yenidən başlatma tələb olunur."</string>
     <string name="reboot_dialog_reboot_now" msgid="235616015988522355">"İndi yenidən başladın"</string>
     <string name="reboot_dialog_reboot_later" msgid="4261717094186904568">"Sonra yeniden başladın"</string>
-    <!-- no translation found for bluetooth_details_spatial_audio_title (1368071116994002707) -->
-    <skip />
+    <string name="bluetooth_details_spatial_audio_title" msgid="1368071116994002707">"Uzaysal Audio"</string>
     <string name="bluetooth_details_spatial_audio_summary" msgid="5026859623681482668">"Uyğun mediadan gələn audio daha immersiv olur"</string>
     <string name="bluetooth_details_head_tracking_title" msgid="5416972521040337799">"Baş izləməsi"</string>
     <string name="bluetooth_details_head_tracking_summary" msgid="3942238746595985395">"Daha təbii səslənmək üçün başınızı hərəkət etdirdikcə səs dəyişir"</string>
