--- a/res/values-cs/strings.xml
+++ b/res/values-cs/strings.xml
@@ -1949,7 +1949,8 @@
     <string name="module_license_title" msgid="8705484239826702828">"Licence aktualizace systému Google Play"</string>
     <string name="terms_title" msgid="2071742973672326073">"Smluvní podmínky"</string>
     <string name="webview_license_title" msgid="5832692241345780517">"Systémová licence WebView"</string>
-    <string name="wallpaper_attributions" msgid="3080339190260272255">"Tapety"</string>
+    <!-- no translation found for wallpaper_attributions (4323659759250650736) -->
+    <skip />
     <string name="wallpaper_attributions_values" msgid="987277439026021925">"Poskytovatelé satelitních snímků:\n©2014 CNES / Astrium, DigitalGlobe, Bluesky"</string>
     <string name="settings_manual_activity_title" msgid="1682978148920788484">"Příručka"</string>
     <string name="settings_manual_activity_unavailable" msgid="2514549851682321576">"Při načítání příručky došlo k chybě."</string>
@@ -2104,7 +2105,8 @@
     <string name="enable_text" msgid="8570798764647110430">"Aktivovat"</string>
     <string name="clear_user_data_text" msgid="6773186434260397947">"Vymazat úložiště"</string>
     <string name="app_factory_reset" msgid="8974044931667015201">"Odinstalovat aktualizace"</string>
-    <string name="app_restricted_settings_lockscreen_title" msgid="7930576126329843435">"Odemknutí omezených nastavení"</string>
+    <!-- no translation found for app_restricted_settings_lockscreen_title (5993061278264872648) -->
+    <skip />
     <string name="auto_launch_enable_text" msgid="8912714475823807798">"Některé aktivity, které jste vybrali, se otevírají v této aplikaci podle výchozího nastavení."</string>
     <string name="always_allow_bind_appwidgets_text" msgid="2069415023986858324">"Této aplikaci jste povolili vytváření widgetů a přístup k jejich datům."</string>
     <string name="auto_launch_disable_text" msgid="502648841250936209">"Aplikace není nastavena jako výchozí pro žádné akce."</string>
@@ -5224,7 +5226,10 @@
     <string name="do_disclosure_with_name" msgid="867544298924410766">"Toto zařízení je spravováno organizací <xliff:g id="ORGANIZATION_NAME">%s</xliff:g>."</string>
     <string name="do_disclosure_learn_more_separator" msgid="5714364437437041671">" "</string>
     <string name="learn_more" msgid="3534519107947510952">"Další informace"</string>
-    <string name="blocked_by_restricted_settings_title" msgid="612784193997454496">"Omezená nastavení"</string>
+    <!-- no translation found for blocked_by_restricted_settings_title (7334715011474037399) -->
+    <skip />
+    <!-- no translation found for toast_allows_restricted_settings_successfully (1219116121291466102) -->
+    <skip />
     <string name="blocked_by_restricted_settings_content" msgid="3628660029601161080">"Z důvodu vaší bezpečnosti toto nastavení momentálně není dostupné."</string>
     <string name="financed_privacy_settings" msgid="2575114436197204145">"Informace o financovaném zařízení"</string>
     <string name="financed_privacy_intro" msgid="5458393846604867947">"Poskytovatel úvěru může v tomto zařízení měnit nastavení a instalovat do něj software.\n\nV případě neuhrazení splátky bude zařízení zablokováno.\n\nDalší informace vám sdělí poskytovatel úvěru."</string>
@@ -5944,12 +5949,9 @@
     <string name="reboot_dialog_reboot_later" msgid="4261717094186904568">"Restartovat později"</string>
     <!-- no translation found for bluetooth_details_spatial_audio_title (1368071116994002707) -->
     <skip />
-    <!-- no translation found for bluetooth_details_spatial_audio_summary (5026859623681482668) -->
-    <skip />
-    <!-- no translation found for bluetooth_details_head_tracking_title (5416972521040337799) -->
-    <skip />
-    <!-- no translation found for bluetooth_details_head_tracking_summary (3942238746595985395) -->
-    <skip />
+    <string name="bluetooth_details_spatial_audio_summary" msgid="5026859623681482668">"Zvuk z kompatibilních mediálních zařízení bude realističtější"</string>
+    <string name="bluetooth_details_head_tracking_title" msgid="5416972521040337799">"Sledování hlavy"</string>
+    <string name="bluetooth_details_head_tracking_summary" msgid="3942238746595985395">"Při pohybu hlavou se zvuk mění, aby zněl přirozeněji"</string>
     <string name="ingress_rate_limit_title" msgid="2106694002836274350">"Limit rychlosti stahování v síti"</string>
     <string name="ingress_rate_limit_summary" msgid="1097811019742438371">"Nakonfiguruje limit rychlosti připojení k síti u příchozích přenosů, který bude platit pro všechny sítě poskytující připojení k internetu."</string>
     <string name="ingress_rate_limit_dialog_title" msgid="5359461052422633789">"Konfigurace limitu rychlosti stahování v síti"</string>
