--- a/res/values-da/strings.xml
+++ b/res/values-da/strings.xml
@@ -1905,7 +1905,8 @@
     <string name="module_license_title" msgid="8705484239826702828">"Licenser til Google Play-systemopdateringer"</string>
     <string name="terms_title" msgid="2071742973672326073">"Vilkår og betingelser"</string>
     <string name="webview_license_title" msgid="5832692241345780517">"System WebView-licens"</string>
-    <string name="wallpaper_attributions" msgid="3080339190260272255">"Baggrunde"</string>
+    <!-- no translation found for wallpaper_attributions (4323659759250650736) -->
+    <skip />
     <string name="wallpaper_attributions_values" msgid="987277439026021925">"Leverandører af satellitbilleder:\n©2014 CNES / Astrium, DigitalGlobe, Bluesky"</string>
     <string name="settings_manual_activity_title" msgid="1682978148920788484">"Brugervejledning"</string>
     <string name="settings_manual_activity_unavailable" msgid="2514549851682321576">"Der er problemer med at indlæse brugervejledningen."</string>
@@ -2056,7 +2057,8 @@
     <string name="enable_text" msgid="8570798764647110430">"Aktivér"</string>
     <string name="clear_user_data_text" msgid="6773186434260397947">"Ryd lagerplads"</string>
     <string name="app_factory_reset" msgid="8974044931667015201">"Afinstaller opdateringer"</string>
-    <string name="app_restricted_settings_lockscreen_title" msgid="7930576126329843435">"Lås op for begrænsede indstillinger"</string>
+    <!-- no translation found for app_restricted_settings_lockscreen_title (5993061278264872648) -->
+    <skip />
     <string name="auto_launch_enable_text" msgid="8912714475823807798">"Nogle af de aktiviteter, du har valgt, åbnes som standard i denne app."</string>
     <string name="always_allow_bind_appwidgets_text" msgid="2069415023986858324">"Du har valgt at tillade, at denne app opretter widgets og får adgang til deres data."</string>
     <string name="auto_launch_disable_text" msgid="502648841250936209">"Der er ikke angivet nogen standarder."</string>
@@ -5060,7 +5062,10 @@
     <string name="do_disclosure_with_name" msgid="867544298924410766">"Denne enhed administreres af <xliff:g id="ORGANIZATION_NAME">%s</xliff:g>."</string>
     <string name="do_disclosure_learn_more_separator" msgid="5714364437437041671">" "</string>
     <string name="learn_more" msgid="3534519107947510952">"Få flere oplysninger"</string>
-    <string name="blocked_by_restricted_settings_title" msgid="612784193997454496">"Begrænsede indstillinger"</string>
+    <!-- no translation found for blocked_by_restricted_settings_title (7334715011474037399) -->
+    <skip />
+    <!-- no translation found for toast_allows_restricted_settings_successfully (1219116121291466102) -->
+    <skip />
     <string name="blocked_by_restricted_settings_content" msgid="3628660029601161080">"Af hensyn til din sikkerhed er denne indstilling i øjeblikket ikke tilgængelig."</string>
     <string name="financed_privacy_settings" msgid="2575114436197204145">"Oplysninger om finansieret enhed"</string>
     <string name="financed_privacy_intro" msgid="5458393846604867947">"Din kreditudbyder kan ændre indstillinger og installere software på denne enhed.\n\nHvis du glemmer en betaling, bliver din enhed låst.\n\nKontakt din kreditudbyder for at få flere oplysninger."</string>
