--- a/res/values-es/strings.xml
+++ b/res/values-es/strings.xml
@@ -1905,7 +1905,8 @@
     <string name="module_license_title" msgid="8705484239826702828">"Licencias de la actualización del sistema de Google Play"</string>
     <string name="terms_title" msgid="2071742973672326073">"Condiciones de uso"</string>
     <string name="webview_license_title" msgid="5832692241345780517">"Licencia de WebView del sistema"</string>
-    <string name="wallpaper_attributions" msgid="3080339190260272255">"Fondos de pantalla"</string>
+    <!-- no translation found for wallpaper_attributions (4323659759250650736) -->
+    <skip />
     <string name="wallpaper_attributions_values" msgid="987277439026021925">"Proveedores de imágenes de satélite:\n© 2014 CNES / Astrium, DigitalGlobe, Bluesky"</string>
     <string name="settings_manual_activity_title" msgid="1682978148920788484">"Manual"</string>
     <string name="settings_manual_activity_unavailable" msgid="2514549851682321576">"Error al intentar cargar las licencias."</string>
@@ -2056,7 +2057,8 @@
     <string name="enable_text" msgid="8570798764647110430">"Habilitar"</string>
     <string name="clear_user_data_text" msgid="6773186434260397947">"Borrar almacenamiento"</string>
     <string name="app_factory_reset" msgid="8974044931667015201">"Desinstalar actualizaciones"</string>
-    <string name="app_restricted_settings_lockscreen_title" msgid="7930576126329843435">"Desbloquear ajustes restringidos"</string>
+    <!-- no translation found for app_restricted_settings_lockscreen_title (5993061278264872648) -->
+    <skip />
     <string name="auto_launch_enable_text" msgid="8912714475823807798">"Algunas de las actividades que has seleccionado se abren en esta aplicación de forma predeterminada."</string>
     <string name="always_allow_bind_appwidgets_text" msgid="2069415023986858324">"Has permitido que esta aplicación pueda crear widgets y acceder a sus datos."</string>
     <string name="auto_launch_disable_text" msgid="502648841250936209">"No se han establecido valores por defecto"</string>
@@ -3413,7 +3415,7 @@
     <string name="user_copy_apps_menu_title" msgid="5354300105759670300">"Instalar aplicaciones disponibles"</string>
     <string name="nfc_payment_settings_title" msgid="2043139180030485500">"Pagos contactless"</string>
     <string name="nfc_default_payment_settings_title" msgid="2150504446774382261">"Aplicación para pagos predeterminada"</string>
-    <string name="nfc_default_payment_footer" msgid="978535088340021360">"Para pagar con una app para pagos, acerca la parte trasera del dispositivo a un terminal de pago"</string>
+    <string name="nfc_default_payment_footer" msgid="978535088340021360">"Para pagar con una app de pagos, acerca la parte posterior del dispositivo a un terminal de pago"</string>
     <string name="nfc_more_details" msgid="1700713533074275233">"Más información"</string>
     <string name="nfc_default_payment_workapp_confirmation_title" msgid="746921251872504687">"¿Establecer aplicación de trabajo como aplicación para pagos predeterminada?"</string>
     <string name="nfc_default_payment_workapp_confirmation_message_title" msgid="1533022606333010329">"Para pagar con una aplicación de trabajo:"</string>
@@ -5060,7 +5062,10 @@
     <string name="do_disclosure_with_name" msgid="867544298924410766">"<xliff:g id="ORGANIZATION_NAME">%s</xliff:g> administra este dispositivo."</string>
     <string name="do_disclosure_learn_more_separator" msgid="5714364437437041671">" "</string>
     <string name="learn_more" msgid="3534519107947510952">"Más información"</string>
-    <string name="blocked_by_restricted_settings_title" msgid="612784193997454496">"Ajustes restringidos"</string>
+    <!-- no translation found for blocked_by_restricted_settings_title (7334715011474037399) -->
+    <skip />
+    <!-- no translation found for toast_allows_restricted_settings_successfully (1219116121291466102) -->
+    <skip />
     <string name="blocked_by_restricted_settings_content" msgid="3628660029601161080">"Por seguridad, este ajuste no está disponible."</string>
     <string name="financed_privacy_settings" msgid="2575114436197204145">"Información sobre el dispositivo financiado"</string>
     <string name="financed_privacy_intro" msgid="5458393846604867947">"Tu entidad de crédito puede cambiar ajustes e instalar software en este dispositivo.\n\nSi olvidas un pago, tu dispositivo se bloqueará.\n\nPide más información a tu entidad de crédito."</string>
