--- a/res/values-eu/strings.xml
+++ b/res/values-eu/strings.xml
@@ -1905,7 +1905,8 @@
     <string name="module_license_title" msgid="8705484239826702828">"Google Play-ko sistemaren eguneratzeen lizentziak"</string>
     <string name="terms_title" msgid="2071742973672326073">"Zehaztapenak eta baldintzak"</string>
     <string name="webview_license_title" msgid="5832692241345780517">"Sistemaren WebView lizentzia"</string>
-    <string name="wallpaper_attributions" msgid="3080339190260272255">"Horma-paperak"</string>
+    <!-- no translation found for wallpaper_attributions (4323659759250650736) -->
+    <skip />
     <string name="wallpaper_attributions_values" msgid="987277439026021925">"Sateliteko irudien hornitzaileak:\n©2014 CNES / Astrium, DigitalGlobe, Bluesky"</string>
     <string name="settings_manual_activity_title" msgid="1682978148920788484">"Eskuliburua"</string>
     <string name="settings_manual_activity_unavailable" msgid="2514549851682321576">"Arazo bat izan da eskuliburua kargatzean."</string>
@@ -2056,7 +2057,8 @@
     <string name="enable_text" msgid="8570798764647110430">"Gaitu"</string>
     <string name="clear_user_data_text" msgid="6773186434260397947">"Garbitu memoria"</string>
     <string name="app_factory_reset" msgid="8974044931667015201">"Desinstalatu eguneratzeak"</string>
-    <string name="app_restricted_settings_lockscreen_title" msgid="7930576126329843435">"Desblokeatu ezarpen mugatuak"</string>
+    <!-- no translation found for app_restricted_settings_lockscreen_title (5993061278264872648) -->
+    <skip />
     <string name="auto_launch_enable_text" msgid="8912714475823807798">"Hautatutako jarduera batzuk modu lehenetsian irekitzen dira aplikazio honetan."</string>
     <string name="always_allow_bind_appwidgets_text" msgid="2069415023986858324">"Aplikazioari widgetak sortzeko eta horien datuak atzitzeko baimena ematea aukeratu duzu."</string>
     <string name="auto_launch_disable_text" msgid="502648841250936209">"Ez dago balio lehenetsirik."</string>
@@ -3607,7 +3609,7 @@
     <string name="keywords_network_reset" msgid="4075670452112218042">"berrezarri, leheneratu, fabrikako ezarpen, jatorrizko"</string>
     <string name="keywords_factory_data_reset" msgid="4979623326958976773">"xahutu, ezabatu, leheneratu, garbitu, kendu, berrezarri jatorrizko datuak"</string>
     <string name="keywords_printing" msgid="3528250034669909466">"inprimagailua"</string>
-    <string name="keywords_sounds" msgid="187191900698371911">"bozgorailuaren bip-soinua, bozgorailua, bolumena, desaktibatu audioa, isilarazi, audioa, musika, ukipen bidezko interakzioa, dardaragailua, dardara"</string>
+    <string name="keywords_sounds" msgid="187191900698371911">"bozgorailuaren bip-soinua, bozgorailua, bolumena, desaktibatu audioa, isilarazi, audioa, musika, interakzio haptikoa, dardaragailua, dardara"</string>
     <string name="keywords_sounds_and_notifications_interruptions" msgid="1500312884808362467">"ez molestatu, eten, etenaldi, atseden"</string>
     <string name="keywords_app" msgid="7983814237980258061">"RAM"</string>
     <string name="keywords_location" msgid="8016374808099706213">"ingurua, kokapena, historia, hautematea, hauteman, GPSa"</string>
@@ -5060,7 +5062,10 @@
     <string name="do_disclosure_with_name" msgid="867544298924410766">"<xliff:g id="ORGANIZATION_NAME">%s</xliff:g> erakundeak kudeatzen du gailu hau."</string>
     <string name="do_disclosure_learn_more_separator" msgid="5714364437437041671">" "</string>
     <string name="learn_more" msgid="3534519107947510952">"Lortu informazio gehiago"</string>
-    <string name="blocked_by_restricted_settings_title" msgid="612784193997454496">"Ezarpen mugatuak"</string>
+    <!-- no translation found for blocked_by_restricted_settings_title (7334715011474037399) -->
+    <skip />
+    <!-- no translation found for toast_allows_restricted_settings_successfully (1219116121291466102) -->
+    <skip />
     <string name="blocked_by_restricted_settings_content" msgid="3628660029601161080">"Zure segurtasuna bermatzeko, ezarpena ez dago erabilgarri une honetan."</string>
     <string name="financed_privacy_settings" msgid="2575114436197204145">"Gailu finantzatuaren informazioa"</string>
     <string name="financed_privacy_intro" msgid="5458393846604867947">"Kreditu bidezko gailu-hornitzaileak gailuaren ezarpenak alda ditzake, eta bertan softwarea instalatu.\n\nOrdainketaren bat egiten ez baduzu, gailua blokeatu egingo da.\n\nInformazio gehiago lortzeko, jarri harremanetan kreditu bidezko gailu-hornitzailearekin."</string>
