--- a/res/values-fa/strings.xml
+++ b/res/values-fa/strings.xml
@@ -1905,7 +1905,8 @@
     <string name="module_license_title" msgid="8705484239826702828">"‏مجوزهای به‌روزرسانی سیستم Google Play"</string>
     <string name="terms_title" msgid="2071742973672326073">"شرایط و مقررات"</string>
     <string name="webview_license_title" msgid="5832692241345780517">"مجوز وب‌نمای سیستم"</string>
-    <string name="wallpaper_attributions" msgid="3080339190260272255">"کاغذدیواری‌ها"</string>
+    <!-- no translation found for wallpaper_attributions (4323659759250650736) -->
+    <skip />
     <string name="wallpaper_attributions_values" msgid="987277439026021925">"‏ارائه‌دهندگان تصویر ماهواره‌ای:\n©2014 CNES / Astrium, DigitalGlobe, Bluesky"</string>
     <string name="settings_manual_activity_title" msgid="1682978148920788484">"دفترچه راهنما"</string>
     <string name="settings_manual_activity_unavailable" msgid="2514549851682321576">"مشکلی در بارگیری دفترچه راهنما وجود دارد."</string>
@@ -2056,7 +2057,8 @@
     <string name="enable_text" msgid="8570798764647110430">"فعال کردن"</string>
     <string name="clear_user_data_text" msgid="6773186434260397947">"پاک کردن فضای ذخیره‌سازی"</string>
     <string name="app_factory_reset" msgid="8974044931667015201">"حذف نصب نسخه‌های به روز"</string>
-    <string name="app_restricted_settings_lockscreen_title" msgid="7930576126329843435">"باز کردن قفل تنظیمات حالت محدود"</string>
+    <!-- no translation found for app_restricted_settings_lockscreen_title (5993061278264872648) -->
+    <skip />
     <string name="auto_launch_enable_text" msgid="8912714475823807798">"برخی از فعالیت‌هایی که انتخاب کردید به‌طور پیش‌فرض در این برنامه باز می‌شوند."</string>
     <string name="always_allow_bind_appwidgets_text" msgid="2069415023986858324">"شما انتخاب کردید تا به این برنامه برای ایجاد ابزارک و دسترسی به اطلاعات آن‌ها اجازه دهید."</string>
     <string name="auto_launch_disable_text" msgid="502648841250936209">"پیش‌فرضی تنظیم نشده است."</string>
@@ -2190,7 +2192,7 @@
     <string name="auto_punctuate_summary" msgid="3549190848611386748">"برای وارد کردن \".\"، کلید فاصله را دو بار فشار دهید."</string>
     <string name="show_password" msgid="7101900779571040117">"نمایش گذرواژه‌ها"</string>
     <string name="show_password_summary" msgid="9025960283785111619">"همان‌طور که تایپ می‌کنید، نویسه‌ها را برای مدت کوتاهی نشان می‌دهد"</string>
-    <string name="spellchecker_security_warning" msgid="2016059050608271820">"این غلط‌‌گیر ممکن است بتواند همه متنی را که شما وارد می‌کنید از جمله، داده‌های شخصی مانند گذرواژه‌ها و شماره‌های کارت اعتباری را جمع‌آوری کند. این ویژگی توسط برنامه <xliff:g id="SPELLCHECKER_APPLICATION_NAME">%1$s</xliff:g> ارائه می‌شود. از این غلط‌گیر استفاده شود؟"</string>
+    <string name="spellchecker_security_warning" msgid="2016059050608271820">"این غلط‌یاب املا ممکن است بتواند همه متنی را که شما وارد می‌کنید از جمله، داده‌های شخصی مانند گذرواژه‌ها و شماره‌های کارت اعتباری را جمع‌آوری کند. این ویژگی توسط برنامه <xliff:g id="SPELLCHECKER_APPLICATION_NAME">%1$s</xliff:g> ارائه می‌شود. از این غلط‌یاب املا استفاده شود؟"</string>
     <string name="spellchecker_quick_settings" msgid="6449414356743946577">"تنظیمات"</string>
     <string name="spellchecker_language" msgid="8905487366580285282">"زبان"</string>
     <string name="keyboard_and_input_methods_category" msgid="5296847777802891649">"صفحه‌کلیدها"</string>
@@ -2219,7 +2221,7 @@
     <string name="keyboard_layout_picker_title" msgid="240504762718562906">"طرح‌بندی‌های صفحه‌کلید"</string>
     <string name="user_dict_settings_title" msgid="680410651924276991">"واژه‌نامه شخصی"</string>
     <string name="user_dict_settings_for_work_title" msgid="1245315720684961770">"واژه‌نامه شخصی برای کار"</string>
-    <string name="user_dict_settings_summary" msgid="4939694372338975081">"افزودن واژه برای استفاده در برنامه‌هایی نظیر «غلط‌گیر املا»"</string>
+    <string name="user_dict_settings_summary" msgid="4939694372338975081">"افزودن واژه برای استفاده در برنامه‌هایی مثل «غلط‌یاب املا»"</string>
     <string name="user_dict_settings_add_menu_title" msgid="8046882347281382968">"افزودن"</string>
     <string name="user_dict_settings_add_dialog_title" msgid="3485845465134083084">"افزودن به واژه‌نامه"</string>
     <string name="user_dict_settings_add_screen_title" msgid="1866408024073475379">"عبارت"</string>
@@ -3333,8 +3335,8 @@
     <string name="user_credential_title" msgid="4686178602575567298">"جزئیات اعتبارنامه"</string>
     <string name="user_credential_removed" msgid="4087675887725394743">"اعتبارنامه برداشته شد: <xliff:g id="CREDENTIAL_NAME">%s</xliff:g>"</string>
     <string name="user_credential_none_installed" msgid="918620912366836994">"اطلاعات کاربری‌ای نصب نشده"</string>
-    <string name="spellcheckers_settings_title" msgid="2799021700580591443">"غلط‌گیر املا"</string>
-    <string name="spellcheckers_settings_for_work_title" msgid="6471603934176062893">"غلط‌گیر املا برای کار"</string>
+    <string name="spellcheckers_settings_title" msgid="2799021700580591443">"غلط‌یاب املا"</string>
+    <string name="spellcheckers_settings_for_work_title" msgid="6471603934176062893">"غلط‌یاب املا برای کار"</string>
     <string name="current_backup_pw_prompt" msgid="4962276598546381140">"گذرواژه فعلی پشتیبان‌گیری‌تان را به‌طور کامل اینجا تایپ کنید"</string>
     <string name="new_backup_pw_prompt" msgid="4884439230209419503">"گذرواژه جدیدی برای پشتیبان‌گیری کامل در اینجا تایپ کنید"</string>
     <string name="confirm_new_backup_pw_prompt" msgid="5753796799743881356">"گذرواژه جدید پشتیبان‌گیری‌تان را به‌طور کامل اینجا دوباره تایپ کنید"</string>
@@ -3600,7 +3602,7 @@
     <string name="keywords_battery_usage" msgid="1763573071014260220">"مشاهده مصرف باتری، مصرف باتری، مصرف انرژی"</string>
     <string name="keywords_battery_saver" msgid="6289682844453234359">"بهینه‌سازی باتری، بهینه‌سازی انرژی، بهینه‌سازی"</string>
     <string name="keywords_battery_adaptive_preferences" msgid="1774870663426502938">"اولویت‌های تطبیقی، باتری تطبیقی"</string>
-    <string name="keywords_spell_checker" msgid="5148906820603481657">"املا، واژه‌نامه، غلط‌گیر املا، تصحیح خودکار"</string>
+    <string name="keywords_spell_checker" msgid="5148906820603481657">"املا واژه‌نامه غلط‌یاب املایی، تصحیح خودکار"</string>
     <string name="keywords_voice_input" msgid="7534900094659358971">"تشخیص‌دهنده، ورودی، گفتار، بلند صحبت کردن، گفتن، صحبت کردن، زبان، هندزفری، هندز فری، تشخیص، توهین‌آمیز، کلمه، صوتی، سابقه، بلوتوث، هدست"</string>
     <string name="keywords_text_to_speech_output" msgid="6728080502619011668">"‏رده‌بندی، زبان، پیش‌فرض، بلند صحبت کردن، گفتن، صحبت کردن، صحبت، tts، دسترس‌پذیری، صفحه‌خوان، نابینا"</string>
     <string name="keywords_date_and_time" msgid="4402136313104901312">"ساعت، نظامی"</string>
@@ -4803,9 +4805,9 @@
     <string name="battery_saver_button_turn_off" msgid="6371072408072481484">"اکنون خاموش شود"</string>
     <string name="not_battery_optimizing" msgid="8361294470943376258">"از بهینه‌سازی باتری استفاده نشود"</string>
     <string name="lockscreen_remote_input" msgid="6030274311185811503">"درصورت قفل بودن دستگاه، از تایپ پاسخ یا نوشتارهای دیگر در اعلان‌ها جلوگیری شود"</string>
-    <string name="default_spell_checker" msgid="7108373288347014351">"غلط‌گیر املای پیش‌فرض"</string>
-    <string name="choose_spell_checker" msgid="7402513404783243675">"انتخاب غلط‌گیر املا"</string>
-    <string name="spell_checker_primary_switch_title" msgid="529240542284039243">"استفاده از غلط‌گیر املا"</string>
+    <string name="default_spell_checker" msgid="7108373288347014351">"غلط‌یاب املای پیش‌فرض"</string>
+    <string name="choose_spell_checker" msgid="7402513404783243675">"انتخاب غلط‌یاب املا"</string>
+    <string name="spell_checker_primary_switch_title" msgid="529240542284039243">"استفاده از غلط‌یاب املا"</string>
     <string name="spell_checker_not_selected" msgid="8818618543474481451">"انتخاب نشده"</string>
     <string name="notification_log_no_title" msgid="2343315128609978203">"(خالی)"</string>
     <string name="notification_log_details_delimiter" msgid="2475986465985309821">": "</string>
@@ -5060,7 +5062,10 @@
     <string name="do_disclosure_with_name" msgid="867544298924410766">"این دستگاه توسط <xliff:g id="ORGANIZATION_NAME">%s</xliff:g> مدیریت می‌شود."</string>
     <string name="do_disclosure_learn_more_separator" msgid="5714364437437041671">" "</string>
     <string name="learn_more" msgid="3534519107947510952">"بیشتر بدانید"</string>
-    <string name="blocked_by_restricted_settings_title" msgid="612784193997454496">"تنظیمات حالت محدود"</string>
+    <!-- no translation found for blocked_by_restricted_settings_title (7334715011474037399) -->
+    <skip />
+    <!-- no translation found for toast_allows_restricted_settings_successfully (1219116121291466102) -->
+    <skip />
     <string name="blocked_by_restricted_settings_content" msgid="3628660029601161080">"برای حفظ امنیت شما، درحال‌حاضر این تنظیم دردسترس نیست."</string>
     <string name="financed_privacy_settings" msgid="2575114436197204145">"اطلاعات دستگاه دارای پشتیبانی مالی"</string>
     <string name="financed_privacy_intro" msgid="5458393846604867947">"ارائه‌دهنده اعتبارتان می‌تواند تنظیمات این دستگاه را تغییر دهد و در آن نرم‌افزار نصب کند.\n\nاگر پرداختی را انجام ندهید، دستگاهتان قفل خواهد شد.\n\nبرای دریافت اطلاعات بیشتر، با ارائه‌دهنده اعتبارتان تماس بگیرید."</string>
@@ -5766,12 +5771,9 @@
     <string name="reboot_dialog_reboot_later" msgid="4261717094186904568">"بعداً راه‌اندازی مجدد شود"</string>
     <!-- no translation found for bluetooth_details_spatial_audio_title (1368071116994002707) -->
     <skip />
-    <!-- no translation found for bluetooth_details_spatial_audio_summary (5026859623681482668) -->
-    <skip />
-    <!-- no translation found for bluetooth_details_head_tracking_title (5416972521040337799) -->
-    <skip />
-    <!-- no translation found for bluetooth_details_head_tracking_summary (3942238746595985395) -->
-    <skip />
+    <string name="bluetooth_details_spatial_audio_summary" msgid="5026859623681482668">"صدای رسانه‌های سازگار فراگیرتر می‌شود"</string>
+    <string name="bluetooth_details_head_tracking_title" msgid="5416972521040337799">"ردیابی سر"</string>
+    <string name="bluetooth_details_head_tracking_summary" msgid="3942238746595985395">"با حرکت سرتان، صدا تغییر می‌کند تا طبیعی‌تر شنیده شود"</string>
     <string name="ingress_rate_limit_title" msgid="2106694002836274350">"محدودیت نرخ بارگیری شبکه"</string>
     <string name="ingress_rate_limit_summary" msgid="1097811019742438371">"برای نرخ ورودی پهنای باند شبکه، محدودیت پیکربندی کنید. این محدودیت بر همه شبکه‌هایی که اتصال اینترنت ارائه می‌دهند اعمال می‌شود."</string>
     <string name="ingress_rate_limit_dialog_title" msgid="5359461052422633789">"پیکربندی محدودیت نرخ بارگیری شبکه"</string>
