--- a/res/values-gl/strings.xml
+++ b/res/values-gl/strings.xml
@@ -1905,7 +1905,8 @@
     <string name="module_license_title" msgid="8705484239826702828">"Licenzas de actualización do sistema de Play"</string>
     <string name="terms_title" msgid="2071742973672326073">"Termos e condicións"</string>
     <string name="webview_license_title" msgid="5832692241345780517">"Licenza WebView do sistema"</string>
-    <string name="wallpaper_attributions" msgid="3080339190260272255">"Fondos de pantalla"</string>
+    <!-- no translation found for wallpaper_attributions (4323659759250650736) -->
+    <skip />
     <string name="wallpaper_attributions_values" msgid="987277439026021925">"Provedores de imaxes por satélite:\n©2014 CNES / Astrium, DigitalGlobe, Bluesky"</string>
     <string name="settings_manual_activity_title" msgid="1682978148920788484">"Manual"</string>
     <string name="settings_manual_activity_unavailable" msgid="2514549851682321576">"Hai un problema para cargar o manual."</string>
@@ -2056,7 +2057,8 @@
     <string name="enable_text" msgid="8570798764647110430">"Activar"</string>
     <string name="clear_user_data_text" msgid="6773186434260397947">"Borrar almacenamento"</string>
     <string name="app_factory_reset" msgid="8974044931667015201">"Desinstalar actualizacións"</string>
-    <string name="app_restricted_settings_lockscreen_title" msgid="7930576126329843435">"Desbloquear as opcións restrinxidas"</string>
+    <!-- no translation found for app_restricted_settings_lockscreen_title (5993061278264872648) -->
+    <skip />
     <string name="auto_launch_enable_text" msgid="8912714475823807798">"Algunhas actividades que seleccionaches ábrense nesta aplicación de forma predeterminada."</string>
     <string name="always_allow_bind_appwidgets_text" msgid="2069415023986858324">"Decidiches permitir a esta aplicación crear widgets e acceder aos seus datos."</string>
     <string name="auto_launch_disable_text" msgid="502648841250936209">"Non se definiu ningún valor predeterminado."</string>
@@ -2444,13 +2446,13 @@
     <string name="accessibility_autoclick_shorter_desc" msgid="7631013255724544348">"Máis curto"</string>
     <string name="accessibility_autoclick_longer_desc" msgid="2566025502981487443">"Máis longo"</string>
     <string name="accessibility_autoclick_seekbar_desc" msgid="8363959277814621118">"Tempo do clic automático"</string>
-    <string name="accessibility_vibration_settings_title" msgid="936301142478631993">"Vibración e tecnoloxía táctil"</string>
+    <string name="accessibility_vibration_settings_title" msgid="936301142478631993">"Vibración e tecnoloxía háptica"</string>
     <string name="accessibility_vibration_settings_summary" msgid="3690308537483465527">"Controla a intensidade da vibración para distintos usos"</string>
     <string name="accessibility_vibration_setting_disabled_for_silent_mode_summary" msgid="3982701772953323190">"Esta opción de configuración está desactivada porque o dispositivo se atopa silenciado"</string>
     <string name="accessibility_call_vibration_category_title" msgid="2545607568768192318">"Chamadas"</string>
     <string name="accessibility_notification_alarm_vibration_category_title" msgid="2683635252414849417">"Notificacións e alarmas"</string>
-    <string name="accessibility_interactive_haptics_category_title" msgid="3162855291184592021">"Resposta háptica interactiva"</string>
-    <string name="accessibility_vibration_primary_switch_title" msgid="6162579254864450592">"Utilizar vibración e tecnoloxía táctil"</string>
+    <string name="accessibility_interactive_haptics_category_title" msgid="3162855291184592021">"Tecnoloxía háptica interactiva"</string>
+    <string name="accessibility_vibration_primary_switch_title" msgid="6162579254864450592">"Utilizar vibración e tecnoloxía háptica"</string>
     <string name="accessibility_alarm_vibration_title" msgid="4661294337828522745">"Vibración das alarmas"</string>
     <string name="accessibility_media_vibration_title" msgid="1372073715403945428">"Vibración do contido multimedia"</string>
     <string name="accessibility_ring_vibration_title" msgid="4689811297654320885">"Vibración do ton"</string>
@@ -3660,14 +3662,14 @@
     <string name="keywords_default_payment_app" msgid="5162298193637362104">"pago, predeterminado"</string>
     <string name="keywords_ambient_display" msgid="3149287105145443697">"notificación entrante"</string>
     <string name="keywords_hotspot_tethering" msgid="3688439689671232627">"conexión compartida por USB, conexión compartida por Bluetooth, zona wifi"</string>
-    <string name="keywords_accessibility_vibration_primary_switch" msgid="730692154347231253">"tecnoloxía táctil, vibrar, vibración"</string>
-    <string name="keywords_touch_vibration" msgid="1125291201902251273">"tecnoloxía táctil, vibrar, pantalla, sensibilidade"</string>
-    <string name="keywords_ring_vibration" msgid="1736301626537417541">"tecnoloxía táctil, vibración, teléfono, chamada, sensibilidade, ton"</string>
-    <string name="keywords_ramping_ringer_vibration" msgid="3678966746742257366">"tecnoloxía táctil, vibrar, teléfono, chamada, soar, gradualmente"</string>
-    <string name="keywords_notification_vibration" msgid="2620799301276142183">"tecnoloxía táctil, vibrar, sensibilidade, notificación"</string>
-    <string name="keywords_alarm_vibration" msgid="4833220371621521817">"tecnoloxía táctil, vibrar, sensibilidade, alarma"</string>
-    <string name="keywords_media_vibration" msgid="723896490102792327">"tecnoloxía táctil, vibrar, sensibilidade, contido multimedia"</string>
-    <string name="keywords_vibration" msgid="670455132028025952">"tecnoloxía táctil, vibrar, vibración"</string>
+    <string name="keywords_accessibility_vibration_primary_switch" msgid="730692154347231253">"tecnoloxía háptica, vibrar, vibración"</string>
+    <string name="keywords_touch_vibration" msgid="1125291201902251273">"tecnoloxía háptica, vibrar, pantalla, sensibilidade"</string>
+    <string name="keywords_ring_vibration" msgid="1736301626537417541">"tecnoloxía háptica, vibración, teléfono, chamada, sensibilidade, ton"</string>
+    <string name="keywords_ramping_ringer_vibration" msgid="3678966746742257366">"tecnoloxía háptica, vibrar, teléfono, chamada, soar, gradualmente"</string>
+    <string name="keywords_notification_vibration" msgid="2620799301276142183">"tecnoloxía háptica, vibrar, sensibilidade, notificación"</string>
+    <string name="keywords_alarm_vibration" msgid="4833220371621521817">"tecnoloxía háptica, vibrar, sensibilidade, alarma"</string>
+    <string name="keywords_media_vibration" msgid="723896490102792327">"tecnoloxía háptica, vibrar, sensibilidade, contido multimedia"</string>
+    <string name="keywords_vibration" msgid="670455132028025952">"tecnoloxía háptica, vibrar, vibración"</string>
     <string name="keywords_battery_saver_sticky" msgid="1646191718840975110">"aforro de batería, fixo, persistir, aforro de enerxía, batería"</string>
     <string name="keywords_battery_saver_schedule" msgid="8240483934368455930">"rutina, planificación, aforro de batería, aforro de enerxía, batería, automático, porcentaxe"</string>
     <string name="keywords_enhance_4g_lte" msgid="658889360486800978">"VoLTE, chamadas avanzadas, chamadas 4G"</string>
@@ -5060,7 +5062,10 @@
     <string name="do_disclosure_with_name" msgid="867544298924410766">"Este dispositivo está xestionado por <xliff:g id="ORGANIZATION_NAME">%s</xliff:g>."</string>
     <string name="do_disclosure_learn_more_separator" msgid="5714364437437041671">" "</string>
     <string name="learn_more" msgid="3534519107947510952">"Máis información"</string>
-    <string name="blocked_by_restricted_settings_title" msgid="612784193997454496">"Opcións de configuración restrinxidas"</string>
+    <!-- no translation found for blocked_by_restricted_settings_title (7334715011474037399) -->
+    <skip />
+    <!-- no translation found for toast_allows_restricted_settings_successfully (1219116121291466102) -->
+    <skip />
     <string name="blocked_by_restricted_settings_content" msgid="3628660029601161080">"Pola túa seguranza, esta opción de configuración non está dispoñible nestes momentos."</string>
     <string name="financed_privacy_settings" msgid="2575114436197204145">"Información sobre o dispositivo financiado"</string>
     <string name="financed_privacy_intro" msgid="5458393846604867947">"A túa entidade de crédito pode cambiar a configuración deste dispositivo e instalar software nel.\n\nSe non realizas algún pago, bloquearase o teu dispositivo.\n\nSe queres obter máis información, ponte en contacto coa entidade de crédito."</string>
@@ -5766,12 +5771,9 @@
     <string name="reboot_dialog_reboot_later" msgid="4261717094186904568">"Reiniciar máis adiante"</string>
     <!-- no translation found for bluetooth_details_spatial_audio_title (1368071116994002707) -->
     <skip />
-    <!-- no translation found for bluetooth_details_spatial_audio_summary (5026859623681482668) -->
-    <skip />
-    <!-- no translation found for bluetooth_details_head_tracking_title (5416972521040337799) -->
-    <skip />
-    <!-- no translation found for bluetooth_details_head_tracking_summary (3942238746595985395) -->
-    <skip />
+    <string name="bluetooth_details_spatial_audio_summary" msgid="5026859623681482668">"O audio dos contidos multimedia compatibles ofréceche unha experiencia máis envolvente"</string>
+    <string name="bluetooth_details_head_tracking_title" msgid="5416972521040337799">"Seguimento da cabeza"</string>
+    <string name="bluetooth_details_head_tracking_summary" msgid="3942238746595985395">"Para ofrecerche unha experiencia máis natural, o audio cambia a medida que moves a cabeza"</string>
     <string name="ingress_rate_limit_title" msgid="2106694002836274350">"Límite de velocidade de descarga da rede"</string>
     <string name="ingress_rate_limit_summary" msgid="1097811019742438371">"Configura o límite de velocidade de entrada da largura de banda da rede, que se aplica a todas as redes que fornecen conectividade a Internet."</string>
     <string name="ingress_rate_limit_dialog_title" msgid="5359461052422633789">"Configurar o límite de velocidade de descarga da rede"</string>
