--- a/res/values-ky/strings.xml
+++ b/res/values-ky/strings.xml
@@ -1905,7 +1905,8 @@
     <string name="module_license_title" msgid="8705484239826702828">"Google Play тутумун жаңыртуу уруксаттамалары"</string>
     <string name="terms_title" msgid="2071742973672326073">"Пайдалануу шарттары"</string>
     <string name="webview_license_title" msgid="5832692241345780517">"WebView тутум уруксаттамасы"</string>
-    <string name="wallpaper_attributions" msgid="3080339190260272255">"Тушкагаздар"</string>
+    <!-- no translation found for wallpaper_attributions (4323659759250650736) -->
+    <skip />
     <string name="wallpaper_attributions_values" msgid="987277439026021925">"Спутник сүрөттөрү:\n©2014 CNES/Astrium, DigitalGlobe, Bluesky"</string>
     <string name="settings_manual_activity_title" msgid="1682978148920788484">"Кол менен"</string>
     <string name="settings_manual_activity_unavailable" msgid="2514549851682321576">"Нускаманы жүктөөдө көйгөй чыкты."</string>
@@ -2056,7 +2057,8 @@
     <string name="enable_text" msgid="8570798764647110430">"Иштетүү"</string>
     <string name="clear_user_data_text" msgid="6773186434260397947">"Сактагычты тазалоо"</string>
     <string name="app_factory_reset" msgid="8974044931667015201">"Жаңыртууларды чыгарып салуу"</string>
-    <string name="app_restricted_settings_lockscreen_title" msgid="7930576126329843435">"Чектелген параметрлердин кулпусун ачуу"</string>
+    <!-- no translation found for app_restricted_settings_lockscreen_title (5993061278264872648) -->
+    <skip />
     <string name="auto_launch_enable_text" msgid="8912714475823807798">"Сиз тандаган айрым аракеттер ушул колдонмодо демейки шартта ачылат."</string>
     <string name="always_allow_bind_appwidgets_text" msgid="2069415023986858324">"Сиз бул колдонмого виджеттерди түзүү жана алардын берилиштерине жетүү уруксатын бердиңиз."</string>
     <string name="auto_launch_disable_text" msgid="502648841250936209">"Демейки маанилер коюлган жок."</string>
@@ -5060,7 +5062,10 @@
     <string name="do_disclosure_with_name" msgid="867544298924410766">"Бул түзмөк <xliff:g id="ORGANIZATION_NAME">%s</xliff:g> тарабынан башкарылат."</string>
     <string name="do_disclosure_learn_more_separator" msgid="5714364437437041671">" "</string>
     <string name="learn_more" msgid="3534519107947510952">"Кеңири маалымат"</string>
-    <string name="blocked_by_restricted_settings_title" msgid="612784193997454496">"Чектелген параметрлер"</string>
+    <!-- no translation found for blocked_by_restricted_settings_title (7334715011474037399) -->
+    <skip />
+    <!-- no translation found for toast_allows_restricted_settings_successfully (1219116121291466102) -->
+    <skip />
     <string name="blocked_by_restricted_settings_content" msgid="3628660029601161080">"Коопсуздугуңузду камсыздоо үчүн бул параметр учурда жеткиликсиз."</string>
     <string name="financed_privacy_settings" msgid="2575114436197204145">"Насыяга алынган түзмөк тууралуу маалымат"</string>
     <string name="financed_privacy_intro" msgid="5458393846604867947">"Насыя берүүчү бул түзмөктөгү жөндөөлөрдү өзгөртүп, программаларды орното алат.\n\nЭгер убагында төлөбөсөңүз, түзмөк кулпуланып калат.\n\nКеңири маалымат алуу үчүн насыя берүүчүгө кайрылыңыз."</string>
