--- a/res/values-lo/strings.xml
+++ b/res/values-lo/strings.xml
@@ -1905,7 +1905,8 @@
     <string name="module_license_title" msgid="8705484239826702828">"ໃບອະນຸຍາດອັບເດດລະບົບ Google Play"</string>
     <string name="terms_title" msgid="2071742973672326073">"ຂໍ້ກຳນົດ ແລະເງື່ອນໄຂ"</string>
     <string name="webview_license_title" msgid="5832692241345780517">"ໃບ​ອະ​ນຸ​ຍາດ WebView ຂອງ​ລະ​ບົບ"</string>
-    <string name="wallpaper_attributions" msgid="3080339190260272255">"ພາບພື້ນຫຼັງ"</string>
+    <!-- no translation found for wallpaper_attributions (4323659759250650736) -->
+    <skip />
     <string name="wallpaper_attributions_values" msgid="987277439026021925">"ຜູ້ສະໜອງພາບຖ່າຍດາວທຽມ:\n©2014 CNES / Astrium, DigitalGlobe, Bluesky"</string>
     <string name="settings_manual_activity_title" msgid="1682978148920788484">"ຕັ້ງຄ່າເອງ"</string>
     <string name="settings_manual_activity_unavailable" msgid="2514549851682321576">"ເກີດບັນຫາໃນການໂຫລດຄູ່​ມື."</string>
@@ -2056,7 +2057,8 @@
     <string name="enable_text" msgid="8570798764647110430">"ເປີດນຳໃຊ້"</string>
     <string name="clear_user_data_text" msgid="6773186434260397947">"ລຶບພື້ນທີ່ຈັດເກັບຂໍ້ມູນ"</string>
     <string name="app_factory_reset" msgid="8974044931667015201">"ຖອນການຕິດຕັ້ງອັບເດດ"</string>
-    <string name="app_restricted_settings_lockscreen_title" msgid="7930576126329843435">"ປົດລັອກການຕັ້ງຄ່າທີ່ຈຳກັດໄວ້"</string>
+    <!-- no translation found for app_restricted_settings_lockscreen_title (5993061278264872648) -->
+    <skip />
     <string name="auto_launch_enable_text" msgid="8912714475823807798">"ການເຄື່ອນໄຫວຈຳນວນໜຶ່ງທີ່ທ່ານເລືອກຈະເປີດໃນແອັບນີ້ຕາມຄ່າເລີ່ມຕົ້ນ."</string>
     <string name="always_allow_bind_appwidgets_text" msgid="2069415023986858324">"ທ່ານໄດ້ອະນຸຍາດໃຫ້ແອັບຯນີ້ ສ້າງວິກເຈັດ ແລະເຂົ້າເຖິງຂໍ້ມູນຂອງພວກເຂົາໄດ້ແລ້ວ."</string>
     <string name="auto_launch_disable_text" msgid="502648841250936209">"ບໍ່ໄດ້ຕັ້ງຄ່າເລີ່ມຕົ້ນເທື່ອ."</string>
@@ -5060,7 +5062,10 @@
     <string name="do_disclosure_with_name" msgid="867544298924410766">"ອຸປະກອນນີ້ຖືກຈັດການໂດຍ <xliff:g id="ORGANIZATION_NAME">%s</xliff:g>"</string>
     <string name="do_disclosure_learn_more_separator" msgid="5714364437437041671">" "</string>
     <string name="learn_more" msgid="3534519107947510952">"ສຶກສາເພີ່ມເຕີມ"</string>
-    <string name="blocked_by_restricted_settings_title" msgid="612784193997454496">"ການຕັ້ງຄ່າທີ່ຈຳກັດໄວ້"</string>
+    <!-- no translation found for blocked_by_restricted_settings_title (7334715011474037399) -->
+    <skip />
+    <!-- no translation found for toast_allows_restricted_settings_successfully (1219116121291466102) -->
+    <skip />
     <string name="blocked_by_restricted_settings_content" msgid="3628660029601161080">"ເພື່ອຄວາມປອດໄພຂອງທ່ານ, ຕອນນີ້ຈຶ່ງບໍ່ສາມາດໃຊ້ການຕັ້ງຄ່ານີ້ໄດ້."</string>
     <string name="financed_privacy_settings" msgid="2575114436197204145">"ຂໍ້ມູນອຸປະກອນທີ່ໄດ້ຮັບການສະໜັບສະໜຸນທາງການເງິນ"</string>
     <string name="financed_privacy_intro" msgid="5458393846604867947">"ຜູ້ໃຫ້ບໍລິການເຄຣດິດຂອງທ່ານສາມາດປ່ຽນການຕັ້ງຄ່າ ແລະ ຕິດຕັ້ງຊອບແວຢູ່ອຸປະກອນນີ້ໄດ້.\n\nຫາກທ່ານພາດການຈ່າຍເງິນໃດໜຶ່ງ, ອຸປະກອນຂອງທ່ານຈະຖືກລັອກໄວ້.\n\nເພື່ອສຶກສາເພີ່ມເຕີມ, ໃຫ້ຕິດຕໍ່ຜູ້ໃຫ້ບໍລິການເຄຣດິດຂອງທ່ານ."</string>
@@ -5766,12 +5771,9 @@
     <string name="reboot_dialog_reboot_later" msgid="4261717094186904568">"ປິດ​ເປີດ​ໃໝ່ໃນພາຍຫຼັງ"</string>
     <!-- no translation found for bluetooth_details_spatial_audio_title (1368071116994002707) -->
     <skip />
-    <!-- no translation found for bluetooth_details_spatial_audio_summary (5026859623681482668) -->
-    <skip />
-    <!-- no translation found for bluetooth_details_head_tracking_title (5416972521040337799) -->
-    <skip />
-    <!-- no translation found for bluetooth_details_head_tracking_summary (3942238746595985395) -->
-    <skip />
+    <string name="bluetooth_details_spatial_audio_summary" msgid="5026859623681482668">"ສຽງຈາກມີເດຍທີ່ເຂົ້າກັນໄດ້ຈະມີຄວາມສົມຈິງຍິ່ງຂຶ້ນ"</string>
+    <string name="bluetooth_details_head_tracking_title" msgid="5416972521040337799">"ການຕິດຕາມຫົວ"</string>
+    <string name="bluetooth_details_head_tracking_summary" msgid="3942238746595985395">"ສຽງຈະປ່ຽນເມື່ອທ່ານຍັບຫົວຂອງທ່ານເພື່ອໃຫ້ສຽງເປັນທຳມະຊາດຍິ່ງຂຶ້ນ"</string>
     <string name="ingress_rate_limit_title" msgid="2106694002836274350">"ຂີດຈຳກັດອັດຕາດາວໂຫຼດເຄືອຂ່າຍ"</string>
     <string name="ingress_rate_limit_summary" msgid="1097811019742438371">"ຕັ້ງຄ່າຂີດຈຳກັດອັດຕາການເຂົ້າແບນວິດເຄືອຂ່າຍເຊິ່ງນຳໃຊ້ກັບເຄືອຂ່າຍທັງໝົດທີ່ສະໜອງການເຊື່ອມຕໍ່ອິນເຕີເນັດ."</string>
     <string name="ingress_rate_limit_dialog_title" msgid="5359461052422633789">"ຕັ້ງຄ່າຂີດຈຳກັດອັດຕາການດາວໂຫຼດເຄືອຂ່າຍ"</string>
