--- a/res/values-lt/strings.xml
+++ b/res/values-lt/strings.xml
@@ -1949,7 +1949,8 @@
     <string name="module_license_title" msgid="8705484239826702828">"„Google Play“ sistemos naujinių licencijos"</string>
     <string name="terms_title" msgid="2071742973672326073">"Taisyklės ir nuostatos"</string>
     <string name="webview_license_title" msgid="5832692241345780517">"Sistemos „WebView“ licencija"</string>
-    <string name="wallpaper_attributions" msgid="3080339190260272255">"Ekrano fonai"</string>
+    <!-- no translation found for wallpaper_attributions (4323659759250650736) -->
+    <skip />
     <string name="wallpaper_attributions_values" msgid="987277439026021925">"Palydovinių vaizdų teikėjai:\n© CNES / „Astrium“, „DigitalGlobe“, „Bluesky“, 2014 m."</string>
     <string name="settings_manual_activity_title" msgid="1682978148920788484">"Neautomatiškai"</string>
     <string name="settings_manual_activity_unavailable" msgid="2514549851682321576">"Įkeliant vadovą iškilo problema."</string>
@@ -2104,7 +2105,8 @@
     <string name="enable_text" msgid="8570798764647110430">"Įgalinti"</string>
     <string name="clear_user_data_text" msgid="6773186434260397947">"Išvalyti saugyklą"</string>
     <string name="app_factory_reset" msgid="8974044931667015201">"Pašalinti naujinius"</string>
-    <string name="app_restricted_settings_lockscreen_title" msgid="7930576126329843435">"Atrakinti apribotus nustatymus"</string>
+    <!-- no translation found for app_restricted_settings_lockscreen_title (5993061278264872648) -->
+    <skip />
     <string name="auto_launch_enable_text" msgid="8912714475823807798">"Kai kurios jūsų pasirinktos veiklos atidaromos šioje programoje pagal numatytuosius nustatymus."</string>
     <string name="always_allow_bind_appwidgets_text" msgid="2069415023986858324">"Pasirinkote leisti šiai programai kurti valdiklius ir pasiekti jų duomenis."</string>
     <string name="auto_launch_disable_text" msgid="502648841250936209">"Nenustatyti jokie numatytieji nustatymai."</string>
@@ -2372,7 +2374,7 @@
     <string name="accessibility_text_reading_options_suggestion_title" msgid="2492155642665312733">"Teksto rodymo keitimas"</string>
     <string name="accessibility_text_reading_preview_mail_subject" msgid="4597374768612733616">"Tema: karšto oro balionų dizainas"</string>
     <string name="accessibility_text_reading_preview_mail_from" msgid="1797499780365288020">"Nuo: Bill"</string>
-    <string name="accessibility_text_reading_preview_mail_content" msgid="8078152365771951802">"Labas rytas!\n\nNoriu pasiteirauti, kaip sekasi kurti projektus. Ar jie bus parengti, kol pradėsime kurti naujus balionus?"</string>
+    <string name="accessibility_text_reading_preview_mail_content" msgid="8078152365771951802">"Labas rytas!\n\nNoriu pasiteirauti, kaip sekasi kurti projektus. Ar jie bus parengti, kol pradėsime kurti naujus balionėlius?"</string>
     <string name="accessibility_text_reading_reset_button_title" msgid="5960753279788187669">"Nust. nustatymus iš naujo"</string>
     <string name="accessibility_text_reading_confirm_dialog_title" msgid="2865331351355690389">"Iš naujo nustatyti ekrano dydį ir tekstą?"</string>
     <string name="accessibility_text_reading_confirm_dialog_message" msgid="517090197003540264">"Ekrano dydžio ir teksto nuostatos bus nustatytos iš naujo pagal pradinius telefono nustatymus"</string>
@@ -5224,7 +5226,10 @@
     <string name="do_disclosure_with_name" msgid="867544298924410766">"Šį įrenginį tvarko „<xliff:g id="ORGANIZATION_NAME">%s</xliff:g>“."</string>
     <string name="do_disclosure_learn_more_separator" msgid="5714364437437041671">" "</string>
     <string name="learn_more" msgid="3534519107947510952">"Sužinoti daugiau"</string>
-    <string name="blocked_by_restricted_settings_title" msgid="612784193997454496">"Apriboti nustatymai"</string>
+    <!-- no translation found for blocked_by_restricted_settings_title (7334715011474037399) -->
+    <skip />
+    <!-- no translation found for toast_allows_restricted_settings_successfully (1219116121291466102) -->
+    <skip />
     <string name="blocked_by_restricted_settings_content" msgid="3628660029601161080">"Šis nustatymas šiuo metu nepasiekiamas dėl jūsų saugumo."</string>
     <string name="financed_privacy_settings" msgid="2575114436197204145">"Finansuojamo įrenginio informacija"</string>
     <string name="financed_privacy_intro" msgid="5458393846604867947">"Jūsų kredito teikėjas gali pakeisti nustatymus ir įdiegti programinę įrangą šiame įrenginyje.\n\nJei praleisite mokėjimą, įrenginys bus užrakintas.\n\nJei norite sužinoti daugiau, susisiekite su kredito teikėju."</string>
@@ -5944,12 +5949,9 @@
     <string name="reboot_dialog_reboot_later" msgid="4261717094186904568">"Paleisti iš naujo vėliau"</string>
     <!-- no translation found for bluetooth_details_spatial_audio_title (1368071116994002707) -->
     <skip />
-    <!-- no translation found for bluetooth_details_spatial_audio_summary (5026859623681482668) -->
-    <skip />
-    <!-- no translation found for bluetooth_details_head_tracking_title (5416972521040337799) -->
-    <skip />
-    <!-- no translation found for bluetooth_details_head_tracking_summary (3942238746595985395) -->
-    <skip />
+    <string name="bluetooth_details_spatial_audio_summary" msgid="5026859623681482668">"Kokybiškesnis suderinamos medijos garsas"</string>
+    <string name="bluetooth_details_head_tracking_title" msgid="5416972521040337799">"Galvos stebėjimas"</string>
+    <string name="bluetooth_details_head_tracking_summary" msgid="3942238746595985395">"Garso pakeitimai, kad garsas skambėtų natūraliau judinant galvą"</string>
     <string name="ingress_rate_limit_title" msgid="2106694002836274350">"Tinklo atsisiuntimo rodiklio apribojimas"</string>
     <string name="ingress_rate_limit_summary" msgid="1097811019742438371">"Konfigūruokite tinklo pralaidumo įvesties rodiklio apribojimą, kuris taikomas visiems tinklams, teikiantiems interneto ryšį."</string>
     <string name="ingress_rate_limit_dialog_title" msgid="5359461052422633789">"Konfigūruokite tinklo atsisiuntimo rodiklio apribojimą"</string>
