--- a/res/values-lv/strings.xml
+++ b/res/values-lv/strings.xml
@@ -1927,7 +1927,8 @@
     <string name="module_license_title" msgid="8705484239826702828">"Google Play sistēmas atjauninājumu licences"</string>
     <string name="terms_title" msgid="2071742973672326073">"Pakalpojumu sniegšanas noteikumi"</string>
     <string name="webview_license_title" msgid="5832692241345780517">"Sistēmas WebView licence"</string>
-    <string name="wallpaper_attributions" msgid="3080339190260272255">"Fona tapetes"</string>
+    <!-- no translation found for wallpaper_attributions (4323659759250650736) -->
+    <skip />
     <string name="wallpaper_attributions_values" msgid="987277439026021925">"Satelītuzņēmumu nodrošinātāji:\n©2014 CNES/Astrium, DigitalGlobe, Bluesky"</string>
     <string name="settings_manual_activity_title" msgid="1682978148920788484">"Rokasgrāmata"</string>
     <string name="settings_manual_activity_unavailable" msgid="2514549851682321576">"Radās ar rokasgrāmatas ielādi saistīta problēma."</string>
@@ -2080,7 +2081,8 @@
     <string name="enable_text" msgid="8570798764647110430">"Iespējot"</string>
     <string name="clear_user_data_text" msgid="6773186434260397947">"Notīrīt krātuvi"</string>
     <string name="app_factory_reset" msgid="8974044931667015201">"Atinstalēt atjauninājumus"</string>
-    <string name="app_restricted_settings_lockscreen_title" msgid="7930576126329843435">"Atbloķēt ierobežotos iestatījumus"</string>
+    <!-- no translation found for app_restricted_settings_lockscreen_title (5993061278264872648) -->
+    <skip />
     <string name="auto_launch_enable_text" msgid="8912714475823807798">"Dažas no jūsu atlasītajām darbībām pēc noklusējuma tiks veiktas šajā lietotnē."</string>
     <string name="always_allow_bind_appwidgets_text" msgid="2069415023986858324">"Jūs esat izvēlējies šai lietotnei ļaut veidot logrīkus un piekļūt to datiem."</string>
     <string name="auto_launch_disable_text" msgid="502648841250936209">"Nav iestatīti noklusējumi."</string>
@@ -5142,7 +5144,10 @@
     <string name="do_disclosure_with_name" msgid="867544298924410766">"Šo ierīci pārvalda <xliff:g id="ORGANIZATION_NAME">%s</xliff:g>."</string>
     <string name="do_disclosure_learn_more_separator" msgid="5714364437437041671">" "</string>
     <string name="learn_more" msgid="3534519107947510952">"Uzzināt vairāk"</string>
-    <string name="blocked_by_restricted_settings_title" msgid="612784193997454496">"Ierobežotie iestatījumi"</string>
+    <!-- no translation found for blocked_by_restricted_settings_title (7334715011474037399) -->
+    <skip />
+    <!-- no translation found for toast_allows_restricted_settings_successfully (1219116121291466102) -->
+    <skip />
     <string name="blocked_by_restricted_settings_content" msgid="3628660029601161080">"Drošības apsvērumu dēļ šis iestatījums pašlaik nav pieejams."</string>
     <string name="financed_privacy_settings" msgid="2575114436197204145">"Finansētās ierīces informācija"</string>
     <string name="financed_privacy_intro" msgid="5458393846604867947">"Jūsu kredīta nodrošinātājs var mainīt iestatījumus un instalēt programmatūru šajā ierīcē.\n\nJa laicīgi neveiksiet maksājumu, ierīce tiks bloķēta.\n\nLai uzzinātu vairāk, sazinieties ar kredīta nodrošinātāju."</string>
@@ -5855,12 +5860,9 @@
     <string name="reboot_dialog_reboot_later" msgid="4261717094186904568">"Atkārtoti palaist vēlāk"</string>
     <!-- no translation found for bluetooth_details_spatial_audio_title (1368071116994002707) -->
     <skip />
-    <!-- no translation found for bluetooth_details_spatial_audio_summary (5026859623681482668) -->
-    <skip />
-    <!-- no translation found for bluetooth_details_head_tracking_title (5416972521040337799) -->
-    <skip />
-    <!-- no translation found for bluetooth_details_head_tracking_summary (3942238746595985395) -->
-    <skip />
+    <string name="bluetooth_details_spatial_audio_summary" msgid="5026859623681482668">"Audio no saderīga multivides satura kļūst iekļaujošāks"</string>
+    <string name="bluetooth_details_head_tracking_title" msgid="5416972521040337799">"Galvas izsekošana"</string>
+    <string name="bluetooth_details_head_tracking_summary" msgid="3942238746595985395">"Kustinot galvu, audio mainīsies, lai izklausītos dabiskāk"</string>
     <string name="ingress_rate_limit_title" msgid="2106694002836274350">"Tīkla lejupielādes ātruma ierobežojums"</string>
     <string name="ingress_rate_limit_summary" msgid="1097811019742438371">"Varat konfigurēt tīkla joslas platuma ātruma ierobežojumu ienākošajiem datiem. Tas tiks piemērots visiem tīkliem, kas nodrošina interneta savienojumu."</string>
     <string name="ingress_rate_limit_dialog_title" msgid="5359461052422633789">"Tīkla lejupielādes ātruma ierobežojuma konfigurēšana"</string>
