--- a/res/values-mn/strings.xml
+++ b/res/values-mn/strings.xml
@@ -1905,7 +1905,8 @@
     <string name="module_license_title" msgid="8705484239826702828">"Google Play-н систем шинэчлэлтийн лиценз"</string>
     <string name="terms_title" msgid="2071742973672326073">"Ерөнхий нөхцлүүд"</string>
     <string name="webview_license_title" msgid="5832692241345780517">"Системийн WebView-ийн лиценз"</string>
-    <string name="wallpaper_attributions" msgid="3080339190260272255">"Дэлгэцийн зураг"</string>
+    <!-- no translation found for wallpaper_attributions (4323659759250650736) -->
+    <skip />
     <string name="wallpaper_attributions_values" msgid="987277439026021925">"Сансрын зураг нийлүүлэгчид: \n © 2014 CNES / Astrium, DigitalGlobe, Bluesky"</string>
     <string name="settings_manual_activity_title" msgid="1682978148920788484">"Гар ажиллагаатай"</string>
     <string name="settings_manual_activity_unavailable" msgid="2514549851682321576">"Гар ажиллагааг ачаалах явцад алдаа гарлаа."</string>
@@ -2056,7 +2057,8 @@
     <string name="enable_text" msgid="8570798764647110430">"Идэвхжүүлэх"</string>
     <string name="clear_user_data_text" msgid="6773186434260397947">"Хадгалах санг цэвэрлэх"</string>
     <string name="app_factory_reset" msgid="8974044931667015201">"Шинэчлэлтүүдийг устгах"</string>
-    <string name="app_restricted_settings_lockscreen_title" msgid="7930576126329843435">"Хязгаарлагдсан тохиргооны түгжээг тайлах"</string>
+    <!-- no translation found for app_restricted_settings_lockscreen_title (5993061278264872648) -->
+    <skip />
     <string name="auto_launch_enable_text" msgid="8912714475823807798">"Таны сонгосон зарим үйл ажиллагааг энэ аппад өгөгдмөлөөр нээдэг."</string>
     <string name="always_allow_bind_appwidgets_text" msgid="2069415023986858324">"Та энэ апп-д виджэт үүсгэж өгөгдөлд нь хандалт хийхийг зөвшөөрсөн."</string>
     <string name="auto_launch_disable_text" msgid="502648841250936209">"Үндсэн тохиргоог хийгээгүй."</string>
@@ -3372,8 +3374,7 @@
     <string name="user_summary_managed_profile_not_set_up" msgid="5739207307082458746">"Тохируулаагүй - Ажлын профайл"</string>
     <string name="user_admin" msgid="4024553191395768119">"Админ"</string>
     <string name="user_you" msgid="3070562015202859996">"Та (<xliff:g id="NAME">%s</xliff:g>)"</string>
-    <!-- no translation found for user_add_max_count (3328539978480663740) -->
-    <skip />
+    <string name="user_add_max_count" msgid="3328539978480663740">"Та дахин зураг нэмэх боломжгүй байна. Шинэ хэрэглэгч нэмэхийн тулд хэрэгчлэгч хасна уу."</string>
     <string name="user_cannot_manage_message" product="tablet" msgid="3405022988077682357">"Зөвхөн таблетын эзэмшигч л хэрэглэгчдийг удирдаж болно."</string>
     <string name="user_cannot_manage_message" product="default" msgid="6434662649769855494">"Зөвхөн утасны эзэмшигч л хэрэглэгчдийг удирдаж болно."</string>
     <string name="user_cannot_add_accounts_message" msgid="2351326078338805337">"Хязгаарлагдсан профайлууд бүртгэл нэмэх боломжгүй"</string>
@@ -4399,12 +4400,9 @@
       <item quantity="other">Ашиглаагүй <xliff:g id="COUNT_1">%d</xliff:g> апп</item>
       <item quantity="one">Ашиглаагүй <xliff:g id="COUNT_0">%d</xliff:g> апп</item>
     </plurals>
-    <!-- no translation found for unused_apps_category (8954930958175500851) -->
-    <skip />
-    <!-- no translation found for unused_apps_switch (2979882622987847195) -->
-    <skip />
-    <!-- no translation found for unused_apps_switch_summary (6971069728614582344) -->
-    <skip />
+    <string name="unused_apps_category" msgid="8954930958175500851">"Хэрэглээгүй аппын тохиргоо"</string>
+    <string name="unused_apps_switch" msgid="2979882622987847195">"Аппын үйл ажиллагааг түр зогсоох"</string>
+    <string name="unused_apps_switch_summary" msgid="6971069728614582344">"Зөвшөөрлийг хасаж, түр зуурын файлуудыг устгаж, ашиглаагүй бол мэдэгдлийг зогсооно"</string>
     <string name="filter_all_apps" msgid="6645539744080251371">"Бүх апп"</string>
     <string name="filter_enabled_apps" msgid="8868356616126759124">"Суулгасан апп"</string>
     <string name="filter_instant_apps" msgid="2292108467020380068">"Шуурхай апп"</string>
@@ -5060,7 +5058,10 @@
     <string name="do_disclosure_with_name" msgid="867544298924410766">"Энэ төхөөрөмжийг <xliff:g id="ORGANIZATION_NAME">%s</xliff:g> удирддаг"</string>
     <string name="do_disclosure_learn_more_separator" msgid="5714364437437041671">" "</string>
     <string name="learn_more" msgid="3534519107947510952">"Дэлгэрэнгүй үзэх"</string>
-    <string name="blocked_by_restricted_settings_title" msgid="612784193997454496">"Хязгаарлагдсан тохиргоо"</string>
+    <!-- no translation found for blocked_by_restricted_settings_title (7334715011474037399) -->
+    <skip />
+    <!-- no translation found for toast_allows_restricted_settings_successfully (1219116121291466102) -->
+    <skip />
     <string name="blocked_by_restricted_settings_content" msgid="3628660029601161080">"Таны аюулгүй байдлын үүднээс энэ тохиргоо одоогоор боломжгүй байна."</string>
     <string name="financed_privacy_settings" msgid="2575114436197204145">"Зээлээр авсан төхөөрөмжийн мэдээлэл"</string>
     <string name="financed_privacy_intro" msgid="5458393846604867947">"Таны зээл олгогч энэ төхөөрөмжийн тохиргоог өөрчилж, программ хангамж суулгах боломжтой.\n\nХэрэв та төлбөрөө хоцроосон бол таны төхөөрөмжийг түгжих болно.\n\nНэмэлт мэдээлэл авахын тулд зээлийн үйлчилгээ үзүүлэгчтэйгээ холбогдоно уу."</string>
@@ -5560,10 +5561,8 @@
     <string name="accessor_never_expires_text" msgid="4647624492147788340">"Түрээсийн хугацаа хэзээ ч дуусахгүй."</string>
     <string name="overlay_settings_title" msgid="1032863083496396365">"Тохиргооны дэлгэцэд давхарлахыг зөвшөөрөх"</string>
     <string name="overlay_settings_summary" msgid="2745336273786148166">"Бусад аппын дээр үзүүлэх боломжтой аппуудыг Тохиргооны дэлгэцийг давхарлахыг зөвшөөрөх"</string>
-    <!-- no translation found for allow_mock_modem (3832264806530479214) -->
-    <skip />
-    <!-- no translation found for allow_mock_modem_summary (9097416612748005374) -->
-    <skip />
+    <string name="allow_mock_modem" msgid="3832264806530479214">"Mock Modem-г зөвшөөрөх"</string>
+    <string name="allow_mock_modem_summary" msgid="9097416612748005374">"Энэ төхөөрөмжид хэрэгслийн туршилтын Mock Modem үйлчилгээг ажиллуулахыг зөвшөөрнө үү. Утсыг хэвийн ашиглах үед үүнийг бүү идэвхжүүл"</string>
     <string name="media_controls_title" msgid="403271085636252597">"Медиа"</string>
     <string name="media_controls_resume_title" msgid="855076860336652370">"Медиа тоглуулагчийг бэхлэх"</string>
     <string name="media_controls_resume_description" msgid="3163482266454802097">"Дахин тоглуулахыг шуурхай үргэлжлүүлэхийн тулд медиа тоглуулагч Шуурхай тохиргоонд нээлттэй хэвээр байдаг"</string>
@@ -5649,8 +5648,7 @@
     <string name="app_pinning_main_switch_title" msgid="5465506660064032876">"Апп бэхлэхийг ашиглах"</string>
     <string name="developer_options_main_switch_title" msgid="1720074589554152501">"Хөгжүүлэгчийн тохиргоог ашиглах"</string>
     <string name="default_print_service_main_switch_title" msgid="4697133737128324036">"Хэвлэлийн үйлчилгээ ашиглах"</string>
-    <!-- no translation found for multiple_users_main_switch_title (6686858308083037810) -->
-    <skip />
+    <string name="multiple_users_main_switch_title" msgid="6686858308083037810">"Олон хэрэглэгчийг зөвшөөрөх"</string>
     <string name="wireless_debugging_main_switch_title" msgid="8463499572781441719">"Wireless debugging-г ашиглах"</string>
     <string name="graphics_driver_main_switch_title" msgid="6125172901855813790">"Графикийн драйверын сонголтыг ашиглах"</string>
     <string name="battery_saver_main_switch_title" msgid="5072135547489779352">"Батарей хэмнэгчийг ашиглах"</string>
@@ -5716,12 +5714,9 @@
     <string name="tare_modifiers" msgid="8919975635360280820">"Засварлагчид"</string>
     <string name="tare_actions_ctp" msgid="5110104015354916401">"Үйлдэл (Үйлдвэрлэх зардал)"</string>
     <string name="tare_actions_base_price" msgid="3300967942666376589">"Үйлдэл (Үндсэн үнэ)"</string>
-    <!-- no translation found for tare_rewards_instantaneous (8358683519945340874) -->
-    <skip />
-    <!-- no translation found for tare_rewards_ongoing (8641416948811152109) -->
-    <skip />
-    <!-- no translation found for tare_rewards_max (5283055625642837010) -->
-    <skip />
+    <string name="tare_rewards_instantaneous" msgid="8358683519945340874">"Нэг үйл явдал тутамд урамшуулал"</string>
+    <string name="tare_rewards_ongoing" msgid="8641416948811152109">"Нийт үйл явдлын үргэлжлэх хугацааны урамшуулал"</string>
+    <string name="tare_rewards_max" msgid="5283055625642837010">"Урамшууллын өдрийн дээд хэмжээ"</string>
     <string name="tare_top_activity" msgid="7266560655483385757">"Шилдэг үйл ажиллагаа"</string>
     <string name="tare_notification_seen" msgid="7829963536020087742">"Мэдэгдлийг харсан"</string>
     <string name="tare_notification_seen_15_min" msgid="832174185809497764">"Мэдэгдлийг 15 минутын дотор харсан"</string>
@@ -5752,20 +5747,16 @@
     <string name="dream_preview_button_title" msgid="6637456541851795952">"Урьдчилан үзэх"</string>
     <string name="dream_picker_category" msgid="7726447836872744867">"Дэлгэц амраагчийг сонгох"</string>
     <string name="dream_complications_toggle_title" msgid="4273232303027449163">"Нэмэлт мэдээллийг харуул"</string>
-    <!-- no translation found for dream_complications_toggle_summary (4742579722349951711) -->
-    <skip />
+    <string name="dream_complications_toggle_summary" msgid="4742579722349951711">"Дэлгэц амраагч дээр цаг, огноо, цаг агаар, агаарын чанар, дамжуулалтын дэлгэрэнгүй мэдээллийг харуулаарай"</string>
     <string name="dream_more_settings_category" msgid="3119192146760773748">"Бусад тохиргоо"</string>
-    <!-- no translation found for dream_setup_title (2458303874255396142) -->
-    <skip />
-    <!-- no translation found for dream_setup_description (7508547154038580296) -->
-    <skip />
+    <string name="dream_setup_title" msgid="2458303874255396142">"Дэлгэц амраагчаа сонгох"</string>
+    <string name="dream_setup_description" msgid="7508547154038580296">"Таблетаа холбох үед дэлгэцэн дээр юу харагдахыг сонгоно уу. Дэлгэц амраагч ашиглах үед таны төхөөрөмж илүү их эрчим хүч зарцуулж болзошгүй."</string>
     <string name="customize_button_title" msgid="1110284655990203359">"Өөрчлөх"</string>
     <string name="reboot_dialog_enable_freeform_support" msgid="6412591361284929149">"Чөлөөт хэлбэрийн дэмжлэгийг идэвхжүүлэхийн тулд дахин асаах шаардлагатай."</string>
     <string name="reboot_dialog_force_desktop_mode" msgid="2021839270403432948">"Хоёрдогч дэлгэц дээр дэлгэцийн горимыг хүчлэхийн тулд дахин асаах шаардлагатай."</string>
     <string name="reboot_dialog_reboot_now" msgid="235616015988522355">"Одоо дахин асаах"</string>
     <string name="reboot_dialog_reboot_later" msgid="4261717094186904568">"Дараа дахин асаах"</string>
-    <!-- no translation found for bluetooth_details_spatial_audio_title (1368071116994002707) -->
-    <skip />
+    <string name="bluetooth_details_spatial_audio_title" msgid="1368071116994002707">"Орчны аудио"</string>
     <string name="bluetooth_details_spatial_audio_summary" msgid="5026859623681482668">"Тохиромжтой медианы аудио илүү гайхалтай болно"</string>
     <string name="bluetooth_details_head_tracking_title" msgid="5416972521040337799">"Толгой хянах"</string>
     <string name="bluetooth_details_head_tracking_summary" msgid="3942238746595985395">"Таныг толгойгоо хөдөлгөх үед илүү бодит мэт сонсогдохын тулд аудио өөрчлөгдөнө"</string>
