--- a/res/values-ms/strings.xml
+++ b/res/values-ms/strings.xml
@@ -1905,7 +1905,8 @@
     <string name="module_license_title" msgid="8705484239826702828">"Lesen kemas kini sistem Google Play"</string>
     <string name="terms_title" msgid="2071742973672326073">"Terma dan Syarat"</string>
     <string name="webview_license_title" msgid="5832692241345780517">"Lesen WebView Sistem"</string>
-    <string name="wallpaper_attributions" msgid="3080339190260272255">"Kertas dinding"</string>
+    <!-- no translation found for wallpaper_attributions (4323659759250650736) -->
+    <skip />
     <string name="wallpaper_attributions_values" msgid="987277439026021925">"Pembekal imej satelit:\n©2014 CNES / Astrium, DigitalGlobe, Bluesky"</string>
     <string name="settings_manual_activity_title" msgid="1682978148920788484">"Manual"</string>
     <string name="settings_manual_activity_unavailable" msgid="2514549851682321576">"Terdapat masalah memuatkan manual."</string>
@@ -2056,7 +2057,8 @@
     <string name="enable_text" msgid="8570798764647110430">"Dayakan"</string>
     <string name="clear_user_data_text" msgid="6773186434260397947">"Kosongkan storan"</string>
     <string name="app_factory_reset" msgid="8974044931667015201">"Nyahpasang kemas kini"</string>
-    <string name="app_restricted_settings_lockscreen_title" msgid="7930576126329843435">"Buka kunci tetapan terhad"</string>
+    <!-- no translation found for app_restricted_settings_lockscreen_title (5993061278264872648) -->
+    <skip />
     <string name="auto_launch_enable_text" msgid="8912714475823807798">"Beberapa aktiviti yang anda pilih dibuka dalam apl ini secara lalai."</string>
     <string name="always_allow_bind_appwidgets_text" msgid="2069415023986858324">"Anda telah memilih untuk membenarkan apl ini membuat widget dan mengakses datanya."</string>
     <string name="auto_launch_disable_text" msgid="502648841250936209">"Tiada lalai ditetapkan."</string>
@@ -2324,7 +2326,7 @@
     <string name="accessibility_text_reading_options_suggestion_title" msgid="2492155642665312733">"Tukar cara teks dipaparkan"</string>
     <string name="accessibility_text_reading_preview_mail_subject" msgid="4597374768612733616">"Subjek: Reka bentuk belon udara panas"</string>
     <string name="accessibility_text_reading_preview_mail_from" msgid="1797499780365288020">"Daripada: Bill"</string>
-    <string name="accessibility_text_reading_preview_mail_content" msgid="8078152365771951802">"Selamat pagi!\n\nBoleh saya tahu kemajuan untuk reka bentuk itu? Adakah kandungan akan tersedia sebelum kami mula membuat belon baharu?"</string>
+    <string name="accessibility_text_reading_preview_mail_content" msgid="8078152365771951802">"Selamat pagi!\n\nBoleh saya tahu kemajuan untuk reka bentuk itu? Adakah reka bentuk akan tersedia sebelum kami mula membuat belon baharu?"</string>
     <string name="accessibility_text_reading_reset_button_title" msgid="5960753279788187669">"Tetapkan semula tetapan"</string>
     <string name="accessibility_text_reading_confirm_dialog_title" msgid="2865331351355690389">"Tetapkan semula saiz paparan dan teks?"</string>
     <string name="accessibility_text_reading_confirm_dialog_message" msgid="517090197003540264">"Saiz paparan dan pilihan teks anda akan ditetapkan semula kepada tetapan asal telefon"</string>
@@ -3372,8 +3374,7 @@
     <string name="user_summary_managed_profile_not_set_up" msgid="5739207307082458746">"Tidak disediakan - Profil kerja"</string>
     <string name="user_admin" msgid="4024553191395768119">"Pentadbir"</string>
     <string name="user_you" msgid="3070562015202859996">"Anda (<xliff:g id="NAME">%s</xliff:g>)"</string>
-    <!-- no translation found for user_add_max_count (3328539978480663740) -->
-    <skip />
+    <string name="user_add_max_count" msgid="3328539978480663740">"Anda tidak boleh menambahkan lagi pengguna. Alih keluar pengguna untuk menambah pengguna baharu."</string>
     <string name="user_cannot_manage_message" product="tablet" msgid="3405022988077682357">"Hanya pemilik tablet boleh menguruskan pengguna."</string>
     <string name="user_cannot_manage_message" product="default" msgid="6434662649769855494">"Hanya pemilik telefon boleh menguruskan pengguna."</string>
     <string name="user_cannot_add_accounts_message" msgid="2351326078338805337">"Profil yang disekat tidak boleh menambah akaun"</string>
@@ -4399,12 +4400,9 @@
       <item quantity="other"><xliff:g id="COUNT_1">%d</xliff:g> apl yang tidak digunakan</item>
       <item quantity="one"><xliff:g id="COUNT_0">%d</xliff:g> apl tidak digunakan</item>
     </plurals>
-    <!-- no translation found for unused_apps_category (8954930958175500851) -->
-    <skip />
-    <!-- no translation found for unused_apps_switch (2979882622987847195) -->
-    <skip />
-    <!-- no translation found for unused_apps_switch_summary (6971069728614582344) -->
-    <skip />
+    <string name="unused_apps_category" msgid="8954930958175500851">"Tetapan apl yang tidak digunakan"</string>
+    <string name="unused_apps_switch" msgid="2979882622987847195">"Jeda aktiviti apl"</string>
+    <string name="unused_apps_switch_summary" msgid="6971069728614582344">"Alih keluar kebenaran, padamkan fail sementara dan hentikan pemberitahuan jika tidak digunakan"</string>
     <string name="filter_all_apps" msgid="6645539744080251371">"Semua apl"</string>
     <string name="filter_enabled_apps" msgid="8868356616126759124">"Apl yang dipasang"</string>
     <string name="filter_instant_apps" msgid="2292108467020380068">"Apl segera"</string>
@@ -5060,7 +5058,10 @@
     <string name="do_disclosure_with_name" msgid="867544298924410766">"Peranti ini diurus oleh <xliff:g id="ORGANIZATION_NAME">%s</xliff:g>."</string>
     <string name="do_disclosure_learn_more_separator" msgid="5714364437437041671">" "</string>
     <string name="learn_more" msgid="3534519107947510952">"Ketahui lebih lanjut"</string>
-    <string name="blocked_by_restricted_settings_title" msgid="612784193997454496">"Tetapan Terhad"</string>
+    <!-- no translation found for blocked_by_restricted_settings_title (7334715011474037399) -->
+    <skip />
+    <!-- no translation found for toast_allows_restricted_settings_successfully (1219116121291466102) -->
+    <skip />
     <string name="blocked_by_restricted_settings_content" msgid="3628660029601161080">"Untuk keselamatan anda, tetapan ini tidak tersedia pada masa ini."</string>
     <string name="financed_privacy_settings" msgid="2575114436197204145">"Maklumat peranti dibiaya"</string>
     <string name="financed_privacy_intro" msgid="5458393846604867947">"Pembekal kredit anda boleh mengubah tetapan dan memasang perisian pada peranti ini.\n\nJika anda terlepas pembayaran, peranti anda akan dikunci.\n\nUntuk mengetahui lebih lanjut, hubungi pembekal kredit anda."</string>
@@ -5560,10 +5561,8 @@
     <string name="accessor_never_expires_text" msgid="4647624492147788340">"Sewaan tidak akan tamat tempoh."</string>
     <string name="overlay_settings_title" msgid="1032863083496396365">"Benarkan tindanan skrin pada Tetapan"</string>
     <string name="overlay_settings_summary" msgid="2745336273786148166">"Benarkan apl yang boleh dipaparkan di atas apl lain untuk menindan skrin Tetapan"</string>
-    <!-- no translation found for allow_mock_modem (3832264806530479214) -->
-    <skip />
-    <!-- no translation found for allow_mock_modem_summary (9097416612748005374) -->
-    <skip />
+    <string name="allow_mock_modem" msgid="3832264806530479214">"Benarkan Modem Maya"</string>
+    <string name="allow_mock_modem_summary" msgid="9097416612748005374">"Benarkan peranti ini menjalankan perkhidmatan Modem Maya untuk ujian peralatan. Jangan dayakan tetapan ini semasa penggunaan biasa telefon"</string>
     <string name="media_controls_title" msgid="403271085636252597">"Media"</string>
     <string name="media_controls_resume_title" msgid="855076860336652370">"Sematkan pemain media"</string>
     <string name="media_controls_resume_description" msgid="3163482266454802097">"Untuk menyambung semula main balik dengan pantas, biarkan pemain media kekal terbuka dalam Tetapan Pantas"</string>
@@ -5649,8 +5648,7 @@
     <string name="app_pinning_main_switch_title" msgid="5465506660064032876">"Gunakan penyematan apl"</string>
     <string name="developer_options_main_switch_title" msgid="1720074589554152501">"Gunakan pilihan pembangun"</string>
     <string name="default_print_service_main_switch_title" msgid="4697133737128324036">"Gunakan perkhidmatan cetakan"</string>
-    <!-- no translation found for multiple_users_main_switch_title (6686858308083037810) -->
-    <skip />
+    <string name="multiple_users_main_switch_title" msgid="6686858308083037810">"Benarkan berbilang pengguna"</string>
     <string name="wireless_debugging_main_switch_title" msgid="8463499572781441719">"Gunakan nyahpepijat wayarles"</string>
     <string name="graphics_driver_main_switch_title" msgid="6125172901855813790">"Gunakan pilihan pemacu grafik"</string>
     <string name="battery_saver_main_switch_title" msgid="5072135547489779352">"Gunakan penjimat bateri"</string>
@@ -5716,12 +5714,9 @@
     <string name="tare_modifiers" msgid="8919975635360280820">"Pengubah suai"</string>
     <string name="tare_actions_ctp" msgid="5110104015354916401">"Tindakan (Kos Penghasilan)"</string>
     <string name="tare_actions_base_price" msgid="3300967942666376589">"Tindakan (Harga Asas)"</string>
-    <!-- no translation found for tare_rewards_instantaneous (8358683519945340874) -->
-    <skip />
-    <!-- no translation found for tare_rewards_ongoing (8641416948811152109) -->
-    <skip />
-    <!-- no translation found for tare_rewards_max (5283055625642837010) -->
-    <skip />
+    <string name="tare_rewards_instantaneous" msgid="8358683519945340874">"Ganjaran setiap satu peristiwa"</string>
+    <string name="tare_rewards_ongoing" msgid="8641416948811152109">"Ganjaran untuk jumlah tempoh peristiwa"</string>
+    <string name="tare_rewards_max" msgid="5283055625642837010">"Ganjaran Maksimum Setiap Hari"</string>
     <string name="tare_top_activity" msgid="7266560655483385757">"Aktiviti Popular"</string>
     <string name="tare_notification_seen" msgid="7829963536020087742">"Pemberitahuan Dilihat"</string>
     <string name="tare_notification_seen_15_min" msgid="832174185809497764">"Pemberitahuan Dilihat Dalam 15 Minit"</string>
@@ -5752,26 +5747,19 @@
     <string name="dream_preview_button_title" msgid="6637456541851795952">"Pratonton"</string>
     <string name="dream_picker_category" msgid="7726447836872744867">"Pilih penyelamat skrin"</string>
     <string name="dream_complications_toggle_title" msgid="4273232303027449163">"Tunjukkan maklumat tambahan"</string>
-    <!-- no translation found for dream_complications_toggle_summary (4742579722349951711) -->
-    <skip />
+    <string name="dream_complications_toggle_summary" msgid="4742579722349951711">"Paparkan masa, tarikh, cuaca, kualiti udara dan butiran Kas pada penyelamat skrin"</string>
     <string name="dream_more_settings_category" msgid="3119192146760773748">"Lagi tetapan"</string>
-    <!-- no translation found for dream_setup_title (2458303874255396142) -->
-    <skip />
-    <!-- no translation found for dream_setup_description (7508547154038580296) -->
-    <skip />
+    <string name="dream_setup_title" msgid="2458303874255396142">"Pilih penyelamat skrin anda"</string>
+    <string name="dream_setup_description" msgid="7508547154038580296">"Pilih perkara yang akan anda lihat pada skrin apabila tablet anda didok. Peranti anda mungkin menggunakan lebih banyak tenaga apabila penyelamat skrin digunakan."</string>
     <string name="customize_button_title" msgid="1110284655990203359">"Sesuaikan"</string>
     <string name="reboot_dialog_enable_freeform_support" msgid="6412591361284929149">"But semula diperlukan untuk mendayakan sokongan bentuk bebas."</string>
     <string name="reboot_dialog_force_desktop_mode" msgid="2021839270403432948">"But semula diperlukan untuk memaksa mod desktop pada paparan sekunder."</string>
     <string name="reboot_dialog_reboot_now" msgid="235616015988522355">"But semula sekarang"</string>
     <string name="reboot_dialog_reboot_later" msgid="4261717094186904568">"But semula kemudian"</string>
-    <!-- no translation found for bluetooth_details_spatial_audio_title (1368071116994002707) -->
-    <skip />
-    <!-- no translation found for bluetooth_details_spatial_audio_summary (5026859623681482668) -->
-    <skip />
-    <!-- no translation found for bluetooth_details_head_tracking_title (5416972521040337799) -->
-    <skip />
-    <!-- no translation found for bluetooth_details_head_tracking_summary (3942238746595985395) -->
-    <skip />
+    <string name="bluetooth_details_spatial_audio_title" msgid="1368071116994002707">"Audio Ruang"</string>
+    <string name="bluetooth_details_spatial_audio_summary" msgid="5026859623681482668">"Audio daripada media yang serasi menjadi lebih mengasyikkan"</string>
+    <string name="bluetooth_details_head_tracking_title" msgid="5416972521040337799">"Penjejakan kepala"</string>
+    <string name="bluetooth_details_head_tracking_summary" msgid="3942238746595985395">"Audio berubah apabila anda menggerakkan kepala anda untuk kedengaran lebih semula jadi"</string>
     <string name="ingress_rate_limit_title" msgid="2106694002836274350">"Had kadar muat turun rangkaian"</string>
     <string name="ingress_rate_limit_summary" msgid="1097811019742438371">"Konfigurasikan had kadar kemasukan lebar jalur rangkaian yang digunakan pada semua rangkaian yang menyediakan kesambungan Internet."</string>
     <string name="ingress_rate_limit_dialog_title" msgid="5359461052422633789">"Konfigurasikan had kadar muat turun rangkaian"</string>
