--- a/res/values-nb/strings.xml
+++ b/res/values-nb/strings.xml
@@ -1905,7 +1905,8 @@
     <string name="module_license_title" msgid="8705484239826702828">"Google Play-system: oppdateringslisenser"</string>
     <string name="terms_title" msgid="2071742973672326073">"Betingelser"</string>
     <string name="webview_license_title" msgid="5832692241345780517">"System WebView License"</string>
-    <string name="wallpaper_attributions" msgid="3080339190260272255">"Bakgrunner"</string>
+    <!-- no translation found for wallpaper_attributions (4323659759250650736) -->
+    <skip />
     <string name="wallpaper_attributions_values" msgid="987277439026021925">"Leverandører av satellittbilder:\n©2014 CNES / Astrium, DigitalGlobe, Bluesky"</string>
     <string name="settings_manual_activity_title" msgid="1682978148920788484">"Brukerveiledning"</string>
     <string name="settings_manual_activity_unavailable" msgid="2514549851682321576">"Det oppsto et problem ved innlasting av brukerveiledningen."</string>
@@ -2056,7 +2057,8 @@
     <string name="enable_text" msgid="8570798764647110430">"Aktivér"</string>
     <string name="clear_user_data_text" msgid="6773186434260397947">"Tøm lagring"</string>
     <string name="app_factory_reset" msgid="8974044931667015201">"Avinstaller oppdateringer"</string>
-    <string name="app_restricted_settings_lockscreen_title" msgid="7930576126329843435">"Lås opp begrensede innstillinger"</string>
+    <!-- no translation found for app_restricted_settings_lockscreen_title (5993061278264872648) -->
+    <skip />
     <string name="auto_launch_enable_text" msgid="8912714475823807798">"Noen aktiviteter du har valgt, åpnes som standard i denne appen."</string>
     <string name="always_allow_bind_appwidgets_text" msgid="2069415023986858324">"Du har valgt å tillate at denne appen oppretter moduler og leser moduldataene."</string>
     <string name="auto_launch_disable_text" msgid="502648841250936209">"Ingen standardvalg er angitt."</string>
@@ -5060,7 +5062,10 @@
     <string name="do_disclosure_with_name" msgid="867544298924410766">"Denne enheten administreres av <xliff:g id="ORGANIZATION_NAME">%s</xliff:g>."</string>
     <string name="do_disclosure_learn_more_separator" msgid="5714364437437041671">" "</string>
     <string name="learn_more" msgid="3534519107947510952">"Finn ut mer"</string>
-    <string name="blocked_by_restricted_settings_title" msgid="612784193997454496">"Begrensede innstillinger"</string>
+    <!-- no translation found for blocked_by_restricted_settings_title (7334715011474037399) -->
+    <skip />
+    <!-- no translation found for toast_allows_restricted_settings_successfully (1219116121291466102) -->
+    <skip />
     <string name="blocked_by_restricted_settings_content" msgid="3628660029601161080">"Av hensyn til sikkerheten er denne innstillingen utilgjengelig for øyeblikket."</string>
     <string name="financed_privacy_settings" msgid="2575114436197204145">"Informasjon om finansiert enhet"</string>
     <string name="financed_privacy_intro" msgid="5458393846604867947">"Kredittleverandøren din kan endre innstillinger og installere programvare på denne enheten.\n\nEnheten din blir låst hvis du ikke betaler avdragene.\n\nFor å finne ut mer, kontakt kredittleverandøren."</string>
@@ -5766,12 +5771,9 @@
     <string name="reboot_dialog_reboot_later" msgid="4261717094186904568">"Start på nytt senere"</string>
     <!-- no translation found for bluetooth_details_spatial_audio_title (1368071116994002707) -->
     <skip />
-    <!-- no translation found for bluetooth_details_spatial_audio_summary (5026859623681482668) -->
-    <skip />
-    <!-- no translation found for bluetooth_details_head_tracking_title (5416972521040337799) -->
-    <skip />
-    <!-- no translation found for bluetooth_details_head_tracking_summary (3942238746595985395) -->
-    <skip />
+    <string name="bluetooth_details_spatial_audio_summary" msgid="5026859623681482668">"Lyd fra kompatible enheter blir mer omsluttende"</string>
+    <string name="bluetooth_details_head_tracking_title" msgid="5416972521040337799">"Hodesporing"</string>
+    <string name="bluetooth_details_head_tracking_summary" msgid="3942238746595985395">"Lyden endres når du beveger hodet, slik at den høres mer naturlig ut"</string>
     <string name="ingress_rate_limit_title" msgid="2106694002836274350">"Grense for nedlastingshastighet for nettverket"</string>
     <string name="ingress_rate_limit_summary" msgid="1097811019742438371">"Konfigurer grensen for innkommende båndbredde i nettverket, som benyttes for alle nettverk som gir internettilkobling."</string>
     <string name="ingress_rate_limit_dialog_title" msgid="5359461052422633789">"Konfigurer grensen for nedlastingshastighet for nettverket"</string>
