--- a/res/values-or/strings.xml
+++ b/res/values-or/strings.xml
@@ -1905,7 +1905,8 @@
     <string name="module_license_title" msgid="8705484239826702828">"Google Play ସିଷ୍ଟମ୍ ଅପ୍‌ଡେଟ୍ ଲାଇସେନ୍ସଗୁଡ଼ିକ"</string>
     <string name="terms_title" msgid="2071742973672326073">"ନିୟମ ଓ ସର୍ତ୍ତାବଳୀ"</string>
     <string name="webview_license_title" msgid="5832692241345780517">"ସିଷ୍ଟମ୍‌ ୱେବ୍‌‌ଭ୍ୟୁ ଲାଇସେନ୍ସ"</string>
-    <string name="wallpaper_attributions" msgid="3080339190260272255">"ୱାଲ୍‌ପେପର୍‌"</string>
+    <!-- no translation found for wallpaper_attributions (4323659759250650736) -->
+    <skip />
     <string name="wallpaper_attributions_values" msgid="987277439026021925">"ସ୍ୟାଟେଲାଇଟ୍‌ ଇମେଜେରୀ ପ୍ରଦାତା:\n©2014 CNES / Astrium, DigitalGlobe, Bluesky"</string>
     <string name="settings_manual_activity_title" msgid="1682978148920788484">"ମାନୁଆଲ୍‌"</string>
     <string name="settings_manual_activity_unavailable" msgid="2514549851682321576">"ମାନୁଆଲ୍‌ ଲୋଡ୍ କରାଯିବାରେ ସମସ୍ୟା ଅଛି।"</string>
@@ -2056,7 +2057,8 @@
     <string name="enable_text" msgid="8570798764647110430">"ସକ୍ଷମ କରନ୍ତୁ"</string>
     <string name="clear_user_data_text" msgid="6773186434260397947">"ଷ୍ଟୋରେଜ୍‌ ଖାଲି କରନ୍ତୁ"</string>
     <string name="app_factory_reset" msgid="8974044931667015201">"ଅପ୍‌ଡେଟ୍‌ଗୁଡ଼ିକୁ ଅନ୍ଇ‌ନଷ୍ଟଲ୍‌ କରନ୍ତୁ"</string>
-    <string name="app_restricted_settings_lockscreen_title" msgid="7930576126329843435">"ପ୍ରତିବନ୍ଧିତ ସେଟିଂସକୁ ଅନଲକ କରନ୍ତୁ"</string>
+    <!-- no translation found for app_restricted_settings_lockscreen_title (5993061278264872648) -->
+    <skip />
     <string name="auto_launch_enable_text" msgid="8912714475823807798">"ଏହି ଆପରେ ଡିଫଲ୍ଟ ଭାବରେ ଆପଣ ଚୟନ କରିଥିବା କିଛି କାର୍ଯ୍ୟକଳାପ।"</string>
     <string name="always_allow_bind_appwidgets_text" msgid="2069415023986858324">"ୱିଜେଟ୍‌ ତିଆରି କରିବା ଏବଂ ସେଗୁଡ଼ିକର ଡାଟା ଆକ୍ସେସ୍‌ କରିବା ପାଇଁ ଏହି ଆପ୍‌କୁ ଅନୁମତି ଦେବାକୁ ଆପଣ ବାଛିଛନ୍ତି।"</string>
     <string name="auto_launch_disable_text" msgid="502648841250936209">"କୌଣସି ଡିଫଲ୍ଟ ସେଟ୍‍ ହୋଇନାହିଁ।"</string>
@@ -5060,7 +5062,10 @@
     <string name="do_disclosure_with_name" msgid="867544298924410766">"ଏହି ଡିଭାଇସ୍‌ <xliff:g id="ORGANIZATION_NAME">%s</xliff:g> ଦ୍ୱାରା ପରିଚାଳିତ ହେଉଛି।"</string>
     <string name="do_disclosure_learn_more_separator" msgid="5714364437437041671">" "</string>
     <string name="learn_more" msgid="3534519107947510952">"ଅଧିକ ଜାଣନ୍ତୁ"</string>
-    <string name="blocked_by_restricted_settings_title" msgid="612784193997454496">"ପ୍ରତିବନ୍ଧିତ ସେଟିଂସ"</string>
+    <!-- no translation found for blocked_by_restricted_settings_title (7334715011474037399) -->
+    <skip />
+    <!-- no translation found for toast_allows_restricted_settings_successfully (1219116121291466102) -->
+    <skip />
     <string name="blocked_by_restricted_settings_content" msgid="3628660029601161080">"ଆପଣଙ୍କ ସୁରକ୍ଷା ପାଇଁ ଏହି ସେଟିଂ ବର୍ତ୍ତମାନ ଅନୁପଲବ୍ଧ ଅଛି।"</string>
     <string name="financed_privacy_settings" msgid="2575114436197204145">"ଫାଇନାନ୍ସଡ୍ ଡିଭାଇସ୍ ସୂଚନା"</string>
     <string name="financed_privacy_intro" msgid="5458393846604867947">"ଆପଣଙ୍କ କ୍ରେଡିଟ ପ୍ରଦାନକାରୀ ଏହି ଡିଭାଇସରେ ସେଟିଂସ ପରିବର୍ତ୍ତନ ଏବଂ ସଫ୍ଟୱେର ଇନଷ୍ଟଲ କରିପାରିବେ।\n\nଯଦି ଆପଣ କୌଣସି ପେମେଣ୍ଟ ହରାନ୍ତି, ତେବେ ଆପଣଙ୍କ ଡିଭାଇସ ଲକ ହୋଇଯିବ।\n\nଅଧିକ ଜାଣିବାକୁ, ଆପଣଙ୍କ କ୍ରେଡିଟ ପ୍ରଦାନକାରୀ ସହ ଯୋଗାଯୋଗ କରନ୍ତୁ।"</string>
@@ -5766,12 +5771,9 @@
     <string name="reboot_dialog_reboot_later" msgid="4261717094186904568">"ପରେ ରିବୁଟ କରନ୍ତୁ"</string>
     <!-- no translation found for bluetooth_details_spatial_audio_title (1368071116994002707) -->
     <skip />
-    <!-- no translation found for bluetooth_details_spatial_audio_summary (5026859623681482668) -->
-    <skip />
-    <!-- no translation found for bluetooth_details_head_tracking_title (5416972521040337799) -->
-    <skip />
-    <!-- no translation found for bluetooth_details_head_tracking_summary (3942238746595985395) -->
-    <skip />
+    <string name="bluetooth_details_spatial_audio_summary" msgid="5026859623681482668">"କମ୍ପାଟିବଲ ମିଡିଆରୁ ଆସିଥିବା ଅଡିଓ ଅଧିକ ଇମରସିଭ ହୋଇଥାଏ"</string>
+    <string name="bluetooth_details_head_tracking_title" msgid="5416972521040337799">"ହେଡ ଟ୍ରାକିଂ"</string>
+    <string name="bluetooth_details_head_tracking_summary" msgid="3942238746595985395">"ସାଉଣ୍ଡକୁ ଅଧିକ ସ୍ୱାଭାବିକ କରିବା ପାଇଁ ଆପଣ ଆପଣଙ୍କ ମୁଣ୍ଡକୁ ମୁଭ କରିବା ସମୟରେ ଅଡିଓ ପରିବର୍ତ୍ତନ ହୁଏ"</string>
     <string name="ingress_rate_limit_title" msgid="2106694002836274350">"ନେଟୱାର୍କ ଡାଉନଲୋଡ ରେଟ ସୀମା"</string>
     <string name="ingress_rate_limit_summary" msgid="1097811019742438371">"ଇଣ୍ଟରନେଟ ସଂଯୋଗ ପ୍ରଦାନ କରୁଥିବା ସମସ୍ତ ନେଟୱାର୍କରେ ଲାଗୁ ହେଉଥିବା ନେଟୱାର୍କ ବ୍ୟାଣ୍ଡୱିଡଥ ଇନଗ୍ରେସ ରେଟ ସୀମାକୁ କନଫିଗର କରନ୍ତୁ।"</string>
     <string name="ingress_rate_limit_dialog_title" msgid="5359461052422633789">"ନେଟୱାର୍କ ଡାଉନଲୋଡ ରେଟ ସୀମାକୁ କନଫିଗର କରନ୍ତୁ"</string>
