--- a/res/values-sr/strings.xml
+++ b/res/values-sr/strings.xml
@@ -1927,7 +1927,8 @@
     <string name="module_license_title" msgid="8705484239826702828">"Лиценце за ажурирање система за Google Play"</string>
     <string name="terms_title" msgid="2071742973672326073">"Услови и одредбе"</string>
     <string name="webview_license_title" msgid="5832692241345780517">"Лиценца за системски WebView"</string>
-    <string name="wallpaper_attributions" msgid="3080339190260272255">"Позадине"</string>
+    <!-- no translation found for wallpaper_attributions (4323659759250650736) -->
+    <skip />
     <string name="wallpaper_attributions_values" msgid="987277439026021925">"Добављачи сателитских слика:\n©2014 CNES/Astrium, DigitalGlobe, Bluesky"</string>
     <string name="settings_manual_activity_title" msgid="1682978148920788484">"Упутство"</string>
     <string name="settings_manual_activity_unavailable" msgid="2514549851682321576">"Дошло је до проблема при учитавању упутства."</string>
@@ -2080,7 +2081,8 @@
     <string name="enable_text" msgid="8570798764647110430">"Омогући"</string>
     <string name="clear_user_data_text" msgid="6773186434260397947">"Обриши меморијски простор"</string>
     <string name="app_factory_reset" msgid="8974044931667015201">"Деинсталирај ажурирања"</string>
-    <string name="app_restricted_settings_lockscreen_title" msgid="7930576126329843435">"Откључајте ограничена подешавања"</string>
+    <!-- no translation found for app_restricted_settings_lockscreen_title (5993061278264872648) -->
+    <skip />
     <string name="auto_launch_enable_text" msgid="8912714475823807798">"Неке активности које сте изабрали се подразумевано отварају у овој апликацији."</string>
     <string name="always_allow_bind_appwidgets_text" msgid="2069415023986858324">"Изабрали сте да дозволите овој апликацији да прави виџете и приступа њиховим подацима."</string>
     <string name="auto_launch_disable_text" msgid="502648841250936209">"Нису постављене подразумеване вредности."</string>
@@ -3416,8 +3418,7 @@
     <string name="user_summary_managed_profile_not_set_up" msgid="5739207307082458746">"Није подешено – пословни профил"</string>
     <string name="user_admin" msgid="4024553191395768119">"Администратор"</string>
     <string name="user_you" msgid="3070562015202859996">"Ви (<xliff:g id="NAME">%s</xliff:g>)"</string>
-    <!-- no translation found for user_add_max_count (3328539978480663740) -->
-    <skip />
+    <string name="user_add_max_count" msgid="3328539978480663740">"Не можете да додате још корисника. Уклоните неког корисника да бисте додали новог."</string>
     <string name="user_cannot_manage_message" product="tablet" msgid="3405022988077682357">"Само власник таблета може да управља корисницима."</string>
     <string name="user_cannot_manage_message" product="default" msgid="6434662649769855494">"Само власник телефона може да управља корисницима."</string>
     <string name="user_cannot_add_accounts_message" msgid="2351326078338805337">"Ограничени профили не могу да додају налоге"</string>
@@ -4462,12 +4463,9 @@
       <item quantity="few"><xliff:g id="COUNT_1">%d</xliff:g> апликације које се не користе</item>
       <item quantity="other"><xliff:g id="COUNT_1">%d</xliff:g> апликација које се не користе</item>
     </plurals>
-    <!-- no translation found for unused_apps_category (8954930958175500851) -->
-    <skip />
-    <!-- no translation found for unused_apps_switch (2979882622987847195) -->
-    <skip />
-    <!-- no translation found for unused_apps_switch_summary (6971069728614582344) -->
-    <skip />
+    <string name="unused_apps_category" msgid="8954930958175500851">"Подешавања некоришћених апликација"</string>
+    <string name="unused_apps_switch" msgid="2979882622987847195">"Паузирај активност апликације"</string>
+    <string name="unused_apps_switch_summary" msgid="6971069728614582344">"Уклоните дозволе, избришите привремене фајлове и зауставите обавештења ако се не користе"</string>
     <string name="filter_all_apps" msgid="6645539744080251371">"Све апликације"</string>
     <string name="filter_enabled_apps" msgid="8868356616126759124">"Инсталиране апликације"</string>
     <string name="filter_instant_apps" msgid="2292108467020380068">"Инстант апликације"</string>
@@ -5142,7 +5140,10 @@
     <string name="do_disclosure_with_name" msgid="867544298924410766">"Овим уређајем управља <xliff:g id="ORGANIZATION_NAME">%s</xliff:g>."</string>
     <string name="do_disclosure_learn_more_separator" msgid="5714364437437041671">" "</string>
     <string name="learn_more" msgid="3534519107947510952">"Сазнајте више"</string>
-    <string name="blocked_by_restricted_settings_title" msgid="612784193997454496">"Ограничена подешавања"</string>
+    <!-- no translation found for blocked_by_restricted_settings_title (7334715011474037399) -->
+    <skip />
+    <!-- no translation found for toast_allows_restricted_settings_successfully (1219116121291466102) -->
+    <skip />
     <string name="blocked_by_restricted_settings_content" msgid="3628660029601161080">"Ово подешавање је тренутно недоступно ради ваше безбедности."</string>
     <string name="financed_privacy_settings" msgid="2575114436197204145">"Информације о финансираном уређају"</string>
     <string name="financed_privacy_intro" msgid="5458393846604867947">"Добављач кредита може да мења подешавања и инсталира софтвер на овом уређају.\n\nАко пропустите плаћање, уређај ће се закључати.\n\nДа бисте сазнали више, обратите се добављачу кредита."</string>
@@ -5649,10 +5650,8 @@
     <string name="accessor_never_expires_text" msgid="4647624492147788340">"Закуп никада не истиче."</string>
     <string name="overlay_settings_title" msgid="1032863083496396365">"Дозволи прекривање садржаја екрана Подешавања"</string>
     <string name="overlay_settings_summary" msgid="2745336273786148166">"Апликације које могу да се приказују преко других апликација прекривају садржај екрана Подешавања"</string>
-    <!-- no translation found for allow_mock_modem (3832264806530479214) -->
-    <skip />
-    <!-- no translation found for allow_mock_modem_summary (9097416612748005374) -->
-    <skip />
+    <string name="allow_mock_modem" msgid="3832264806530479214">"Дозволите лажни модем"</string>
+    <string name="allow_mock_modem_summary" msgid="9097416612748005374">"Желите ли да дозволите овом уређају да покрене услугу лажног модема за тест инструментације. Немојте омогућавати током нормалне употребе телефона"</string>
     <string name="media_controls_title" msgid="403271085636252597">"Медији"</string>
     <string name="media_controls_resume_title" msgid="855076860336652370">"Закачи медија плејер"</string>
     <string name="media_controls_resume_description" msgid="3163482266454802097">"Да бисте брзо наставили репродукцију, медија плејер остаје отворен у Брзим подешавањима"</string>
@@ -5738,8 +5737,7 @@
     <string name="app_pinning_main_switch_title" msgid="5465506660064032876">"Користи качење апликација"</string>
     <string name="developer_options_main_switch_title" msgid="1720074589554152501">"Користи опције за програмера"</string>
     <string name="default_print_service_main_switch_title" msgid="4697133737128324036">"Користите услугу штампања"</string>
-    <!-- no translation found for multiple_users_main_switch_title (6686858308083037810) -->
-    <skip />
+    <string name="multiple_users_main_switch_title" msgid="6686858308083037810">"Дозволите више корисника"</string>
     <string name="wireless_debugging_main_switch_title" msgid="8463499572781441719">"Користи бежично отклањање грешака"</string>
     <string name="graphics_driver_main_switch_title" msgid="6125172901855813790">"Користи подешавања управљачког програма за графику"</string>
     <string name="battery_saver_main_switch_title" msgid="5072135547489779352">"Користи уштеду батерије"</string>
@@ -5805,12 +5803,9 @@
     <string name="tare_modifiers" msgid="8919975635360280820">"Модификатори"</string>
     <string name="tare_actions_ctp" msgid="5110104015354916401">"Радње (цена спровођења)"</string>
     <string name="tare_actions_base_price" msgid="3300967942666376589">"Радње (основна цена)"</string>
-    <!-- no translation found for tare_rewards_instantaneous (8358683519945340874) -->
-    <skip />
-    <!-- no translation found for tare_rewards_ongoing (8641416948811152109) -->
-    <skip />
-    <!-- no translation found for tare_rewards_max (5283055625642837010) -->
-    <skip />
+    <string name="tare_rewards_instantaneous" msgid="8358683519945340874">"Награде за један догађај"</string>
+    <string name="tare_rewards_ongoing" msgid="8641416948811152109">"Награде за укупно трајање догађаја"</string>
+    <string name="tare_rewards_max" msgid="5283055625642837010">"Максимално награда дневно"</string>
     <string name="tare_top_activity" msgid="7266560655483385757">"Највећа активност"</string>
     <string name="tare_notification_seen" msgid="7829963536020087742">"Обавештење је прегледано"</string>
     <string name="tare_notification_seen_15_min" msgid="832174185809497764">"Обавештење је прегледано за 15 минута"</string>
@@ -5841,26 +5836,19 @@
     <string name="dream_preview_button_title" msgid="6637456541851795952">"Прикажи"</string>
     <string name="dream_picker_category" msgid="7726447836872744867">"Одаберите чувар екрана"</string>
     <string name="dream_complications_toggle_title" msgid="4273232303027449163">"Приказуј додатне информације"</string>
-    <!-- no translation found for dream_complications_toggle_summary (4742579722349951711) -->
-    <skip />
+    <string name="dream_complications_toggle_summary" msgid="4742579722349951711">"Прикажите време, датум, временске услове, квалитет ваздуха и Cast детаље на чувару екрана"</string>
     <string name="dream_more_settings_category" msgid="3119192146760773748">"Још подешавања"</string>
-    <!-- no translation found for dream_setup_title (2458303874255396142) -->
-    <skip />
-    <!-- no translation found for dream_setup_description (7508547154038580296) -->
-    <skip />
+    <string name="dream_setup_title" msgid="2458303874255396142">"Изаберите чувар екрана"</string>
+    <string name="dream_setup_description" msgid="7508547154038580296">"Изаберите шта ћете видети на екрану када је таблет на базној станици. Уређај може да троши више енергије када се користи чувар екрана."</string>
     <string name="customize_button_title" msgid="1110284655990203359">"Прилагодите"</string>
     <string name="reboot_dialog_enable_freeform_support" msgid="6412591361284929149">"Морате да рестартујете да бисте омогућили подршку за слободан облик."</string>
     <string name="reboot_dialog_force_desktop_mode" msgid="2021839270403432948">"Морате да рестартујете да бисте принудно омогућили режим за рачунаре на секундарним екранима."</string>
     <string name="reboot_dialog_reboot_now" msgid="235616015988522355">"Рестартуј"</string>
     <string name="reboot_dialog_reboot_later" msgid="4261717094186904568">"Рестартуј касније"</string>
-    <!-- no translation found for bluetooth_details_spatial_audio_title (1368071116994002707) -->
-    <skip />
-    <!-- no translation found for bluetooth_details_spatial_audio_summary (5026859623681482668) -->
-    <skip />
-    <!-- no translation found for bluetooth_details_head_tracking_title (5416972521040337799) -->
-    <skip />
-    <!-- no translation found for bluetooth_details_head_tracking_summary (3942238746595985395) -->
-    <skip />
+    <string name="bluetooth_details_spatial_audio_title" msgid="1368071116994002707">"Просторни звук"</string>
+    <string name="bluetooth_details_spatial_audio_summary" msgid="5026859623681482668">"Звук компатибилних медија постаје реалистичнији"</string>
+    <string name="bluetooth_details_head_tracking_title" msgid="5416972521040337799">"Праћење главе"</string>
+    <string name="bluetooth_details_head_tracking_summary" msgid="3942238746595985395">"Звук се мења како померате главу да би деловао природније"</string>
     <string name="ingress_rate_limit_title" msgid="2106694002836274350">"Ограничење брзине преузимања на мрежи"</string>
     <string name="ingress_rate_limit_summary" msgid="1097811019742438371">"Конфигуришите ограничење брзине долазног пропусног опсега мреже које се примењује на све мреже које пружају интернет везу."</string>
     <string name="ingress_rate_limit_dialog_title" msgid="5359461052422633789">"Конфигуришите ограничење брзине преузимања на мрежи"</string>
