--- a/res/values-sv/strings.xml
+++ b/res/values-sv/strings.xml
@@ -1905,7 +1905,8 @@
     <string name="module_license_title" msgid="8705484239826702828">"Licenser för systemuppdateringar för Google Play"</string>
     <string name="terms_title" msgid="2071742973672326073">"Användarvillkor"</string>
     <string name="webview_license_title" msgid="5832692241345780517">"Systemets WebView-licens"</string>
-    <string name="wallpaper_attributions" msgid="3080339190260272255">"Bakgrunder"</string>
+    <!-- no translation found for wallpaper_attributions (4323659759250650736) -->
+    <skip />
     <string name="wallpaper_attributions_values" msgid="987277439026021925">"Satellitbildsleverantörer:\n©2014 CNES / Astrium, DigitalGlobe, Bluesky"</string>
     <string name="settings_manual_activity_title" msgid="1682978148920788484">"Handbok"</string>
     <string name="settings_manual_activity_unavailable" msgid="2514549851682321576">"Ett problem inträffade när handboken lästes in."</string>
@@ -2056,7 +2057,8 @@
     <string name="enable_text" msgid="8570798764647110430">"Aktivera"</string>
     <string name="clear_user_data_text" msgid="6773186434260397947">"Rensa lagringsutrymme"</string>
     <string name="app_factory_reset" msgid="8974044931667015201">"Avinstallera uppdateringar"</string>
-    <string name="app_restricted_settings_lockscreen_title" msgid="7930576126329843435">"Lås upp spärrade inställningar"</string>
+    <!-- no translation found for app_restricted_settings_lockscreen_title (5993061278264872648) -->
+    <skip />
     <string name="auto_launch_enable_text" msgid="8912714475823807798">"Vissa aktiviteter som du har valt öppnas i den här appen som standard."</string>
     <string name="always_allow_bind_appwidgets_text" msgid="2069415023986858324">"Du har valt att tillåta att den här appen skapar widgetar och får åtkomst till apparnas data."</string>
     <string name="auto_launch_disable_text" msgid="502648841250936209">"Inga standardinställningar har angetts."</string>
@@ -2324,7 +2326,7 @@
     <string name="accessibility_text_reading_options_suggestion_title" msgid="2492155642665312733">"Ändra hur text visas"</string>
     <string name="accessibility_text_reading_preview_mail_subject" msgid="4597374768612733616">"Ämne: Utformning av varmluftsballonger"</string>
     <string name="accessibility_text_reading_preview_mail_from" msgid="1797499780365288020">"Från: Kalle"</string>
-    <string name="accessibility_text_reading_preview_mail_content" msgid="8078152365771951802">"God morgon!\n\nJag ville bara kolla hur det går med ritningarna. Blir de färdiga innan vi börjar bygga de nya ballongerna?"</string>
+    <string name="accessibility_text_reading_preview_mail_content" msgid="8078152365771951802">"God morgon!\n\nJag ville bara kolla hur det går med designerna. Blir de färdiga innan vi börjar bygga de nya bubblorna?"</string>
     <string name="accessibility_text_reading_reset_button_title" msgid="5960753279788187669">"Återställ inställningar"</string>
     <string name="accessibility_text_reading_confirm_dialog_title" msgid="2865331351355690389">"Vill du återställa skärmstorlek och text?"</string>
     <string name="accessibility_text_reading_confirm_dialog_message" msgid="517090197003540264">"Inställningarna för skärmstorlek och text återställs till telefonens standardinställningar"</string>
@@ -5060,7 +5062,10 @@
     <string name="do_disclosure_with_name" msgid="867544298924410766">"Den här enheten hanteras av <xliff:g id="ORGANIZATION_NAME">%s</xliff:g>."</string>
     <string name="do_disclosure_learn_more_separator" msgid="5714364437437041671">" "</string>
     <string name="learn_more" msgid="3534519107947510952">"Läs mer"</string>
-    <string name="blocked_by_restricted_settings_title" msgid="612784193997454496">"Spärrade inställningar"</string>
+    <!-- no translation found for blocked_by_restricted_settings_title (7334715011474037399) -->
+    <skip />
+    <!-- no translation found for toast_allows_restricted_settings_successfully (1219116121291466102) -->
+    <skip />
     <string name="blocked_by_restricted_settings_content" msgid="3628660029601161080">"Av säkerhetsskäl är den här inställningen inte tillgänglig för närvarande."</string>
     <string name="financed_privacy_settings" msgid="2575114436197204145">"Information om finansierad enhet"</string>
     <string name="financed_privacy_intro" msgid="5458393846604867947">"Långivaren kan ändra inställningar och installera programvara på enheten.\n\nOm en av dina betalningar uteblir låses enheten.\n\nKontakta långivaren om du vill veta mer."</string>
@@ -5766,12 +5771,9 @@
     <string name="reboot_dialog_reboot_later" msgid="4261717094186904568">"Starta om senare"</string>
     <!-- no translation found for bluetooth_details_spatial_audio_title (1368071116994002707) -->
     <skip />
-    <!-- no translation found for bluetooth_details_spatial_audio_summary (5026859623681482668) -->
-    <skip />
-    <!-- no translation found for bluetooth_details_head_tracking_title (5416972521040337799) -->
-    <skip />
-    <!-- no translation found for bluetooth_details_head_tracking_summary (3942238746595985395) -->
-    <skip />
+    <string name="bluetooth_details_spatial_audio_summary" msgid="5026859623681482668">"Ljud från kompatibel media blir mer uppslukande"</string>
+    <string name="bluetooth_details_head_tracking_title" msgid="5416972521040337799">"Huvudspårning"</string>
+    <string name="bluetooth_details_head_tracking_summary" msgid="3942238746595985395">"Ljudet ändras när du rör på huvudet för att låta mer naturligt"</string>
     <string name="ingress_rate_limit_title" msgid="2106694002836274350">"Gräns för nedladdningshastighet i nätverket"</string>
     <string name="ingress_rate_limit_summary" msgid="1097811019742438371">"Konfigurera den inkommande bandbredden i nätverket som ska gälla för alla nätverk med internetanslutning."</string>
     <string name="ingress_rate_limit_dialog_title" msgid="5359461052422633789">"Konfigurera gräns för nedladdningshastighet i nätverket"</string>
