--- a/res/values-tl/strings.xml
+++ b/res/values-tl/strings.xml
@@ -1905,7 +1905,8 @@
     <string name="module_license_title" msgid="8705484239826702828">"Lisensya ng pag-update ng system ng Google Play"</string>
     <string name="terms_title" msgid="2071742973672326073">"Mga Tuntunin at kondisyon"</string>
     <string name="webview_license_title" msgid="5832692241345780517">"Lisensya ng System WebView"</string>
-    <string name="wallpaper_attributions" msgid="3080339190260272255">"Mga Wallpaper"</string>
+    <!-- no translation found for wallpaper_attributions (4323659759250650736) -->
+    <skip />
     <string name="wallpaper_attributions_values" msgid="987277439026021925">"Mga provider ng koleksyon ng imahe na galing sa satellite:\n©2014 CNES / Astrium, DigitalGlobe, Bluesky"</string>
     <string name="settings_manual_activity_title" msgid="1682978148920788484">"Manual"</string>
     <string name="settings_manual_activity_unavailable" msgid="2514549851682321576">"Nagkakaproblema sa paglo-load sa manual."</string>
@@ -2056,7 +2057,8 @@
     <string name="enable_text" msgid="8570798764647110430">"Paganahin"</string>
     <string name="clear_user_data_text" msgid="6773186434260397947">"I-clear ang storage"</string>
     <string name="app_factory_reset" msgid="8974044931667015201">"I-uninstall ang mga pag-update"</string>
-    <string name="app_restricted_settings_lockscreen_title" msgid="7930576126329843435">"I-unlock ang mga pinaghihigpitang setting"</string>
+    <!-- no translation found for app_restricted_settings_lockscreen_title (5993061278264872648) -->
+    <skip />
     <string name="auto_launch_enable_text" msgid="8912714475823807798">"Nagbubukas sa app na ito bilang default ang ilan sa mga napili mong aktibidad."</string>
     <string name="always_allow_bind_appwidgets_text" msgid="2069415023986858324">"Pinili mong payagan ang app na ito na lumikha ng mga widget at i-access ang data ng mga ito."</string>
     <string name="auto_launch_disable_text" msgid="502648841250936209">"Walang nakatakdang mga default."</string>
@@ -3372,8 +3374,7 @@
     <string name="user_summary_managed_profile_not_set_up" msgid="5739207307082458746">"Hindi naka-set up - Profile sa trabaho"</string>
     <string name="user_admin" msgid="4024553191395768119">"Admin"</string>
     <string name="user_you" msgid="3070562015202859996">"Ikaw (<xliff:g id="NAME">%s</xliff:g>)"</string>
-    <!-- no translation found for user_add_max_count (3328539978480663740) -->
-    <skip />
+    <string name="user_add_max_count" msgid="3328539978480663740">"Hindi ka na makakapagdagdag ng higit pang user. Mag-alis ng user para makapagdagdag ng bago."</string>
     <string name="user_cannot_manage_message" product="tablet" msgid="3405022988077682357">"Ang may-ari lang ng tablet ang maaaring mamahala ng mga user."</string>
     <string name="user_cannot_manage_message" product="default" msgid="6434662649769855494">"Ang may-ari lang ng telepono ang maaaring mamahala ng mga user."</string>
     <string name="user_cannot_add_accounts_message" msgid="2351326078338805337">"Hindi makakapagdagdag ng mga account sa mga pinaghihigpitang profile"</string>
@@ -4399,12 +4400,9 @@
       <item quantity="one"><xliff:g id="COUNT_1">%d</xliff:g> hindi ginagamit na app</item>
       <item quantity="other"><xliff:g id="COUNT_1">%d</xliff:g> na hindi ginagamit na app</item>
     </plurals>
-    <!-- no translation found for unused_apps_category (8954930958175500851) -->
-    <skip />
-    <!-- no translation found for unused_apps_switch (2979882622987847195) -->
-    <skip />
-    <!-- no translation found for unused_apps_switch_summary (6971069728614582344) -->
-    <skip />
+    <string name="unused_apps_category" msgid="8954930958175500851">"Mga setting ng hindi ginagamit na app"</string>
+    <string name="unused_apps_switch" msgid="2979882622987847195">"I-pause ang aktibidad ng app"</string>
+    <string name="unused_apps_switch_summary" msgid="6971069728614582344">"Alisin ang mga pahintulot, i-delete ang mga pansamantalang file, at ihinto ang mga notification kung hindi ginagamit"</string>
     <string name="filter_all_apps" msgid="6645539744080251371">"Lahat ng app"</string>
     <string name="filter_enabled_apps" msgid="8868356616126759124">"Mga naka-install na app"</string>
     <string name="filter_instant_apps" msgid="2292108467020380068">"Mga instant na app"</string>
@@ -5060,7 +5058,10 @@
     <string name="do_disclosure_with_name" msgid="867544298924410766">"Pinamamahalaan ng <xliff:g id="ORGANIZATION_NAME">%s</xliff:g> ang device na ito."</string>
     <string name="do_disclosure_learn_more_separator" msgid="5714364437437041671">" "</string>
     <string name="learn_more" msgid="3534519107947510952">"Matuto pa"</string>
-    <string name="blocked_by_restricted_settings_title" msgid="612784193997454496">"Mga Pinaghihigpitang Setting"</string>
+    <!-- no translation found for blocked_by_restricted_settings_title (7334715011474037399) -->
+    <skip />
+    <!-- no translation found for toast_allows_restricted_settings_successfully (1219116121291466102) -->
+    <skip />
     <string name="blocked_by_restricted_settings_content" msgid="3628660029601161080">"Para sa iyong seguridad, hindi available ang setting na ito sa ngayon."</string>
     <string name="financed_privacy_settings" msgid="2575114436197204145">"Impormasyon ng pinopondohang device"</string>
     <string name="financed_privacy_intro" msgid="5458393846604867947">"Mababago ng iyong credit provider ang mga setting at makakapag-install ito ng software sa device na ito.\n\nKung may mapalampas kang bayad, mala-lock ang device mo.\n\nPara matuto pa, makipag-ugnayan sa iyong credit provider."</string>
@@ -5560,10 +5561,8 @@
     <string name="accessor_never_expires_text" msgid="4647624492147788340">"Hindi kailanman nag-e-expire ang lease."</string>
     <string name="overlay_settings_title" msgid="1032863083496396365">"Payagan ang pag-overlay sa screen sa Mga Setting"</string>
     <string name="overlay_settings_summary" msgid="2745336273786148166">"Payagang mag-overlay sa mga screen ng Mga Setting ang mga app na puwedeng lumabas sa ibabaw ng ibang app"</string>
-    <!-- no translation found for allow_mock_modem (3832264806530479214) -->
-    <skip />
-    <!-- no translation found for allow_mock_modem_summary (9097416612748005374) -->
-    <skip />
+    <string name="allow_mock_modem" msgid="3832264806530479214">"Payagan ang Mock Modem"</string>
+    <string name="allow_mock_modem_summary" msgid="9097416612748005374">"Payagan ang device na ito para patakbuhin ang serbisyo ng Mock Modem para sa instrumentation testing. Huwag itong i-enable sa panahon ng karaniwang paggamit ng telepono"</string>
     <string name="media_controls_title" msgid="403271085636252597">"Media"</string>
     <string name="media_controls_resume_title" msgid="855076860336652370">"I-pin ang media player"</string>
     <string name="media_controls_resume_description" msgid="3163482266454802097">"Para mabilis na maipagpatuloy ang pag-playback, mananatiling bukas ang media player sa Mga Mabilisang Setting"</string>
@@ -5649,8 +5648,7 @@
     <string name="app_pinning_main_switch_title" msgid="5465506660064032876">"Gamitin ang pag-pin ng app"</string>
     <string name="developer_options_main_switch_title" msgid="1720074589554152501">"Gamitin ang mga opsyon ng developer"</string>
     <string name="default_print_service_main_switch_title" msgid="4697133737128324036">"Gamitin ang serbisyo ng pag-print"</string>
-    <!-- no translation found for multiple_users_main_switch_title (6686858308083037810) -->
-    <skip />
+    <string name="multiple_users_main_switch_title" msgid="6686858308083037810">"Payagan ang maraming user"</string>
     <string name="wireless_debugging_main_switch_title" msgid="8463499572781441719">"Gamitin ang wireless na pag-debug"</string>
     <string name="graphics_driver_main_switch_title" msgid="6125172901855813790">"Gamitin ang mga kagustuhan sa graphics driver"</string>
     <string name="battery_saver_main_switch_title" msgid="5072135547489779352">"Gamitin ang pantipid ng baterya"</string>
@@ -5716,12 +5714,9 @@
     <string name="tare_modifiers" msgid="8919975635360280820">"Mga Modifier"</string>
     <string name="tare_actions_ctp" msgid="5110104015354916401">"Mga Pagkilos (Halaga ng Paggawa)"</string>
     <string name="tare_actions_base_price" msgid="3300967942666376589">"Mga Pagkilos (Batayang Presyo)"</string>
-    <!-- no translation found for tare_rewards_instantaneous (8358683519945340874) -->
-    <skip />
-    <!-- no translation found for tare_rewards_ongoing (8641416948811152109) -->
-    <skip />
-    <!-- no translation found for tare_rewards_max (5283055625642837010) -->
-    <skip />
+    <string name="tare_rewards_instantaneous" msgid="8358683519945340874">"Mga reward sa bawat iisang event"</string>
+    <string name="tare_rewards_ongoing" msgid="8641416948811152109">"Mga reward sa kabuuang tagal ng event"</string>
+    <string name="tare_rewards_max" msgid="5283055625642837010">"Maximum na Reward Kada Araw"</string>
     <string name="tare_top_activity" msgid="7266560655483385757">"Nangungunang Aktibidad"</string>
     <string name="tare_notification_seen" msgid="7829963536020087742">"Nakita ang Notification"</string>
     <string name="tare_notification_seen_15_min" msgid="832174185809497764">"Nakita ang Notification sa loob ng 15Min"</string>
@@ -5752,20 +5747,16 @@
     <string name="dream_preview_button_title" msgid="6637456541851795952">"Preview"</string>
     <string name="dream_picker_category" msgid="7726447836872744867">"Pumili ng screen saver"</string>
     <string name="dream_complications_toggle_title" msgid="4273232303027449163">"Magpakita ng karagdagang impormasyon"</string>
-    <!-- no translation found for dream_complications_toggle_summary (4742579722349951711) -->
-    <skip />
+    <string name="dream_complications_toggle_summary" msgid="4742579722349951711">"Ipakita ang oras, petsa, lagay ng panahon, kalidad ng hangin, at mga detalye ng Cast sa screen saver"</string>
     <string name="dream_more_settings_category" msgid="3119192146760773748">"Higit pang setting"</string>
-    <!-- no translation found for dream_setup_title (2458303874255396142) -->
-    <skip />
-    <!-- no translation found for dream_setup_description (7508547154038580296) -->
-    <skip />
+    <string name="dream_setup_title" msgid="2458303874255396142">"Piliin ang iyong screen saver"</string>
+    <string name="dream_setup_description" msgid="7508547154038580296">"Piliin ang makikita mo sa iyong screen kapag naka-dock ang iyong tablet. Posibleng gumamit ng mas maraming enerhiya ang iyong device kapag gumagamit ng screen saver."</string>
     <string name="customize_button_title" msgid="1110284655990203359">"I-customize"</string>
     <string name="reboot_dialog_enable_freeform_support" msgid="6412591361284929149">"Kinakailangang mag-reboot para ma-enable ang freeform na suporta"</string>
     <string name="reboot_dialog_force_desktop_mode" msgid="2021839270403432948">"Kinakailangang mag-reboot para sapilitang mailapat ang desktop mode sa mga pangalawang display."</string>
     <string name="reboot_dialog_reboot_now" msgid="235616015988522355">"Mag-reboot ngayon"</string>
     <string name="reboot_dialog_reboot_later" msgid="4261717094186904568">"Mag-reboot sa ibang pagkakataon"</string>
-    <!-- no translation found for bluetooth_details_spatial_audio_title (1368071116994002707) -->
-    <skip />
+    <string name="bluetooth_details_spatial_audio_title" msgid="1368071116994002707">"Spatial Audio"</string>
     <string name="bluetooth_details_spatial_audio_summary" msgid="5026859623681482668">"Nagiging mas immersive ang audio mula sa compatible na media"</string>
     <string name="bluetooth_details_head_tracking_title" msgid="5416972521040337799">"Pag-track ng ulo"</string>
     <string name="bluetooth_details_head_tracking_summary" msgid="3942238746595985395">"Nagbabago ang audio habang iginagalaw mo ang iyong ulo para maging mas natural ang tunog"</string>
