--- a/res/values-tr/strings.xml
+++ b/res/values-tr/strings.xml
@@ -1905,7 +1905,8 @@
     <string name="module_license_title" msgid="8705484239826702828">"Google Play sistem güncelleme lisansları"</string>
     <string name="terms_title" msgid="2071742973672326073">"Şartlar ve koşullar"</string>
     <string name="webview_license_title" msgid="5832692241345780517">"Sistem Web Görünümü Lisansı"</string>
-    <string name="wallpaper_attributions" msgid="3080339190260272255">"Duvar kağıtları"</string>
+    <!-- no translation found for wallpaper_attributions (4323659759250650736) -->
+    <skip />
     <string name="wallpaper_attributions_values" msgid="987277439026021925">"Uydu görüntüleri sağlayıcıları:\n©2014 CNES / Astrium, DigitalGlobe, Bluesky"</string>
     <string name="settings_manual_activity_title" msgid="1682978148920788484">"Manuel"</string>
     <string name="settings_manual_activity_unavailable" msgid="2514549851682321576">"Kılavuzun yüklenmesiyle ilgili bir sorun var."</string>
@@ -2056,7 +2057,8 @@
     <string name="enable_text" msgid="8570798764647110430">"Etkinleştir"</string>
     <string name="clear_user_data_text" msgid="6773186434260397947">"Depolama alanını temizle"</string>
     <string name="app_factory_reset" msgid="8974044931667015201">"Güncellemeleri kaldır"</string>
-    <string name="app_restricted_settings_lockscreen_title" msgid="7930576126329843435">"Kısıtlanmış ayarların kilidini açma"</string>
+    <!-- no translation found for app_restricted_settings_lockscreen_title (5993061278264872648) -->
+    <skip />
     <string name="auto_launch_enable_text" msgid="8912714475823807798">"Seçtiğiniz bazı etkinlikler varsayılan olarak bu uygulamada açılır."</string>
     <string name="always_allow_bind_appwidgets_text" msgid="2069415023986858324">"Bu uygulamanın widget oluşturmasına ve oluşturulan widget\'ların verilerine erişmesine izin vermeyi seçtiniz."</string>
     <string name="auto_launch_disable_text" msgid="502648841250936209">"Hiçbir varsayılan ayarlanmadı."</string>
@@ -5060,7 +5062,10 @@
     <string name="do_disclosure_with_name" msgid="867544298924410766">"Bu cihaz <xliff:g id="ORGANIZATION_NAME">%s</xliff:g> tarafından yönetiliyor."</string>
     <string name="do_disclosure_learn_more_separator" msgid="5714364437437041671">" "</string>
     <string name="learn_more" msgid="3534519107947510952">"Daha fazla bilgi"</string>
-    <string name="blocked_by_restricted_settings_title" msgid="612784193997454496">"Kısıtlanmış Ayarlar"</string>
+    <!-- no translation found for blocked_by_restricted_settings_title (7334715011474037399) -->
+    <skip />
+    <!-- no translation found for toast_allows_restricted_settings_successfully (1219116121291466102) -->
+    <skip />
     <string name="blocked_by_restricted_settings_content" msgid="3628660029601161080">"Güvenliğiniz için bu ayar şu anda kullanılamıyor."</string>
     <string name="financed_privacy_settings" msgid="2575114436197204145">"Finanse edilen cihaz bilgisi"</string>
     <string name="financed_privacy_intro" msgid="5458393846604867947">"Sözleşmeli cihaz sağlayıcınız bu cihazda ayarları değiştirip yazılım yükleyebilir.\n\nÖdemelerden birini yapmazsanız cihazınız kilitlenir.\n\nDaha fazla bilgi için sözleşmeli cihaz sağlayıcınızla iletişime geçin."</string>
@@ -5766,12 +5771,9 @@
     <string name="reboot_dialog_reboot_later" msgid="4261717094186904568">"Sonra yeniden başlat"</string>
     <!-- no translation found for bluetooth_details_spatial_audio_title (1368071116994002707) -->
     <skip />
-    <!-- no translation found for bluetooth_details_spatial_audio_summary (5026859623681482668) -->
-    <skip />
-    <!-- no translation found for bluetooth_details_head_tracking_title (5416972521040337799) -->
-    <skip />
-    <!-- no translation found for bluetooth_details_head_tracking_summary (3942238746595985395) -->
-    <skip />
+    <string name="bluetooth_details_spatial_audio_summary" msgid="5026859623681482668">"Uyumlu medyadaki sesler daha yoğun gelir"</string>
+    <string name="bluetooth_details_head_tracking_title" msgid="5416972521040337799">"Kafa hareketi izleme"</string>
+    <string name="bluetooth_details_head_tracking_summary" msgid="3942238746595985395">"Ses, kulağa daha doğal gelmesi için kafanızı hareket ettirdikçe değişir"</string>
     <string name="ingress_rate_limit_title" msgid="2106694002836274350">"Ağ indirme sıklık sınırı"</string>
     <string name="ingress_rate_limit_summary" msgid="1097811019742438371">"İnternet bağlantısı sağlayan tüm ağlarda geçerli ağ bant genişliği giriş sıklık sınırını yapılandırın."</string>
     <string name="ingress_rate_limit_dialog_title" msgid="5359461052422633789">"Ağ indirme sıklık sınırını yapılandırın"</string>
