--- a/res/values-ur/strings.xml
+++ b/res/values-ur/strings.xml
@@ -1905,7 +1905,8 @@
     <string name="module_license_title" msgid="8705484239826702828">"‏Google Play سسٹم اپ ڈیٹ لائسنسز"</string>
     <string name="terms_title" msgid="2071742973672326073">"شرائط و ضوابط"</string>
     <string name="webview_license_title" msgid="5832692241345780517">"‏سسٹم WebView کا لائسنس"</string>
-    <string name="wallpaper_attributions" msgid="3080339190260272255">"وال پیپرز"</string>
+    <!-- no translation found for wallpaper_attributions (4323659759250650736) -->
+    <skip />
     <string name="wallpaper_attributions_values" msgid="987277439026021925">"‏سیٹلائٹ تصاویر کے فراہم کنندگان:\n©2014 CNES / Astrium, DigitalGlobe, Bluesky"</string>
     <string name="settings_manual_activity_title" msgid="1682978148920788484">"مینوئل"</string>
     <string name="settings_manual_activity_unavailable" msgid="2514549851682321576">"مینوئل لوڈ کرنے میں ایک مسئلہ ہے۔"</string>
@@ -2056,7 +2057,8 @@
     <string name="enable_text" msgid="8570798764647110430">"فعال کریں"</string>
     <string name="clear_user_data_text" msgid="6773186434260397947">"اسٹوریج صاف کریں"</string>
     <string name="app_factory_reset" msgid="8974044931667015201">"اپ ڈیٹس اَن انسٹال کریں"</string>
-    <string name="app_restricted_settings_lockscreen_title" msgid="7930576126329843435">"محدود کردہ ترتیب کو غیر مقفل کریں"</string>
+    <!-- no translation found for app_restricted_settings_lockscreen_title (5993061278264872648) -->
+    <skip />
     <string name="auto_launch_enable_text" msgid="8912714475823807798">"آپ کی منتخب کردہ کچھ سرگرمیاں اس ایپ میں بطور ڈیفالٹ کھلتی ہیں۔"</string>
     <string name="always_allow_bind_appwidgets_text" msgid="2069415023986858324">"ویجیٹس بنانے اور ان کے ڈیٹا تک رسائی حاصل کرنے کیلئے آپ نے اس ایپ کو اجازت دینے کو منتخب کیا ہے۔"</string>
     <string name="auto_launch_disable_text" msgid="502648841250936209">"کوئی ڈیفالٹس سیٹ نہیں ہیں۔"</string>
@@ -2324,7 +2326,7 @@
     <string name="accessibility_text_reading_options_suggestion_title" msgid="2492155642665312733">"ٹیکسٹ کے ڈسپلے کرنے کا طریقہ تبدیل کریں"</string>
     <string name="accessibility_text_reading_preview_mail_subject" msgid="4597374768612733616">"موضوع: گرم ہوا کے غباروں کے ڈیزائنز"</string>
     <string name="accessibility_text_reading_preview_mail_from" msgid="1797499780365288020">"فارم: بل"</string>
-    <string name="accessibility_text_reading_preview_mail_content" msgid="8078152365771951802">"صبح بخیر!\n\nمیں صرف یہ دیکھنا چاہتا تھا کہ ڈیزائن کیسے آ رہے ہیں۔ کیا وہ نئے غبارے بنانا شروع کرنے سے پہلے تیار ہو جائیں گے؟"</string>
+    <string name="accessibility_text_reading_preview_mail_content" msgid="8078152365771951802">"صبح بخیر!\n\nمیں صرف یہ دیکھنا چاہتا تھا کہ کیسے ڈیزائنز تیار ہو رہے ہیں۔ کیا وہ ہمارے نئے غبارے بنانا شروع کرنے سے پہلے تیار ہو جائیں گے؟"</string>
     <string name="accessibility_text_reading_reset_button_title" msgid="5960753279788187669">"ترتیبات کو ری سیٹ کریں"</string>
     <string name="accessibility_text_reading_confirm_dialog_title" msgid="2865331351355690389">"ڈسپلے کا سائز اور ٹیکسٹ کو ری سیٹ کریں؟"</string>
     <string name="accessibility_text_reading_confirm_dialog_message" msgid="517090197003540264">"آپ کے ڈسپلے کا سائز اور ٹیکسٹ کی ترجیحات فون کی اصل ترتیبات پر ری سیٹ ہو جائیں گی"</string>
@@ -5060,7 +5062,10 @@
     <string name="do_disclosure_with_name" msgid="867544298924410766">"یہ آلہ <xliff:g id="ORGANIZATION_NAME">%s</xliff:g> کے زیر انتظام ہے۔"</string>
     <string name="do_disclosure_learn_more_separator" msgid="5714364437437041671">" "</string>
     <string name="learn_more" msgid="3534519107947510952">"مزید جانیں"</string>
-    <string name="blocked_by_restricted_settings_title" msgid="612784193997454496">"محدود کردہ ترتیبات"</string>
+    <!-- no translation found for blocked_by_restricted_settings_title (7334715011474037399) -->
+    <skip />
+    <!-- no translation found for toast_allows_restricted_settings_successfully (1219116121291466102) -->
+    <skip />
     <string name="blocked_by_restricted_settings_content" msgid="3628660029601161080">"آپ کی سیکیورٹی کے لیے، یہ ترتیب فی الحال دستیاب نہیں ہے۔"</string>
     <string name="financed_privacy_settings" msgid="2575114436197204145">"مالی تعاون یافتہ آلے کی معلومات"</string>
     <string name="financed_privacy_intro" msgid="5458393846604867947">"آپ کا کریڈٹ فراہم کنندہ ترتیبات کو تبدیل اور اس آلے پر سافٹ ویئر انسٹال کر سکتا ہے۔\n\nاگر آپ سے ادائیگی چھوٹ جاتی ہے تو آپ کا آلہ مقفل ہو جائے گا۔\n\nمزید جاننے کے لیے، اپنے کریڈٹ فراہم کنندہ سے رابطہ کریں۔"</string>
@@ -5766,12 +5771,9 @@
     <string name="reboot_dialog_reboot_later" msgid="4261717094186904568">"بعد میں ریبوٹ کریں"</string>
     <!-- no translation found for bluetooth_details_spatial_audio_title (1368071116994002707) -->
     <skip />
-    <!-- no translation found for bluetooth_details_spatial_audio_summary (5026859623681482668) -->
-    <skip />
-    <!-- no translation found for bluetooth_details_head_tracking_title (5416972521040337799) -->
-    <skip />
-    <!-- no translation found for bluetooth_details_head_tracking_summary (3942238746595985395) -->
-    <skip />
+    <string name="bluetooth_details_spatial_audio_summary" msgid="5026859623681482668">"موافق میڈیا سے آڈیو کا مزید دلچسپ تجربہ فراہم ہوتا ہے"</string>
+    <string name="bluetooth_details_head_tracking_title" msgid="5416972521040337799">"سر کی ٹریکنگ"</string>
+    <string name="bluetooth_details_head_tracking_summary" msgid="3942238746595985395">"خود کو زیادہ فطری دکھانے کے لیے اپنے سر کو حرکت دیتے ہی آڈیو تبدیل ہو جاتی ہے"</string>
     <string name="ingress_rate_limit_title" msgid="2106694002836274350">"نیٹ ورک ڈاؤن لوڈ کرنے کی شرح کی حد"</string>
     <string name="ingress_rate_limit_summary" msgid="1097811019742438371">"نیٹ ورک بینڈ وڈتھ انگریس کی شرح کی حد کو کنفیگر کریں جو انٹرنیٹ کنیکٹویٹی فراہم کرنے والے تمام نیٹ ورکس پر لاگو ہوتی ہے۔"</string>
     <string name="ingress_rate_limit_dialog_title" msgid="5359461052422633789">"نیٹ ورک ڈاؤن لوڈ کرنے کی شرح کی حد کو کنفیگر کریں"</string>
