--- a/res/values-zu/strings.xml
+++ b/res/values-zu/strings.xml
@@ -1906,7 +1906,8 @@
     <string name="module_license_title" msgid="8705484239826702828">"Amalayisense esibuyekezo sesistimu ye-Google Play"</string>
     <string name="terms_title" msgid="2071742973672326073">"Imigomo nemibandela"</string>
     <string name="webview_license_title" msgid="5832692241345780517">"Ilayisense yesistimu ye-WebView"</string>
-    <string name="wallpaper_attributions" msgid="3080339190260272255">"Izithombe zangemuva"</string>
+    <!-- no translation found for wallpaper_attributions (4323659759250650736) -->
+    <skip />
     <string name="wallpaper_attributions_values" msgid="987277439026021925">"Abanikezeli bezithombe zesathelayithi:\n©2014 CNES / Astrium, DigitalGlobe, Bluesky"</string>
     <string name="settings_manual_activity_title" msgid="1682978148920788484">"Ngokulawulwa"</string>
     <string name="settings_manual_activity_unavailable" msgid="2514549851682321576">"Kunenkinga yokulayisha imanuwali."</string>
@@ -2057,7 +2058,8 @@
     <string name="enable_text" msgid="8570798764647110430">"Vumela"</string>
     <string name="clear_user_data_text" msgid="6773186434260397947">"Sula isitoreji"</string>
     <string name="app_factory_reset" msgid="8974044931667015201">"Khipha izibuyekezo"</string>
-    <string name="app_restricted_settings_lockscreen_title" msgid="7930576126329843435">"Vula amasethingi akhawulelwe"</string>
+    <!-- no translation found for app_restricted_settings_lockscreen_title (5993061278264872648) -->
+    <skip />
     <string name="auto_launch_enable_text" msgid="8912714475823807798">"Eminye imisebenzi oyikhethile ivuleka kule app ngokuzenzakalelayo."</string>
     <string name="always_allow_bind_appwidgets_text" msgid="2069415023986858324">"Uvumele loluhlelo lokusebenza ukuthi lwenze amawijethi nokuthi kufinyelelwe kwidatha yawo."</string>
     <string name="auto_launch_disable_text" msgid="502648841250936209">"Akukho okuzenzakalelayo okusethiwe."</string>
@@ -3373,8 +3375,7 @@
     <string name="user_summary_managed_profile_not_set_up" msgid="5739207307082458746">"Ayisethiwe - Iphrofayela yomsebenzi"</string>
     <string name="user_admin" msgid="4024553191395768119">"Mqondisi"</string>
     <string name="user_you" msgid="3070562015202859996">"Wena (<xliff:g id="NAME">%s</xliff:g>)"</string>
-    <!-- no translation found for user_add_max_count (3328539978480663740) -->
-    <skip />
+    <string name="user_add_max_count" msgid="3328539978480663740">"Awukazi ukwengeza abanye abasebenzisi. Susa umsebenzisi ukuze wengeze omusha."</string>
     <string name="user_cannot_manage_message" product="tablet" msgid="3405022988077682357">"Umnikazi wethebhulethi kuphela ongaphatha abasebenzisi"</string>
     <string name="user_cannot_manage_message" product="default" msgid="6434662649769855494">"Umnikazi wefoni kuphela ongaphatha abasebenzisi."</string>
     <string name="user_cannot_add_accounts_message" msgid="2351326078338805337">"Amaphrofayela akhawulelwe awakwazi ukungeza ama-akhawunti"</string>
@@ -4400,12 +4401,9 @@
       <item quantity="one">ama-unused app <xliff:g id="COUNT_1">%d</xliff:g></item>
       <item quantity="other">ama-unused app <xliff:g id="COUNT_1">%d</xliff:g></item>
     </plurals>
-    <!-- no translation found for unused_apps_category (8954930958175500851) -->
-    <skip />
-    <!-- no translation found for unused_apps_switch (2979882622987847195) -->
-    <skip />
-    <!-- no translation found for unused_apps_switch_summary (6971069728614582344) -->
-    <skip />
+    <string name="unused_apps_category" msgid="8954930958175500851">"Amasethingi we-app engasetshenziswanga"</string>
+    <string name="unused_apps_switch" msgid="2979882622987847195">"Misa okwesikhashana umsebenzi we-app"</string>
+    <string name="unused_apps_switch_summary" msgid="6971069728614582344">"Susa izimvume, sula amafayela wesikhashana, futhi umise izaziso uma zingasetshenziswa"</string>
     <string name="filter_all_apps" msgid="6645539744080251371">"Zonke izinhlelo zokusebenza"</string>
     <string name="filter_enabled_apps" msgid="8868356616126759124">"Izinhlelo zokusebenza ezifakiwe"</string>
     <string name="filter_instant_apps" msgid="2292108467020380068">"Izinhlelo zokusebenza ezisheshayo"</string>
@@ -5061,7 +5059,10 @@
     <string name="do_disclosure_with_name" msgid="867544298924410766">"Le divayisi iphethwe yi-<xliff:g id="ORGANIZATION_NAME">%s</xliff:g>."</string>
     <string name="do_disclosure_learn_more_separator" msgid="5714364437437041671">" "</string>
     <string name="learn_more" msgid="3534519107947510952">"Funda kabanzi"</string>
-    <string name="blocked_by_restricted_settings_title" msgid="612784193997454496">"Amasethingi Akhawulelwe"</string>
+    <!-- no translation found for blocked_by_restricted_settings_title (7334715011474037399) -->
+    <skip />
+    <!-- no translation found for toast_allows_restricted_settings_successfully (1219116121291466102) -->
+    <skip />
     <string name="blocked_by_restricted_settings_content" msgid="3628660029601161080">"Ngokuphepha kwakho, leli sethingi okwamanje alitholakali."</string>
     <string name="financed_privacy_settings" msgid="2575114436197204145">"Ulwazi lwedivayisi oluhlinzekwe ngemali"</string>
     <string name="financed_privacy_intro" msgid="5458393846604867947">"Umhlinzeki wakho wekhredithi angashintsha amasethingi futhi afake isofthiwe kule divayisi.\n\nUma ugeja inkokhelo, idivayisi yakho izokhiywa.\n\nUkuze ufunde kabanzi, xhumana nomhlinzeki wakho wekhredithi."</string>
@@ -5561,10 +5562,8 @@
     <string name="accessor_never_expires_text" msgid="4647624492147788340">"Isivumelwano sokuqasha asiphelelwa isikhathi."</string>
     <string name="overlay_settings_title" msgid="1032863083496396365">"Vumela ukumbozwa kwesikrini kokuthi Amasethingi"</string>
     <string name="overlay_settings_summary" msgid="2745336273786148166">"Vumela izinhlelo zokusebenza ezingabonisa ngaphezulu kwezinye izinhlelo zokusebenza ukumboza izikrini zokuthi Amasethingi"</string>
-    <!-- no translation found for allow_mock_modem (3832264806530479214) -->
-    <skip />
-    <!-- no translation found for allow_mock_modem_summary (9097416612748005374) -->
-    <skip />
+    <string name="allow_mock_modem" msgid="3832264806530479214">"Vumela Imodemu ye-Mock"</string>
+    <string name="allow_mock_modem_summary" msgid="9097416612748005374">"Vumela le divayisi ukuthi iqalise isevisi Yemodemu ye-Mock ukuze uhlole izinsimbi. Ungakuniki amandla lokhu ngesikhathi sokusetshenziswa okuvamile kwefoni"</string>
     <string name="media_controls_title" msgid="403271085636252597">"Imidiya"</string>
     <string name="media_controls_resume_title" msgid="855076860336652370">"Phina i-media player"</string>
     <string name="media_controls_resume_description" msgid="3163482266454802097">"Ukuze uqalise kabusha ngokushesha ukudlala, i-media player ihlala ivuliwe Kumasethingi asheshayo"</string>
@@ -5650,8 +5649,7 @@
     <string name="app_pinning_main_switch_title" msgid="5465506660064032876">"Sebenzisa ukuphina i-app"</string>
     <string name="developer_options_main_switch_title" msgid="1720074589554152501">"Sebenzisa izinkinobho zikanjiniyela"</string>
     <string name="default_print_service_main_switch_title" msgid="4697133737128324036">"Sebenzisa isevisi yokuphrinta"</string>
-    <!-- no translation found for multiple_users_main_switch_title (6686858308083037810) -->
-    <skip />
+    <string name="multiple_users_main_switch_title" msgid="6686858308083037810">"Vumela abasebenzisi abaningi"</string>
     <string name="wireless_debugging_main_switch_title" msgid="8463499572781441719">"Sebenzisa ukususa ibhagi nge-Wi-Fi"</string>
     <string name="graphics_driver_main_switch_title" msgid="6125172901855813790">"Sebenzisa okuncanyelwayo kwesishayeli sokuyingcaca"</string>
     <string name="battery_saver_main_switch_title" msgid="5072135547489779352">"Sebenzisa isilondolozi sebhethri"</string>
@@ -5717,12 +5715,9 @@
     <string name="tare_modifiers" msgid="8919975635360280820">"Abashintshi"</string>
     <string name="tare_actions_ctp" msgid="5110104015354916401">"Izenzo (Izindleko Zokukhiqiza)"</string>
     <string name="tare_actions_base_price" msgid="3300967942666376589">"Izenzo (Intengo Eyisisekelo)"</string>
-    <!-- no translation found for tare_rewards_instantaneous (8358683519945340874) -->
-    <skip />
-    <!-- no translation found for tare_rewards_ongoing (8641416948811152109) -->
-    <skip />
-    <!-- no translation found for tare_rewards_max (5283055625642837010) -->
-    <skip />
+    <string name="tare_rewards_instantaneous" msgid="8358683519945340874">"Imiklomelo yomcimbi ngamunye"</string>
+    <string name="tare_rewards_ongoing" msgid="8641416948811152109">"Imiklomelo yengqikithi yesikhathi somcimbi"</string>
+    <string name="tare_rewards_max" msgid="5283055625642837010">"Imiklomelo Ephezulu Ngosuku"</string>
     <string name="tare_top_activity" msgid="7266560655483385757">"Umsebenzi Ophezulu"</string>
     <string name="tare_notification_seen" msgid="7829963536020087742">"Isaziso Siboniwe"</string>
     <string name="tare_notification_seen_15_min" msgid="832174185809497764">"Isaziso Sibonwe Phakathi Nemizuzu eyi-15"</string>
@@ -5753,20 +5748,16 @@
     <string name="dream_preview_button_title" msgid="6637456541851795952">"Hlola kuqala"</string>
     <string name="dream_picker_category" msgid="7726447836872744867">"Khetha isilondolozi sesikrini"</string>
     <string name="dream_complications_toggle_title" msgid="4273232303027449163">"Bonisa ulwazi olwengeziwe"</string>
-    <!-- no translation found for dream_complications_toggle_summary (4742579722349951711) -->
-    <skip />
+    <string name="dream_complications_toggle_summary" msgid="4742579722349951711">"Bonisa isikhathi, usuku, isimo sezulu, ikhwalithi yomoya, kanye nemininingwane Yokusakaza kusilondolozi sesikrini"</string>
     <string name="dream_more_settings_category" msgid="3119192146760773748">"Amasethingi amaningi"</string>
-    <!-- no translation found for dream_setup_title (2458303874255396142) -->
-    <skip />
-    <!-- no translation found for dream_setup_description (7508547154038580296) -->
-    <skip />
+    <string name="dream_setup_title" msgid="2458303874255396142">"Khetha isilondolozi sakho sesikrini"</string>
+    <string name="dream_setup_description" msgid="7508547154038580296">"Khetha ozokubona esikrinini sakho uma ithebulethi yakho idokhiwe. Idivayisi yakho ingase isebenzise amandla engeziwe uma kusetshenziswa isilondolozi sesikrini."</string>
     <string name="customize_button_title" msgid="1110284655990203359">"Enza ngendlela oyifisayo"</string>
     <string name="reboot_dialog_enable_freeform_support" msgid="6412591361284929149">"Ukuqalisa kabusha kuyadingeka ukunika amandla usekelo lwefomu yamahhala."</string>
     <string name="reboot_dialog_force_desktop_mode" msgid="2021839270403432948">"Ukuqalisa kabusha kuyadingeka ukuphoqelela imodi yedeskithophu kuzibonisi zesibili."</string>
     <string name="reboot_dialog_reboot_now" msgid="235616015988522355">"Qalisa manje"</string>
     <string name="reboot_dialog_reboot_later" msgid="4261717094186904568">"Qalisa ngokuhamba kwesikhathi"</string>
-    <!-- no translation found for bluetooth_details_spatial_audio_title (1368071116994002707) -->
-    <skip />
+    <string name="bluetooth_details_spatial_audio_title" msgid="1368071116994002707">"Umsindo Wokulalelwayo"</string>
     <string name="bluetooth_details_spatial_audio_summary" msgid="5026859623681482668">"Umsindo ovela kumidiya ehambisanayo uba ogxile kakhulu"</string>
     <string name="bluetooth_details_head_tracking_title" msgid="5416972521040337799">"Ukulandelela ikhanda"</string>
     <string name="bluetooth_details_head_tracking_summary" msgid="3942238746595985395">"Umsindo uyashintsha njengoba uhambisa ikhanda lakho ukuze lizwakale ngokwemvelo"</string>
